Let's actually begin the fixes.

--- a/sonichq/cartoon/AoSTH/guide.html
+++ b/sonichq/cartoon/AoSTH/guide.html
@@ -5,13 +5,13 @@
 </STYLE>
 </head>
 <body bgcolor="#000000" TEXT="#fffffff" LINK="#fffffff" VLINK="#fffffff" ALINK="#33cc66" 
-background="http://www.sonichq.org/cartoon/images/negaback3.jpg" bgproperties=fixed>
+background="/sonichq/cartoon/images/negaback3.jpg" bgproperties=fixed>
 
 <p><!table width="100%" bgcolor="#000000" border=1 bordercolorlight="blue" bordercolordark="blue" ALIGN=CENTER>
 <table width="100%" bgcolor="#000000" border=1 bordercolorlight="blue" bordercolordark="blue" ALIGN=CENTER>
 <tr>
 <td align=left width=30%>
-<img src="http://www.sonichq.org/cartoon/images/thumbup.jpg" 
+<img src="/sonichq/cartoon/images/thumbup.jpg" 
 alt="Adventures Of Sonic The Hedgehog">
 
 </td>
@@ -32,7 +32,7 @@ alt="Adventures Of Sonic The Hedgehog">
 <p>
 <center>
 <A HREF=sonicdic.wav>
-<IMG SRC=http://ssrg.emulationzone.org/fanmade/xtreme1.gif nosave border=0></a>
+<IMG SRC=https://web.archive.org/20011101000000/http://ssrg.emulationzone.org/fanmade/xtreme1.gif nosave border=0></a>
 <br>Adventures Of Sonic The Hedgehog - Theme Song<br> <u>WAV File</u>: Click Animated Gif, Then Download<p>
 </font></center>
 
@@ -54,9 +54,9 @@ Currently Playing: Toon Disney<br>
 <center><table border=0 width=100%>
 <td ALIGN=CENTER>
 <center>
-<A HREF="http://www.sonichq.org/cartoon/quicklist.html#adventures">The Episode Guide Quicklist</A><br>
-<A HREF="http://www.sonichq.org/cartoon/AoSTH/guide2.html#firstseason">The First Season</A><br>
-<A HREF="http://www.sonichq.org/cartoon/AoSTH/guide2.html#christmasblast">The 66th Episode - Sonic Christmas Blast</A><br>
+<A HREF="/sonichq/cartoon/quicklist.html#adventures">The Episode Guide Quicklist</A><br>
+<A HREF="/sonichq/cartoon/AoSTH/guide2.html#firstseason">The First Season</A><br>
+<A HREF="/sonichq/cartoon/AoSTH/guide2.html#christmasblast">The 66th Episode - Sonic Christmas Blast</A><br>
 
 </center>
 
@@ -77,7 +77,7 @@ Currently Playing: Toon Disney<br>
 </center>
 <p>
 <center>
-<A NAME=firstseason><img src="http://www.sonichq.org/cartoon/AoSTH/tails01.gif" 
+<A NAME=firstseason><img src="/sonichq/cartoon/AoSTH/tails01.gif" 
 alt="Episode Guide - Season 1">
 </font></center>
 </td>
@@ -115,7 +115,7 @@ alt="Episode Guide - Season 1">
 <td>&nbsp
 
 <!SECTIONS>
-<td valign=top background=http://www.sonichq.org/cartoon/images/negaback3.jpg>
+<td valign=top background=/sonichq/cartoon/images/negaback3.jpg>
 <center></font face=arial><b>
 
 <!><A NAME="1">
@@ -917,7 +917,7 @@ Eventually finding him Santa points out a Special Ring that Sonic is wearing (th
 <tr><td>
 <b><center>Return To The AoSTH Page?
 <br><A HREF=index.shtml>
-<IMG SRC=http://www.sonichq.org/music/images/sonright.gif nosave border=0></center></b></a>
+<IMG SRC=/sonichq/music/images/sonright.gif nosave border=0></center></b></a>
 </td></tr>
 </table>
 </table>
