--- a/sonichq/cartoon/AoSTH/index.html
+++ b/sonichq/cartoon/AoSTH/index.html
@@ -5,13 +5,13 @@
 </STYLE>
 </head>
 <body bgcolor="#000000" TEXT="#fffffff" LINK="#fffffff" VLINK="#fffffff" ALINK="#33cc66" 
-background="http://www.sonichq.org/cartoon/images/negaback3.jpg" bgproperties=fixed>
+background="/sonichq/cartoon/images/negaback3.jpg" bgproperties=fixed>
 
 <p><!table width="100%" bgcolor="#000000" border=1 bordercolorlight="blue" bordercolordark="blue" ALIGN=CENTER>
 <table width="100%" bgcolor="#000000" border=1 bordercolorlight="blue" bordercolordark="blue" ALIGN=CENTER>
 <tr>
 <td align=left width=30%>
-<img src="http://www.sonichq.org/cartoon/images/twister.jpg" 
+<img src="/sonichq/cartoon/images/twister.jpg" 
 alt="Twist And Shout!">
 
 </td>
@@ -42,7 +42,7 @@ alt="Twist And Shout!">
 <p>
 <center>
 <A HREF=sonicdic.wav>
-<IMG SRC=http://ssrg.emulationzone.org/fanmade/xtreme1.gif nosave border=0></a>
+<IMG SRC=https://web.archive.org/20011101000000/http://ssrg.emulationzone.org/fanmade/xtreme1.gif nosave border=0></a>
 <br>Adventures Of Sonic The Hedgehog - Theme Song<br> <u>WAV File</u>: Click Animated Gif, Then Download<p>
 </font></center>
 <br>
@@ -73,7 +73,7 @@ Currently Playing: Toon Disney<br>
 <TR>
 <TD>
 <center>
-<img src="http://www.sonichq.org/cartoon/images/advbox1.jpg" 
+<img src="/sonichq/cartoon/images/advbox1.jpg" 
 alt="Video #1 - Sloooooowwww Going">
 </TD>
 <TD>
@@ -81,7 +81,7 @@ alt="Video #1 - Sloooooowwww Going">
 </TD>
 <TD>
 <center>
-<img src="http://www.sonichq.org/cartoon/images/advbox2.jpg" 
+<img src="/sonichq/cartoon/images/advbox2.jpg" 
 alt="Video #2 - The Super Special Sonic Search And Smash Squad">
 </TD>
 </TR></TABLE>
@@ -108,7 +108,7 @@ this Egg-O-Matic weilding Doctor Robotnik is the same Robotnik used in the U.K.'
 
 <td bgcolor=black width=100%>
 <center>
-<IMG SRC=http://www.sonichq.org/icons/grounder.jpg align=center>
+<IMG SRC=/sonichq/icons/grounder.jpg align=center>
 </center></td>
 
 <td width=19></td></tr>
@@ -121,14 +121,14 @@ this Egg-O-Matic weilding Doctor Robotnik is the same Robotnik used in the U.K.'
 <td>&nbsp
 
 <!SECTIONS>
-<td valign=top background=http://www.sonichq.org/cartoon/images/negaback3.jpg>
+<td valign=top background=/sonichq/cartoon/images/negaback3.jpg>
 <center></font face=arial><b>
 
 <!guide>
 <table width=100% border=0 cellspacing=0><td align=center bgcolor=blue>
-<img src="http://members.tripod.com/~warpsonic/ring.gif"><a href=guide.html>
+<img src="/sonichq/tripod/warpsonic/ring.gif"><a href=guide.html>
 <b><font face=Arial color=ffffff>AoSTH Episode Guide </a></font></b>
-<img src="http://members.tripod.com/~warpsonic/ring.gif">
+<img src="/sonichq/tripod/warpsonic/ring.gif">
 </td></table>
 
 <br>Located here is the guide with summaries for ALL 65 episodes including the 66th Episode Christmas Special shown only on the USA Network! The episode guide contains everything that you would need from a downloadable WAV file, to voice credits, to directing credits, to basic series information! To avoid the summaries click on the link to the "Quicklist" viewable from here also.<br><br>
@@ -136,10 +136,10 @@ this Egg-O-Matic weilding Doctor Robotnik is the same Robotnik used in the U.K.'
 <!segasonic>
 <table width=100% border=0 cellspacing=0><td align=center bgcolor=blue>
 
-<img src="http://members.tripod.com/~warpsonic/ring.gif">
-<a href=http://www.sonichq.org/cartoon/SatAM/downloads.html#aosth>
+<img src="/sonichq/tripod/warpsonic/ring.gif">
+<a href=/sonichq/cartoon/SatAM/downloads.html#aosth>
 <b><font face=Arial color=ffffff>The AoSTH Downloads - SegaSonic.net</a></font></b>
-<img src="http://members.tripod.com/~warpsonic/ring.gif">
+<img src="/sonichq/tripod/warpsonic/ring.gif">
 </td></table>
 
 <br>
@@ -160,7 +160,7 @@ Thanks to AJ Freda, owner of www.segasonic.net, you can download episodes of AoS
 <tr><td align=left valign=bottom>
 </table>
 
-<td bgcolor=000000 width=100% valign=middle><center><br><a href=http://www.sonichq.org/cartoon>Back to Sonic HQ Cartoons Page</a></center><br>
+<td bgcolor=000000 width=100% valign=middle><center><br><a href=/sonichq/cartoon>Back to Sonic HQ Cartoons Page</a></center><br>
 
 <td><table border=0 cellspacing=0 cellpadding=0 width=100% height=100%>
 <tr><td bgcolor=000000 height=100%>
