--- a/sonichq/cartoon/SU/guide.html
+++ b/sonichq/cartoon/SU/guide.html
@@ -15,7 +15,7 @@ function displayWindow(url, width, height) {
 </STYLE>
 </head>
 <body bgcolor="#000000" TEXT="#fffffff" LINK="#fffffff" VLINK="#fffffff" ALINK="#33cc66" 
-background="http://www.sonichq.org/cartoon/images/negaback3.jpg" bgproperties=fixed onUnload="winClose()">
+background="/sonichq/cartoon/images/negaback3.jpg" bgproperties=fixed onUnload="winClose()">
 
 <p><!table width="100%" bgcolor="#000000" border=1 bordercolorlight="magenta" bordercolordark="magenta" ALIGN=CENTER>
 <table width="100%" bgcolor="#000000" border=1 bordercolorlight="magenta" bordercolordark="magenta" ALIGN=CENTER>
@@ -42,7 +42,7 @@ alt="Sonic The Hedgehog: Triple Trouble">
 <p>
 <center>
 <A HREF=sutitle.wav>
-<IMG SRC=http://ssrg.emulationzone.org/fanmade/xtreme1.gif nosave border=0></a>
+<IMG SRC=https://web.archive.org/20011101000000/http://ssrg.emulationzone.org/fanmade/xtreme1.gif nosave border=0></a>
 <br>Sonic Underground - Theme Song<br> <u>WAV File</u>: Click Animated Gif, Then Download<p>
 </font></center>
 
@@ -70,8 +70,8 @@ Currently Playing: WB or UPN (Depends Upon City: Check Local Listings)<br>
 
 <A HREF="javascript:displayWindow('cast.html',450,300)">Cast Members</A><br>
 <A HREF="javascript:displayWindow('theme.html',365,300)">Theme Song Lyrics</A><br>
-<A HREF="http://www.sonichq.org/cartoon/quicklist.html#underground">The Episode Guide Quicklist</A><br>
-<A HREF="http://www.sonichq.org/cartoon/SatAM/guide.html#firstseason">The First Season</A><br>
+<A HREF="/sonichq/cartoon/quicklist.html#underground">The Episode Guide Quicklist</A><br>
+<A HREF="/sonichq/cartoon/SatAM/guide.html#firstseason">The First Season</A><br>
 </center>
 </td>
 
@@ -133,7 +133,7 @@ alt="Episode Guide - Season 1">
 <td>&nbsp
 
 <!SECTIONS>
-<td valign=top background=http://www.sonichq.org/cartoon/images/negaback3.jpg>
+<td valign=top background=/sonichq/cartoon/images/negaback3.jpg>
 <center></font face=arial><b>
 
 <!><A NAME="1">
@@ -385,7 +385,7 @@ an uncanny resemblance to Sleet) and restore peace -- all without their powers..
 <tr><td>
 <b><center>Return To The SU Page?
 <br><A HREF=index.shtml>
-<IMG SRC=http://www.sonichq.org/music/images/sonright.gif nosave border=0></center></b></a>
+<IMG SRC=/sonichq/music/images/sonright.gif nosave border=0></center></b></a>
 </td></tr>
 </table>
 </table>
