--- a/sonichq/cartoon/SatAM/guide.html
+++ b/sonichq/cartoon/SatAM/guide.html
@@ -15,7 +15,7 @@ function displayWindow(url, width, height) {
 </STYLE>
 </head>
 <body bgcolor="#000000" TEXT="#fffffff" LINK="#fffffff" VLINK="#fffffff" ALINK="#33cc66" 
-background="http://www.sonichq.org/cartoon/images/negaback3.jpg" bgproperties=fixed onUnload="winClose()">
+background="/sonichq/cartoon/images/negaback3.jpg" bgproperties=fixed onUnload="winClose()">
 
 <p><!table width="100%" bgcolor="#000000" border=1 bordercolorlight="red" bordercolordark="#ff0000" ALIGN=CENTER>
 <table width="100%" bgcolor="#000000" border=1 bordercolorlight="red" bordercolordark="#ff0000" ALIGN=CENTER>
@@ -42,7 +42,7 @@ alt="Lip Sucking - Sonic Style !!!">
 <p>
 <center>
 <A HREF=saturday2.wav>
-<IMG SRC=http://ssrg.emulationzone.org/fanmade/xtreme1.gif nosave border=0></a>
+<IMG SRC=https://web.archive.org/20011101000000/http://ssrg.emulationzone.org/fanmade/xtreme1.gif nosave border=0></a>
 <br>Sonic The Hedgehog - Theme Song<br> <u>WAV File</u>: Click Animated Gif, Then Download<p>
 </font></center>
 
@@ -67,9 +67,9 @@ Currently Playing: Not Shown At The Moment<br>
 <p>
 <center>
 
-<A HREF="javascript:displayWindow('http://us.imdb.com/Title?0106140',450,300)">Cast Members</A><br>
+<A HREF="javascript:displayWindow('https://web.archive.org/20011101000000/http://us.imdb.com/Title?0106140',450,300)">Cast Members</A><br>
 <A HREF="javascript:displayWindow('theme.html',365,300)">Theme Song Lyrics</A><br>
-<A HREF="http://www.sonichq.org/cartoon/quicklist.html#sonicsatam">The Episode Guide Quicklist</A><br>
+<A HREF="/sonichq/cartoon/quicklist.html#sonicsatam">The Episode Guide Quicklist</A><br>
 </center>
 </td>
 
@@ -78,8 +78,8 @@ Currently Playing: Not Shown At The Moment<br>
 </center>
 <p>
 <center>
-<A HREF="http://www.sonichq.org/cartoon/SatAM/guide.html#firstseason">The First Season</A><br>
-<A HREF="http://www.sonichq.org/cartoon/SatAM/guide.html#secondseason">The Second Season</A><br>
+<A HREF="/sonichq/cartoon/SatAM/guide.html#firstseason">The First Season</A><br>
+<A HREF="/sonichq/cartoon/SatAM/guide.html#secondseason">The Second Season</A><br>
 <A HREF="javascript:displayWindow('lost3.html',600,300)">The Lost Third Season</A><br>
 
 </center>
@@ -139,7 +139,7 @@ alt="Episode Guide - Season 1">
 <td>&nbsp
 
 <!SECTIONS>
-<td valign=top background=http://www.sonichq.org/cartoon/images/negaback3.jpg>
+<td valign=top background=/sonichq/cartoon/images/negaback3.jpg>
 <center></font face=arial><b>
 
 <!><A NAME="1">
@@ -376,7 +376,7 @@ alt="Episode Guide - Season 2">
 <td>&nbsp
 
 <!SECTIONS>
-<td valign=top background=http://www.sonichq.org/cartoon/images/negaback3.jpg>
+<td valign=top background=/sonichq/cartoon/images/negaback3.jpg>
 <center></font face=arial><b>
 
 <!><A NAME="14">
@@ -589,7 +589,7 @@ Click on the link below or above in the main menu to our page on the missing "So
 <tr><td>
 <b><center>Sonic The Hedgehog - Season Three
 <br><A HREF="javascript:displayWindow('lost3.html',600,300)">
-<IMG SRC=http://www.sonichq.org/music/images/sonright.gif nosave border=0></center></b></a>
+<IMG SRC=/sonichq/music/images/sonright.gif nosave border=0></center></b></a>
 </td></tr>
 </table>
 </table>
@@ -608,7 +608,7 @@ Click on the link below or above in the main menu to our page on the missing "So
 <tr><td>
 <b><center>Return To The SatAM Page?
 <br><A HREF=index.shtml>
-<IMG SRC=http://www.sonichq.org/music/images/sonright.gif nosave border=0></center></b></a>
+<IMG SRC=/sonichq/music/images/sonright.gif nosave border=0></center></b></a>
 </td></tr>
 </table>
 </table>
