--- a/sonichq/cartoon/SatAM/index.html
+++ b/sonichq/cartoon/SatAM/index.html
@@ -5,13 +5,13 @@
 </STYLE>
 </head>
 <body bgcolor="#000000" TEXT="#fffffff" LINK="#fffffff" VLINK="#fffffff" ALINK="#33cc66" 
-background="http://www.sonichq.org/cartoon/images/negaback3.jpg" bgproperties=fixed>
+background="/sonichq/cartoon/images/negaback3.jpg" bgproperties=fixed>
 
 <p><!table width="100%" bgcolor="#000000" border=1 bordercolorlight="red" bordercolordark="#ff0000" ALIGN=CENTER>
 <table width="100%" bgcolor="#000000" border=1 bordercolorlight="red" bordercolordark="#ff0000" ALIGN=CENTER>
 <tr>
 <td align=left width=30%>
-<img src="http://www.sonichq.org/cartoon/images/ring.jpg" 
+<img src="/sonichq/cartoon/images/ring.jpg" 
 alt="Do The Ring Thing!">
 
 </td>
@@ -32,7 +32,7 @@ alt="Do The Ring Thing!">
 </center>
 <p>
 <center>
-<embed src="http://www.geocities.com/EnchantedForest/Tower/4309/rfastestthingek.mid" autostart="true" loop="true" controls=smallconsole width=50 height=30><br>Saturday Morning Remix<p>
+<embed src="/sonichq/geocities/EnchantedForest/Tower/4309/rfastestthingek.mid" autostart="true" loop="true" controls=smallconsole width=50 height=30><br>Saturday Morning Remix<p>
 </font></center>
 </td>
                          
@@ -41,7 +41,7 @@ alt="Do The Ring Thing!">
 </center>
 <p>
 <center>
-<embed src="http://www.geocities.com/EnchantedForest/Dell/7835/SCSatAM.mid" autostart="true" loop="true" controls=smallconsole width=50 height=30><br>Saturday Morning Normal<p>
+<embed src="/sonichq/geocities/EnchantedForest/Dell/7835/SCSatAM.mid" autostart="true" loop="true" controls=smallconsole width=50 height=30><br>Saturday Morning Normal<p>
 </td>
 </table></center>
 </font></center>
@@ -69,7 +69,7 @@ details can be listed here.</center>
 <tr><td>
 
 <br>
-<center><img src="http://www.sonichq.org/cartoon/images/Knothole.jpg" 
+<center><img src="/sonichq/cartoon/images/Knothole.jpg" 
 alt="Sonic Headquarters - Knothole Village!"></center>
 
 <br>
@@ -86,7 +86,7 @@ Thus, it's hard to find copies if you've never seen it, so let us get you famili
 <tr><td width=19></td>
 
 <td bgcolor=black width=100%>
-<center><IMG SRC=http://www.sonichq.org/cartoon/images/fftest.jpg align=center></center></td>
+<center><IMG SRC=/sonichq/cartoon/images/fftest.jpg align=center></center></td>
 
 <td width=19></td></tr>
 </table>
@@ -98,14 +98,14 @@ Thus, it's hard to find copies if you've never seen it, so let us get you famili
 <td>&nbsp
 
 <!SECTIONS>
-<td valign=top background=http://www.sonichq.org/cartoon/images/negaback3.jpg>
+<td valign=top background=/sonichq/cartoon/images/negaback3.jpg>
 <center></font face=arial><b>
 
 <!guide>
 <table width=100% border=0 cellspacing=0><td align=center bgcolor=red>
-<img src="http://members.tripod.com/~warpsonic/ring.gif"><a href=guide.html>
+<img src="/sonichq/tripod/warpsonic/ring.gif"><a href=guide.html>
 <b><font face=Arial color=ffffff>Episode Guide - Seasons One And Two</a></font></b>
-<img src="http://members.tripod.com/~warpsonic/ring.gif">
+<img src="/sonichq/tripod/warpsonic/ring.gif">
 </td></table>
 
 <br>Located here is the guide with summaries for ALL 26 episodes of the Sonic Saturday morning toon! The episode guide rates each episode on a "star system" and contains everything that you would need from a downloadable WAV file and theme song lyrics, to voice credits, to directing credits, to basic series information! To avoid the summaries click on the link to the "Quicklist" viewable from here also.
@@ -115,10 +115,10 @@ Thus, it's hard to find copies if you've never seen it, so let us get you famili
 <!season3>
 <table width=100% border=0 cellspacing=0><td align=center bgcolor=red>
 
-<img src="http://members.tripod.com/~warpsonic/ring.gif">
+<img src="/sonichq/tripod/warpsonic/ring.gif">
 <a href=lost3.html>
 <b><font face=Arial color=ffffff>The Long Lost Season Three...</a></font></b>
-<img src="http://members.tripod.com/~warpsonic/ring.gif">
+<img src="/sonichq/tripod/warpsonic/ring.gif">
 </td></table>
 
 <br>
@@ -128,10 +128,10 @@ Some time ago - Ben Hurst, writer of MANY of the SatAM second season epidodes ca
 
 <!realvideo>
 <table width=100% border=0 cellspacing=0><td align=center bgcolor=red>
-<img src="http://members.tripod.com/~warpsonic/ring.gif">
+<img src="/sonichq/tripod/warpsonic/ring.gif">
 <a href=downloads.html>
 <b><font face=Arial color=ffffff>The Saturday Morning Downloads</a></font></b>
-<img src="http://members.tripod.com/~warpsonic/ring.gif">
+<img src="/sonichq/tripod/warpsonic/ring.gif">
 </td></table>
 
 <br>This is it! Possibly the most requested for section on Sonic HQ and the Sonic net in general - ALL 26 EPISODES of the Saturday Morning cartoon in thier entirety as Real Audio files available for download at the click of a button! No waiting, no searching them out, no plodding endlessly in search of them. Here they are! Download and click! NOW!<br><br>
@@ -139,12 +139,12 @@ Some time ago - Ben Hurst, writer of MANY of the SatAM second season epidodes ca
 
 <!petition>
 <table width=100% border=0 cellspacing=0><td align=center bgcolor=red>
-<img src="http://members.tripod.com/~warpsonic/ring.gif">
+<img src="/sonichq/tripod/warpsonic/ring.gif">
 <b><font face=Arial color=ffffff>The Save Our Saturday AM Petition</font></b>
-<img src="http://members.tripod.com/~warpsonic/ring.gif">
+<img src="/sonichq/tripod/warpsonic/ring.gif">
 </td></table>
 
-<center><a href="http://www.teamartail.com/satam/" target="_BLANK"><img SRC="http://www.teamartail.com/satam/banner.gif" ALT="Sonic SatAM Petition @ teamartail.com" BORDER=0 height=60 width=468></a></center>
+<center><a href="https://web.archive.org/20011101000000/http://www.teamartail.com/satam/" target="_BLANK"><img SRC="https://web.archive.org/20011101000000/http://www.teamartail.com/satam/banner.gif" ALT="Sonic SatAM Petition @ teamartail.com" BORDER=0 height=60 width=468></a></center>
 
 <BR>For many, the Saturday AM series is the best of the Sonic cartoons. Unfortunately, it is not on the air anywhere. Well, NOW we can change that. Our good friend Artie has started a petition to bring the cartoon back to airwaves. Click on the banner above to head for his website and sign your name up right away. LET'S BRING SATAM BACK!!!<br><br>
 
@@ -163,7 +163,7 @@ Some time ago - Ben Hurst, writer of MANY of the SatAM second season epidodes ca
 <tr><td align=left valign=bottom></tr>
 </table>
 
-<td bgcolor=000000 width=100% valign=middle><center><br><a href=http://www.sonichq.org/cartoon>Back to Sonic HQ Cartoons Page</a></center><br>
+<td bgcolor=000000 width=100% valign=middle><center><br><a href=/sonichq/cartoon>Back to Sonic HQ Cartoons Page</a></center><br>
 
 <td><table border=0 cellspacing=0 cellpadding=0 width=100% height=100%>
 <tr><td bgcolor=000000 height=100%></td>
