--- a/sonichq/comics/intro.html
+++ b/sonichq/comics/intro.html
@@ -9,7 +9,7 @@
 <!-- a:hover {  text-decoration: underline} -->
 <!-- A{text-decoration:none} -->
 </style>
-<base href=http://www.sonichq.org/>
+<base href=/sonichq/>
 </head>
 
 <body text="#000000" bgcolor="#FFFFFF" link="#ffffff" vlink="#ffffff" background="../images/backgrounds/soniccl.gif">
