--- a/sonichq/comics/previews/index.html
+++ b/sonichq/comics/previews/index.html
@@ -237,7 +237,7 @@
 
                     <td width="134"> 
 
-                      <div align="center"><a href="http://www.sonichq.org/comics/images/covers/sonic/large/sonic102.jpg" target="_blank"><img src="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic102.jpg" width="134" height="208" border="0"></a></div>
+                      <div align="center"><a href="/sonichq/comics/images/covers/sonic/large/sonic102.jpg" target="_blank"><img src="/sonichq/comics/images/covers/sonic/thumbnails/sonic102.jpg" width="134" height="208" border="0"></a></div>
 
                     </td>
 
@@ -289,7 +289,7 @@
 
                     <td width="134"> 
 
-                      <div align="center"><a href="http://www.sonichq.org/comics/images/covers/sonic/large/sonic103.jpg" target="_blank"><img src="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic103.jpg" width="134" height="208" border="0"></a></div>
+                      <div align="center"><a href="/sonichq/comics/images/covers/sonic/large/sonic103.jpg" target="_blank"><img src="/sonichq/comics/images/covers/sonic/thumbnails/sonic103.jpg" width="134" height="208" border="0"></a></div>
 
                     </td>
 
@@ -340,7 +340,7 @@
 
                     <td width="134"> 
 
-                      <div align="center"><a href="http://www.sonichq.org/comics/images/covers/sonic/large/sonic104.jpg" target="_blank"><img src="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic104.jpg" width="134" height="208" border="0"></a></div>
+                      <div align="center"><a href="/sonichq/comics/images/covers/sonic/large/sonic104.jpg" target="_blank"><img src="/sonichq/comics/images/covers/sonic/thumbnails/sonic104.jpg" width="134" height="208" border="0"></a></div>
 
                     </td>
 
