--- a/sonichq/comics/reviews/sonic/s57.htm
+++ b/sonichq/comics/reviews/sonic/s57.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic #57 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic57.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic57.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>The moment we've been dreading...The Freedom Fighter Breakup. Ladies And Gentlemen - The Naugus Quest has begun...</p>
 <p>Sonic The Hedgehog #57<br>
@@ -1226,7 +1226,7 @@ at).  They don't even BOTHER to attempt an embrace, even at arm'slength!
 <hr>
 
 
-<p><b>Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"> ring
+<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"> ring
 </p>
 
 <p>This SHOULD have been a defining moment for the characters,
@@ -1262,12 +1262,12 @@ Story of 1998.
 
 <p><u>Reader Reviews</u></p>
        
-<p><u>Zifei:</u> OK, from now on, I'm not going to write anymore reviews. I'm going to let the people at Mobius Forum rate the comic, that means you could review future issues, too. Of course I'm going to rate it too, here it goes: Issue 57 is a BORING issue. They need to stop letting Karl Bollers write, he can't handle emotions. The only good thing about this issue is the Spaziante cover and Art Mawhenney's penciling. I give it <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">.<br>
-<p><u>Questa:</u> I really think this deserved <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">. This is because it was just a review, which in one point of view (the new reader) is a good thing, Knowing what's happened in the past, and possible stories they may wish to purchase. But, in another point of view ( a reader who has been along for the first comic, like me) it was rather pointless and, well, boring. They should've just made a special that reviews the older issues. So, basically the 'older readers' are just paying for the ending, in which Sonic+Tails leave the Freedom fighters. (which I may add, was terribly portrayed) So why am I jabbering about how bad it was, and still giving it a 2? Well, 1 for Spaz' art, and another for Mawhinny's art. (Phew) And that's my two cents.<br>
-<p><u>Christy:</u>I give it <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">. Because It's boring and because it's just flashbacks, but not boring because most of those flashbacks I never heard of because i don't have the Comics.<br>
-<p><u>Auburn:</u>I rate it <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> too, because I didn't like the breakup.<br>
-<p><u>WB:</u>While the retrospective part was good for people like me who don't have all of the back issues, it was repetetive for those who have them already, and the breakup was singlehandely the most throwaway plot device next to the entire "Let's Get Small" storyline, which was conveniently averted. Overall <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">.<br>
-<p><u>Maric:</u>I give <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> because it was mostly flashbacks and it was kinda boring.<br>
+<p><u>Zifei:</u> OK, from now on, I'm not going to write anymore reviews. I'm going to let the people at Mobius Forum rate the comic, that means you could review future issues, too. Of course I'm going to rate it too, here it goes: Issue 57 is a BORING issue. They need to stop letting Karl Bollers write, he can't handle emotions. The only good thing about this issue is the Spaziante cover and Art Mawhenney's penciling. I give it <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">.<br>
+<p><u>Questa:</u> I really think this deserved <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">. This is because it was just a review, which in one point of view (the new reader) is a good thing, Knowing what's happened in the past, and possible stories they may wish to purchase. But, in another point of view ( a reader who has been along for the first comic, like me) it was rather pointless and, well, boring. They should've just made a special that reviews the older issues. So, basically the 'older readers' are just paying for the ending, in which Sonic+Tails leave the Freedom fighters. (which I may add, was terribly portrayed) So why am I jabbering about how bad it was, and still giving it a 2? Well, 1 for Spaz' art, and another for Mawhinny's art. (Phew) And that's my two cents.<br>
+<p><u>Christy:</u>I give it <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">. Because It's boring and because it's just flashbacks, but not boring because most of those flashbacks I never heard of because i don't have the Comics.<br>
+<p><u>Auburn:</u>I rate it <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> too, because I didn't like the breakup.<br>
+<p><u>WB:</u>While the retrospective part was good for people like me who don't have all of the back issues, it was repetetive for those who have them already, and the breakup was singlehandely the most throwaway plot device next to the entire "Let's Get Small" storyline, which was conveniently averted. Overall <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">.<br>
+<p><u>Maric:</u>I give <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> because it was mostly flashbacks and it was kinda boring.<br>
 
 
 
