--- a/sonichq/comics/reviews/sonic/s58.htm
+++ b/sonichq/comics/reviews/sonic/s58.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic #58 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic58.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic58.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>After Last Issues <u>Recap DREK</u> Sonic And Tails Get Back On Track! And With Knuckles, and a necomer in tow, things aren't as bad as they seemed before...</p>
 <p>Sonic The Hedgehog #58<br>
@@ -71,7 +71,7 @@ Dan Drazen And Reader Reviews(Reviewer)<br>
 <hr>
 
 
-<p><b>Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> rings
+<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> rings
 </p>
 
 <p>When Ken first announced this Robin Hood bit, I was afraid that the story would go in one of two disastrous directions: either we'd get treated to a self-serious Sonic Prince of Thieves, or else Ken would camp it up and we'd get "Hedgehogs in Tights."  Mercifully, Ken went back to basics and modeled the story (however roughly) on the definitive 1938 "Adventures of Robin Hood" starring Errol Flynn and Basil Rathbone.  THOSE were the good old days, back before "action film" wasn't synonymous with "body count."  The pacing and dialogue are first rate, and even though Rob and Mari- An's Meet Cute was unavoidable, working Antoine's dad into the saga helps fill the considerable void left by Robotnik's continued 
@@ -84,25 +84,25 @@ absence.  I don't know how Ken and Clayton Emery split the writing chores, but t
 <p>Believe it or not, all this folderol had a higher purpose: "I had bonded with the Source of All."  Max then goes on at length about how "we all began life as a speck of cosmic matter that flows from the Source of All."  Sounds like your drugs are beginning to kick in, Max.  He then goes on to state that only the select few who get in touch with the Source become leaders and get to order everybody else around.  This load of cosmic horse pucky reminded me of the words of Dennis, the anarchist peasant in "Monty Python and the Holy Grail": "Supreme political power derives from a mandate from the masses, not from some farcical aquatic ceremony."  Anyway, King Max revealed that "the Source devined [sic] that the odds were overwhelming" and that Robotnik would take over.  Gee, maybe if the Source had DIVINED such knowledge instead, things would have come out differently.  Anyway, the Sword was left with Rosie, who scooted the kids to Knothole before Max got Voided.  I don't know HOW the Sword got away from Rosie and eventually into the hands/hooves of Damocles the Elder (Knuckles' Quest #4, Sonic #46), and frankly I don't care.  But in any event that's why the Crown reappeared once the King took possession of the Sword, which was the other half of the two-piece set.  Now, with his connectors or familiars or whatever you want to call them returned and his connection to the Great Link...er...the Source of All...re- established, Max is going to make some changes around here no matter what his daughter or the hardcore Sonic fans have to say about it.  
 <hr>
 
-<p><b>Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 </p>
 
 <p>I have NO idea where Ken is going with this Source of All business, but it's pretty clear where he was coming from.  Show of hands: did anyone else think Ken had been watching too much "Deep Space Nine" when he wrote this?  I made no secret during "Knuckles' Quest" that I thought there was no place in the comic for dimestore mysticism and that a compelling story could be written without all the magical trappings.  For the record, I also started to lose interest in DS9 about the time they really began working the Great Link angle back on Odo's homeworld.  So maybe it's just me. 
      
 <p>I had said on another occasion that this was the first Sonic issue under the new post-cartoon reality.  Actually, I was wrong; the cover story is, after all, part of the arc that began with Knuckles #10 while the back story simply doesn't showcase any of the characters the fans have come to really CARE about (tough luck, duck).  So it looks like the NEXT issue will be the true determination of where the comic will be going. 
 
-<p><b>Overall Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<p><b>Overall Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 </p>
 
 <hr>
 
 <p><u>Reader Reviews</u></p>
 
-<p><b>Zifei:</b>I read this issue several times, and I have to say: Wow! This is the best issue since "Rage Against The Machine" way back in issue #39. The cover was great, the inside art was perfect, and the coloring was way past cool credit to Ken Penders (Not Bollers). In the main story, we get to meet Rob, the cousin of Amy Rose, and Antoine's father. The backup story was also great, we learn how the Acorn kings kept their power and the connection to THE force. After reading this issue, I thought: hey, maybe the Freedom Fighter breakup wasn't so bad after all. In the end I give this issue <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><br>
-<p><b>Maric:</b>I give it <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> because the climax of the story was when Sonic & Tails find out that the sub boss is Antoine's father, General De'Coolette. Which lead to 2 1/2 questions. The first is a heartbreaking one, who is going to tell Antoine about it and how he/she is going to do it? Second, Will Antoine have to fight his own father in order to save Mobius? This sounds like The Empire Strikes Back when Luke found out that Dark Vader is his father.<br>
-<p><b>WB:</b>I Give it <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> Because: 1: I love the Robin Hood Parallel. Rob O'The Hedge (Robber Of The Hedge)is a great cool new character. AND HE KNOWS AMY!!!! 2. More Plot twists were opened, which is HIGHLY needed for the Sonic Comic. 3. Mawhinney Shows That When He has time to his art, he improves MORE And MORE.(See Back To Basics #57) and Compare. 4. The Antoine thing. Ken turned what was a totally deplorable character and now have us caring for him. Hopefully he won't do the same with St. John. (YUCK) 5. Bridging The Gap of "Return Of The King" and now when Bollers, like an idiot, had the crown appear out of clear bue sky. 6. The Beginning Of The Tales Of The Freedom Fighters Storyline which will bring us into #69, THE RETURN OF ROBUTTNIK...hopefully...<br>
-<p><b>Questa:</b>I also give it <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">, because, the plot was excellent, The villain was excellant , the art was excellant.....The whole story was excellant. I also liked the new character, Rob O'The Hedge.<br>
-<p><b>Auburn:</b>I give it <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> too.<br>
+<p><b>Zifei:</b>I read this issue several times, and I have to say: Wow! This is the best issue since "Rage Against The Machine" way back in issue #39. The cover was great, the inside art was perfect, and the coloring was way past cool credit to Ken Penders (Not Bollers). In the main story, we get to meet Rob, the cousin of Amy Rose, and Antoine's father. The backup story was also great, we learn how the Acorn kings kept their power and the connection to THE force. After reading this issue, I thought: hey, maybe the Freedom Fighter breakup wasn't so bad after all. In the end I give this issue <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><br>
+<p><b>Maric:</b>I give it <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> because the climax of the story was when Sonic & Tails find out that the sub boss is Antoine's father, General De'Coolette. Which lead to 2 1/2 questions. The first is a heartbreaking one, who is going to tell Antoine about it and how he/she is going to do it? Second, Will Antoine have to fight his own father in order to save Mobius? This sounds like The Empire Strikes Back when Luke found out that Dark Vader is his father.<br>
+<p><b>WB:</b>I Give it <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> Because: 1: I love the Robin Hood Parallel. Rob O'The Hedge (Robber Of The Hedge)is a great cool new character. AND HE KNOWS AMY!!!! 2. More Plot twists were opened, which is HIGHLY needed for the Sonic Comic. 3. Mawhinney Shows That When He has time to his art, he improves MORE And MORE.(See Back To Basics #57) and Compare. 4. The Antoine thing. Ken turned what was a totally deplorable character and now have us caring for him. Hopefully he won't do the same with St. John. (YUCK) 5. Bridging The Gap of "Return Of The King" and now when Bollers, like an idiot, had the crown appear out of clear bue sky. 6. The Beginning Of The Tales Of The Freedom Fighters Storyline which will bring us into #69, THE RETURN OF ROBUTTNIK...hopefully...<br>
+<p><b>Questa:</b>I also give it <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">, because, the plot was excellent, The villain was excellant , the art was excellant.....The whole story was excellant. I also liked the new character, Rob O'The Hedge.<br>
+<p><b>Auburn:</b>I give it <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> too.<br>
 
 
 </td>
