--- a/sonichq/comics/reviews/sonic/s60.htm
+++ b/sonichq/comics/reviews/sonic/s60.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic #60 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic60.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic60.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>The Ox King Of Fire Mountain And The Legend Of The Monkey King In 16 Pages?...All We Need Now Are Some Dragon Balls, A Green Skinned Piccolo, And A Bald Guy Named Krillin. Make A Wish!</p>
 <p>Sonic The Hedgehog #60<br>
@@ -68,7 +68,7 @@ As Sonic and Khan battle it out, the Iron Queen conveniently stops by to watch t
      
 <p>By using the clever tactic of walking in the front door, they enter the Iron's palace only to run into the Iron King (rather impressively drawn, I might add).  While Sonic and Khan keep the King busy, Tails retrieves the fan which Sonic then uses to blow the King away, literally.  Well, THAT fight lasted about as long as Mammoth Mogul's first attempt at conquest in "Don't Let The Island Hit You On The Way Down" (Chaotix special).  On their return to Mount Storm-Top, Queenie is waiting for them but aside from some lame pyrotechnics she puts up even less resistance than her hubby.  Sonic puts out the burning mountain in a single stroke (in the original story it took 49 consecutive waves of the fan--I'm sure it had some numerological significance), and the Queen stages another lame retreat.  Li Yuen cites some prophecy about a "great monkey king," which leaves Sonic predictably cheesed off at Paul Castiglia -- well, he IS talking about getting a new publicist! 
 
-<p><b>Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> rings
+<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> rings
 </p>
 
 <p>OK, it doesn't follow the legend of "The Monkey Who Went To The West" point by point, but it's still a valiant effort at working in material from a narrative tradition that may not be well known in this hemisphere.  The art is passable, though the inking by Ken Penders in "Monkey Madness" (#55) felt more definitive than Jim Amash's work here.  I felt sorry for Tails's off-model rendering: his eyes were drawn WAY too big!  And while Queenie got a lot of good dialogue, her hubby wound up as yet one more weak villain who could talk the talk but who couldn't walk the walk. 
@@ -88,7 +88,7 @@ As Sonic and Khan battle it out, the Iron Queen conveniently stops by to watch t
 <p>And then Ken Penders drops one of those bombshells that really cheese off the fans and, let's face it, keep us interested: according to Max, the Source has told him that Sally's intended hubby is...Antoine!  Now it's Sally's turn to blow a gasket.  Max counters by saying that Sally will lose her place in the line of succession if she doesn't go along with the arrangement.  The two part, not exactly on the best of terms. 
 <hr>
 
-<p><b>Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 </p>
 
 <p>Needless to say, the Sonic list was jerking around like a live wire when word of this development got out.  One gets the sense that whether it's residual damage from crystals on the brain or the after-effects of spending ten years in the Zone, Max has definitely 
@@ -101,7 +101,7 @@ quality of the cover stories to the level of the writing of the back stories (an
  
 <p>I found myself wondering whether the comic's present editorial structure [Sonic-Tails story up front, and the really interesting stories in the back] wasn't part of some conscious management design.  Do they, too, sense that the cover stories aren't as engaging as the back stories?  Maybe the letters received by Archie Comics from the non-cyber fans tell a different story but there is one factor to consider: preadolescent boys eventually become adolescents.  Without really engaging stories the readers may start dropping Sonic along with other "childish things" (such as walking around with one's shoelaces untied and listening to Hanson records).  I can't speak for anyone but myself but the back stories are the ones that keep me coming back for more. 
 
-<p><b>Overall Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<p><b>Overall Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 </p>
 
 <hr>
