--- a/sonichq/comics/reviews/sonic/s61.htm
+++ b/sonichq/comics/reviews/sonic/s61.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic #61 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic61.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic61.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>Thunda Downunda !!!</p>
 <p>Sonic The Hedgehog #61<br>
@@ -52,7 +52,7 @@ Jonathan Gray(Reviewer)<br>
 
 <p>Now for Part One of On His Majesty's Secret Service". This was OK but Penders can do better than this. Maybe its the fact that NO ONE LIKES GEOFFREY ST. JOHN and the thought of him with a group that isn't exactly Freedom Fighters but instead spies for the purpose of infiltrating Foriegn countries just doesn't pique my curiosity. Too "James-Bond-ish" but this story was, like I said OK. Anyway the recruits are a no-name blue chameleon clone with some weird red beret, Wombat Stu of the DFF, Hershey The Cat - fan favorite from End Game, and what just may be Heavy and Bomb FINALLY returning to the comic after a MUCH LONG hiatus. Art Mawhinney has slacked on his art. Maybe its the inks do it but compare his art in Sonic 58 to his art in this story. 58 had WAAY more detail than this as the drawings on these pages looked really plain and at times flat. We know he can draw better than this so why doesn't he? This doesn't mean I don't like it. I just think that it could be better.
 
-<p><b>Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> rings
+<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> rings
 </p>
 
 <p>This issue had its ups and downs - more downs than ups due to the art in which Harvey Mercadoocasio later said in an email that his inks were messed up in the printing, but Mike could have done a LOT better than this. This story left me feeling like "so what" when I 
