--- a/sonichq/comics/reviews/sonic/s62.htm
+++ b/sonichq/comics/reviews/sonic/s62.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic #62 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic62.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic62.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>Go Speed Racer !!! Go Speed Racer !!! Go Speed Racer GOOOOOOOO !!!</p>
 <p>Sonic The Hedgehog #62<br>
@@ -40,7 +40,7 @@ Jonathan Gray(Reviewer)<br>
 
 <p>"On His Majesty's Secret Service" however was the reason the book DID NOT get the other ring. It was boring. How else can you say it. Heck if you read the previews you already know the tease and what it leads up to, its just a matter of getting us there. At least we finally learn the name of Valdez The Chameleon. Sure everyone's been wondering what was up with heavy and Bomb since Knuckles Chaotix but other than that there was yet again NOTHING to the story. maybe when Sally is added to the fray next issue it'll pick up speed. But until then - blah !!!!!
 
-<p><b>Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> rings
+<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> rings
 </p>
 
 <hr>
