--- a/sonichq/comics/reviews/sonic/s63.htm
+++ b/sonichq/comics/reviews/sonic/s63.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic #63 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic63.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic63.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>And You Thought Sonic's Ego Was Bad BEFORE... </p>
 <p>Sonic The Hedgehog #63<br>
@@ -42,7 +42,7 @@ Jonathan Gray(Reviewer)<br>
 
 <p>"On His Majesty's Secret Service" was a big improvement from last issue IMHO. Namely because a character we actually like was in it - Sally - and the situation between her and her father is worsening as now she's been restricted from freedoms she previously did not have - And when Geoffrey St. John has more clout than the daughter of a king you KNOW someone is NOT happy....Geoff is taking his recruits through a bunker - And now that I look at it closer - he's taking them through a simulation of Haven. It cant be anything BUT that of course but thats what it DEFINETELY is. This has been Art Mawhinney's best in a while and it shows. Characters dont look all plain and dull with more line features and better detailed backgrounds and good use of perspective - A DEFINITE Plus for the book! Overall this issue was a wee bit better than 62 but like I said before - It still has a ways to go.....
 
-<p><b>Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> rings
+<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> rings
 </p>
 
 <p>I hated to do that rating, but it was needed. I really wanted that main story to work and while I thought the story had nice premise, it just had too many inconsistencies to NOT look over. Even the ending - as Dan Drazen pointed out - made Sonic the anti-hero. For his veteran effort as writer Karl Bollers raised my hopes and then dropped me kicking and screaming off a cliff.
@@ -52,17 +52,17 @@ Lets hope his future endeavors in this book won't do the same thing. As for the 
 <p><u>Reader Reviews</u></p>
 
 <HR>
-<p><b>Joey:</b> <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> <img src="http://members.tripod.com/~warpsonic/ring.gif"> 1/2 Rings.</p> 
+<p><b>Joey:</b> <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> <img src="/sonichq/tripod/warpsonic/ring.gif"> 1/2 Rings.</p> 
 <p><center>I give it 3 1/2 rings I took the 1 1/2 ring away beacause I realy didn't like the art that much I think last issue was a little better good story thogh the Geoffrey part was boring thogh. I can't wait to get next issue.
 </p></center>
 
 <HR>
-<p><b>Asudem:</b> <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> Rings.</p> 
+<p><b>Asudem:</b> <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> Rings.</p> 
 <p><center>I give this issue a stinkin' 2 rings. Firstly, Sonic has out of character. Here's a speech bubbles: "I had to ACT like I wanted to STAY so the sand-blasters wouldn't SUSPECT I was onto 'em (another chilidog and I would've had to trademark a NEW favorite SNACK!)" And Sonic didn't act Sonic on page 12, either... I mean all of a sudden he knows it's in the statue? And the Gulag. Butler drew a REALLY off-model Sgt. Simian. How'd it earn two rings? Well, one for the back-up story. Nice plot, Mr. Acorn is giving Sally some more boundaries. As much as I hate what King Acorn is doing, it's STILL a nice plot... can't wait to see how it turns out... the other ring is due to the robians destroying Sand Blast City :P
 </p></center>
 
 <HR>
-<p><b>Pepper J. Zeal:</b> <img src="http://members.tripod.com/~warpsonic/ring.gif">1/2 Rings.</p> 
+<p><b>Pepper J. Zeal:</b> <img src="/sonichq/tripod/warpsonic/ring.gif">1/2 Rings.</p> 
 <p><center>What can I say, really? I didn't understand half of it. HOW and WHY did Sonic start suspecting the Sand Blast Freedom Fighters were keeping he and Tails prisoner? Geez... and talk about lame security in the Devil's Gulag. This place is supposedly a tough, Mobian alcatraz.. and yet.. the inmates were able to grab those hovercrafts and beat it just like that? WHAT was Karl thinking when he wrote this? My guess is that this was just a cheap tale to buy some more time for the Naugus Trilogy. I would give it 1 1/2 rings. It was heavy on action.. but not very practical. The best part was seeing Sally mad in the back-up story... heehee...
 </p></center>
 
