--- a/sonichq/comics/reviews/sonic/s64.htm
+++ b/sonichq/comics/reviews/sonic/s64.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic #64 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic64.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic64.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>The Mobius World Tour Finally Pays Off - And The Currency Is Ixis Naugus!!!</p>
 <p>Sonic The Hedgehog #64<br>
@@ -42,7 +42,7 @@ can do anything out comes Ixis Naugus in a burst of fire as the story is to be c
 <p>"On His Majesty's Secret Service" was a HUGE improvement from last issue IMHO. Like I said last time - when Geoffrey St. John has more clout than the daughter of a king you KNOW someone is NOT happy....And Sally is not happy! But the reason for the kings mistreatment of his daughter.....QUEEN ACORN!!! After a St. John "Ten-Hutt" and a King Max "as you were", the King goes on about how he's impressed with the Secret Service's performance, and gives them their first mission in the form of a royal flashback.......King Max starts on about on how hard times were 15 years ago during the Great War. He mentions how Geoffrey's own father who's the commander came in and alerted him on how the castle was under attack by Overlanders. The King wasn't giving it up! Then his wife, Alicia, told him that he must take sanctuary considering they couldn't "lose his wisdom". King Max told her that she belongs "in the bunkers" in the Knothole caverns with Julayla, Rosie, and the kids (Sonic and company...) King Max tells the commander to send the Queen and the boy to Knothole. Commander St. John mentions that they're cut off! King Max tells him that he wants him and a team to send them to their home on.....The Floating Island!!!! He was victorious in his fight, but St. John's pop and his team weren't since some overlanders attacked his wife's convoy when she got there. This was the last time he heard from her. He sent a team there later but they found nothing.....Lately some evidence was found that could reveal her whereabouts. So the mission is plain and simple. Go to the Floating Island and find out what happened to her. "Whatever Happened to Queen Alicia? The answer awaits you in within the pages of Knuckles #19! All in all a terrific issue with a terrific start!
 <hr>
 
-<p><b>Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> rings
+<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> rings
 </p>
 
 <p>AMEN AND PASS THE MUSTARD! We FINALLY get a GOOD story out of the schlock we got from before to 59. Lets hope Bollers doesnt flub the ending miserably like he did to the "Icon" arc.
@@ -51,7 +51,7 @@ I cant speak for everone else but I KNOW WHAT I LIKE. And it was this issue. But
 <p><u>Reader Reviews</u></p>
 
 <HR>
-<p><b>X$Mavrick@AOL.com:</b> <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> <img src="http://members.tripod.com/~warpsonic/ring.gif"> 1/2 Rings.</p> 
+<p><b>X$Mavrick@AOL.com:</b> <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> <img src="/sonichq/tripod/warpsonic/ring.gif"> 1/2 Rings.</p> 
 <p><center>At last Ixis Nagus. In this issue it explains that Nagus cantransform
 into the eliments: Earth, Wind, Water, Fire ect. ('Total Turbulance'Come in
 to mind?)And More on that mysterious Satalite. My theory on it being...to put it
@@ -63,7 +63,7 @@ there....actually it's in #65 with the story of Nate's past that shouldanswer
 the Question "Who IS Nate Morgan?!?"</p></center>
 
 <HR>
-<p><b>Jennifurry:</b> <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> <img src="http://members.tripod.com/~warpsonic/ring.gif">  <img src="http://members.tripod.com/~warpsonic/ring.gif">  Rings.</p> 
+<p><b>Jennifurry:</b> <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> <img src="/sonichq/tripod/warpsonic/ring.gif">  <img src="/sonichq/tripod/warpsonic/ring.gif">  Rings.</p> 
 <p><center>"In Search Of..." was good, but it only got REALLY interesting toward the end. I'm looking forward to learning who Nate Morgan is and how he knows Jules. I'm still wondering exactly whose side the Abominable Snow-Borg was on in that fight. (I'm guessing he just suspected Sonic and Tails were up to no good at first.) And finally, "On His Majesty's Secret Service" got somewhere! After reading Knuckles #17 (and some possible spoilers on the Net) I think I have a good idea of where Queen Alicia wound up. Now what happened to "the boy"? I'm certainly looking forward to learning THAT!
 "</p></center>
 
