--- a/sonichq/comics/reviews/sonic/s65.htm
+++ b/sonichq/comics/reviews/sonic/s65.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic #65 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/big/sonic65.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/big/sonic65.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>Do The Ring Thing !!!</p>
 <p>Sonic The Hedgehog #65<br>
@@ -50,7 +50,7 @@ Jonathan Gray(Reviewer)<br>
 <p>"The Library" was OK - It wasn't boring as heck like those darn Geoffrey St. John backups as of late and it did feature the return of someone not seen since issue 25 - Amy Rose!! but the biggest thrill of the story was KP's tribute to Jack Kirby - the man who defined comics in general! KP the tribute is WELL appreciated!
 <hr>
 
-<p><b>Rating:</b> <img src="http://members.tripod.com/~warpsonic/ring.gif"> <img src="http://members.tripod.com/~warpsonic/ring.gif"> <img src="http://members.tripod.com/~warpsonic/ring.gif"> <img src="http://members.tripod.com/~warpsonic/ring.gif"> 1/2 Rings.
+<p><b>Rating:</b> <img src="/sonichq/tripod/warpsonic/ring.gif"> <img src="/sonichq/tripod/warpsonic/ring.gif"> <img src="/sonichq/tripod/warpsonic/ring.gif"> <img src="/sonichq/tripod/warpsonic/ring.gif"> 1/2 Rings.
 
 <p>There was a LOT to like in this issue in all honesty - and the only reason this review doesn't get a 5 ring rating is because of the fact of two things. One: How does this relate to Uncle Chuck being called the creator of the Power Rings according to the SatAM cartoon.
 My thing is this - while it is common sense to know that if Nate taught Chuck, then Chuck got it from him, needless to say - while this was _left to common sense_ IT <u>WAS NOT</u> STATED AS SUCH and because of that its gonna leave people confused, ESPECIALLY the devout SatAM Sonic fans. This is the reason it did ot get the 
