--- a/sonichq/comics/reviews/sonic/s66.htm
+++ b/sonichq/comics/reviews/sonic/s66.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic #66 (08-03-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic66.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic66.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>Ladies And Gentlemen - The Naugus Quest Is Officially OVER! And the fandom heaved a great and happy sigh of relief...Or do they?</p>
 <p>Sonic The Hedgehog #66<br>
@@ -53,7 +53,7 @@ Rolland Theirren(Reviewer)<br>
 <p>The story ends by telling us that through out his life, Nate never knew victory, and was therefore unaware that it sometimes had it's price. This quote from the story sums it best: "Today, Nate has finally won a battle...And at last paid dearly"
 <hr>
 
-<p><u>Rating</u></p> <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<p><u>Rating</u></p> <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 </p>
 
 <p>Okay, time for the comments: Well, this was a good story. Nicely done art, coherent storyline... Sonic and tail's new forms and powers were left unexplained, which is both a good and bad thing. On one hand, I enjoy a nice cosmic mysteryt, but I'm puzzled as to why they skipped straight through their super forms... Nate's defeat of Naugus was a bit too much of a deus ex machina for my tastes, but it's nice to see that bad guy get what he deserves by the most unassuming guy in the room.
@@ -74,12 +74,12 @@ Rolland Theirren(Reviewer)<br>
 <p>Elsewhere on Mobius, Young prince Maximillian, undere the watchful eyes of his parents, makes a wish upon a falling star. Next morning, someone shows up at the castle: A strange being who calls him self Ixis Naugus, claiming to be a great and powerfl wizard, offering his power and skill to king Frederic, and saying he'll help the King bring a golden age to the kingdom. And so, an evil carreer begins...
 <hr>
 
-<p><u>Rating</u></p> <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<p><u>Rating</u></p> <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 </p>
 
 <p>Well... This was certainly an interesting story. Who would've suspected Naugus had such strange origins? This certainly opens up new questions: "Are the various personnalities that made up the order of Ixis still alive inside Naugus?" "Are there any more mystical orders around Mobius? And if so, what are there goals?" "Just what were those Days of Fury?" Let's hope the writers decide to explore this storyline further on... The art was good, and the writing was beliveable. Like I said, that occult race sounded genuine enough for me, though I'm no expert in this stuff.
 
-<p><u>Overall Rating</u></p> <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<p><u>Overall Rating</u></p> <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 </p>
 </td>
 
