--- a/sonichq/comics/reviews/sonic/s72.htm
+++ b/sonichq/comics/reviews/sonic/s72.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic #72 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic72.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic72.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>He's baaaaaaaaaccccckkkkkk.......And just in time for a Sonic makeover!</p>
 <p>Sonic The Hedgehog #72<br>
@@ -63,7 +63,7 @@ Rolland Theirren(Reviewer)<br>
 <p>Meanwhile, somewhere far away from Knothole, we see Snively cowering before a massive, yet familiar figure, accusing him of betraying his own Uncle. Snivley, obivously scared Shitless, simply squirms in terror, screaming: "No-Not you?!" End of this Episode.
 <hr>
 
-<p><b>Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 </p>
 
 <p><u>Backup Story</u>: Essentially a continuation of last issue's story, as Tails reads aloud the tale of the most influential meeting between the Mobians and the Overlanders. This young prince, called Emerson, a decendent of Alexander, founder of Mobotropolis, meets an Overlander kid called Paladin in the forest. Paladin is out on target practice with his gun, which is something Emerson has never seen before. Paladin lets Emerson try out his gun, shooting a branch. Emerson is surprised by the power of the weapon. Paladin then tries shooting a bird, but Emerson tris to stop him, saying you shouldn't kill living things... and accidently gets shot. 
@@ -72,10 +72,10 @@ Rolland Theirren(Reviewer)<br>
 
 <p>Well, yet another mystery of the ancient times is solved. Not a very interesting story in my opinion, but a good set-up for what will follow, and it makes a valid point on the lethality of handguns. Children, take note! This could have been you!
 
-<p><b>Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 </p>
 
-<p><b>Overall Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<p><b>Overall Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 </p>
 <hr>
 
