--- a/sonichq/comics/reviews/sonic/s74.htm
+++ b/sonichq/comics/reviews/sonic/s74.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic #74 (08-03-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic74.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic74.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>In Space - No One Can Hear Snively Scream...</p>
 <p>Sonic The Hedgehog #74<br>
@@ -57,7 +57,7 @@ Rolland Theirren(Reviewer)<br>
 <p>And we end there. I guess we'll find out who the guy under the Robotnik mask is next month.
 <hr>
 
-<p><u>Rating</u></p> <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<p><u>Rating</u></p> <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 </p>
 
 <p>Comments: Good art, nice story. Sonic's portrayaly was true to charater, and it's good to see the writers are loosening their way around the "No emotions" policy required be Sega (a small tear on first page, a few outbursts of rage). Sonic and Sally also seem to be back on the rigth track, relationship wise (The witty banter from the SatAM series is back), and all the characters had some decent screen time (with the possible execption of Elias). Now, I may be the only guy who thinks that, but I'm glad to see Robotnik's back! (although it doesn't seem to be entirely Robotnik... but hey! If it walks like a duck, and talks like a duck, and acts like a duck, them it must be a duck! Now matter how you slice this guy, he's the new Robotnik!)
@@ -74,12 +74,12 @@ Rolland Theirren(Reviewer)<br>
 <p>He tells everyone Kodos tampered with something best left alone, and everyone believed him. (Continuity note: in Sonic #36, Robotnik delivers about the same story, not telling what really happened to Kodos.) The king appoints Julian to replace Kodos as Warlord, and asks his recommendation regarding the overlander situation. Julian's advice? Fight until all opposition hsa been annhilated! (gee, the guy really likes his own people, doesn't he?) Of course, Robotnik's plan was the have each side pretty wipe out the other, leaving him to pick up the pieces, but who knew? And the story ends here for now, resuming in Sonic #76, after issue #75 has run it's course.
 <hr>
 
-<p><u>Rating</u></p> <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<p><u>Rating</u></p> <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 </p>
 
 <p>Well, This backstory was filled with twists and turns, and was overall fun. Robotnik's deception does fix some continuity problems, as the conflicting stories about his and Kodos can be summed up as overt lies from the Eggman. Also, the way he scams his way into mobian society; he's the fow allowed to step into the henhouse, if Tails' fans will allow me the expression. This story was somewhat less violent then the last two chapters, but no less poignant, as it shows how many people willingly allow villains into their midst. good writing, along with good art, makes this back-up story fun to read.
 
-<p><u>Overall Rating</u></p> <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<p><u>Overall Rating</u></p> <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 </p>
 </td>
 
