--- a/sonichq/comics/reviews/sonic/s75.htm
+++ b/sonichq/comics/reviews/sonic/s75.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic #75 (8-03-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic75.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic75.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>Once Again Sonic Mindlessly States The Obvious...</p>
 <p>Sonic The Hedgehog #75<br>
@@ -56,7 +56,7 @@ Rolland Theirren(Reviewer)<br>
 <p>And finally, as in the last two milestones, we get a splash page with all the heroes (and Snively) making a pose, with the new intro box (you know, it's that caption usually found on top of the first page, telling you the premise for the series).
 <hr>
 
-<p><u>Rating</u></p> <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<p><u>Rating</u></p> <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 </p>
 
 <p>Well, what can I say: THIS ISSUE ROCKED!!! Aside from some confusing issues (what timeline those this guy come from again? Future family man Sonic's, or Cyborg Sonic's?) , this was a great book! Steve and Pam's art is great, and Karl wrote some great stuff! Sonic, at many points, showed us he <u>did</u> have some emotions, and the art made us see it. All in all, this issue was a great relaunching point for the series, as things are now more or less back to the way they were in the start: Robotnik in Robtropolis, and the FFs fighting him all the way! This makes this issue a great jump-in point for new readers, as it brings things back to the long-absent essence of the book: Sonic vs Robotnik. And Robotnik and Sonic's new look is a teaser for the up-coming Sonic Adventure adaptation yet to come! Things are looking up!
