--- a/sonichq/comics/reviews/sonic/s76.htm
+++ b/sonichq/comics/reviews/sonic/s76.htm
@@ -40,11 +40,11 @@ function MM_swapImage() { //v2.0
 </script>
 </head>
 
-<body bgcolor="#000000" background="http://www.sonichq.org/comics/images/sonicbg.gif" text="#FFFF66" link="#99CCFF" vlink="#FF6666" alink="#FFFFCC">
+<body bgcolor="#000000" background="/sonichq/comics/images/sonicbg.gif" text="#FFFF66" link="#99CCFF" vlink="#FF6666" alink="#FFFFCC">
 <div align="center">
   <table width="75%" border="1" cellspacing="0" cellpadding="10" bordercolor="#003399" bgcolor="#000000">
       <td> 
-        <p align="center"><img src="http://members.spree.com/funNgames/asudem/Comix/Sonic/Small/Sonic76.jpg" width="134" height="208"></p>
+        <p align="center"><img src="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/Comix/Sonic/Small/Sonic76.jpg" width="134" height="208"></p>
         <p align="center"><font face="Arial, Helvetica, sans-serif" size="3"><b>Sonic 
           #76 </b></font></p>
         <p align="center"><font face="Arial, Helvetica, sans-serif" size="2">a 
@@ -105,7 +105,7 @@ function MM_swapImage() { //v2.0
           parts company. Back in his HQ, Robotnik tries to access the file with 
           Knothole's location, but ends up catching a computer virus. Sorry Ivo. 
           Better luck next time. </font></p>
-        <p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">4 
+        <p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">4 
           rings </b><br>
           A nice story. Self-contained, yet fits in nicely into standard continuity. 
           The "Back to basics" approach has been used properly, with all the characters 
@@ -151,7 +151,7 @@ function MM_swapImage() { //v2.0
           a small statement about how important books are and they decide to take 
           all they can carry, before coming back for what else they can need. 
           </font></p>
-        <p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+        <p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 
           2 rings. <br>
           </b></font><font size="2" face="Arial, Helvetica, sans-serif">This story 
           was utterly unnecessary. The art was questionnable, the storytelling 
@@ -162,15 +162,15 @@ function MM_swapImage() { //v2.0
           and there?). It seems Archie's backstories are once again dragging down 
           the rest of the book. </font></p>
         <p align="center"><font size="2" face="Arial, Helvetica, sans-serif"><b>Overall 
-          Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">3 
+          Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">3 
           Rings.</b></font> </p>
         </td>
     </tr>
   </table>
   <table border="0">
     <tr> 
-      <td><a href="http://www.sonichq.org/comics/reviews/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image11','document.Image11','http://www.sonichq.org/comics/images/graphics/reviewbbr.gif','#938383038510')"><img name="Image11" border="0" src="http://www.sonichq.org/comics/images/graphics/bluerevbb.gif" width="150" height="40"></a></td>
-      <td><a href="http://www.sonichq.org/comics/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image12','document.Image12','http://www.sonichq.org/comics/images/graphics/comixbbr.gif','#938383064380')"><img name="Image12" border="0" src="http://www.sonichq.org/comics/images/graphics/bluecomixbb.gif" width="150" height="40"></a></td>
+      <td><a href="/sonichq/comics/reviews/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image11','document.Image11','/sonichq/comics/images/graphics/reviewbbr.gif','#938383038510')"><img name="Image11" border="0" src="/sonichq/comics/images/graphics/bluerevbb.gif" width="150" height="40"></a></td>
+      <td><a href="/sonichq/comics/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image12','document.Image12','/sonichq/comics/images/graphics/comixbbr.gif','#938383064380')"><img name="Image12" border="0" src="/sonichq/comics/images/graphics/bluecomixbb.gif" width="150" height="40"></a></td>
     </tr>
   </table>
  </div>
