--- a/sonichq/comics/reviews/sonic/s77.htm
+++ b/sonichq/comics/reviews/sonic/s77.htm
@@ -40,11 +40,11 @@ function MM_swapImage() { //v2.0
 </script>
 </head>
 
-<body bgcolor="#000000" background="http://www.sonichq.org/comics/images/sonicbg.gif" text="#FFFF66" link="#99CCFF" vlink="#FF6666" alink="#FFFFCC">
+<body bgcolor="#000000" background="/sonichq/comics/images/sonicbg.gif" text="#FFFF66" link="#99CCFF" vlink="#FF6666" alink="#FFFFCC">
 <div align="center">
   <table width="75%" border="1" cellspacing="0" cellpadding="10" bordercolor="#003399" bgcolor="#000000">
       <td> 
-        <p align="center"><img src="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic77.jpg" width="134" height="208"></p>
+        <p align="center"><img src="/sonichq/comics/images/covers/sonic/thumbnails/sonic77.jpg" width="134" height="208"></p>
         <p align="center"><font face="Arial, Helvetica, sans-serif" size="3"><b>Sonic 
           #77 </b></font></p>
         <p align="center"><font face="Arial, Helvetica, sans-serif" size="2">a 
@@ -82,7 +82,7 @@ the story, from the comedy scenes where Dulcy intimidates a robot and Robotnik c
 way, to the scene where you see King Max hugging his daughter for confort. And the Starship teaser was nice, if
 short. All in all, a good average for the series. Keep up the good work, guys!</font></p> 
 
-        <p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> 4 
+        <p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 4 
           rings </b><br></p>
 
 <center><b>Tales of the Great War, Part 5: For Better or Worse...</b></center></p>
@@ -104,20 +104,20 @@ if the doctor would consider an alternative... (which we won't know more about u
 
         <p><font size="2" face="Arial, Helvetica, sans-serif">While this is going on, King Max is watching his city get bombarded from afar, muses that he and his people must make a stand. Amadeus argues the Overlanders are unpredictable, so King Max asks Julian what they should do. Julian just mentions his people are merciless and that they should keep fighting (That's pretty much all he's been doing since he became Warlord, to tell the truth...)</font></p>
 
-        <p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+        <p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 
           2 rings. <br>
           </b></font><font size="2" face="Arial, Helvetica, sans-serif">These backups have been losing more and more in quality, of late. This one is no exception. Skipping the fight and focusing on Jules being wounded and what this means to the people around him would have been enough. Julian, for a guy who's behind the true atrocities of the Great War, sure hasn't done much to earn that reputation. He's essentially a "yes-man" who keeps telling the king that his people are merciless killers and that they should keep fighting 'till the end. Yawn. The art was nice, but it could be better. in the second panel on page 5 of the story, Amadeus is depicted with two eyes, when he wears an eye patch during the rest of the story. Not very consistant. It's a shame that, with the quality of the regular stories, the back ups are dragging down
 the books. </font></p>
         <p align="center"><font size="2" face="Arial, Helvetica, sans-serif"><b>Overall 
-          Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> 3 
+          Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 3 
           Rings.</b></font> </p>
         </td>
     </tr>
   </table>
   <table border="0">
     <tr> 
-      <td><a href="http://www.sonichq.org/comics/reviews/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image11','document.Image11','http://www.sonichq.org/comics/images/graphics/reviewbbr.gif','#938383038510')"><img name="Image11" border="0" src="http://www.sonichq.org/comics/images/graphics/bluerevbb.gif" width="150" height="40"></a></td>
-      <td><a href="http://www.sonichq.org/comics/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image12','document.Image12','http://www.sonichq.org/comics/images/graphics/comixbbr.gif','#938383064380')"><img name="Image12" border="0" src="http://www.sonichq.org/comics/images/graphics/bluecomixbb.gif" width="150" height="40"></a></td>
+      <td><a href="/sonichq/comics/reviews/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image11','document.Image11','/sonichq/comics/images/graphics/reviewbbr.gif','#938383038510')"><img name="Image11" border="0" src="/sonichq/comics/images/graphics/bluerevbb.gif" width="150" height="40"></a></td>
+      <td><a href="/sonichq/comics/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image12','document.Image12','/sonichq/comics/images/graphics/comixbbr.gif','#938383064380')"><img name="Image12" border="0" src="/sonichq/comics/images/graphics/bluecomixbb.gif" width="150" height="40"></a></td>
     </tr>
   </table>
  </div>
