--- a/sonichq/comics/reviews/sonic/s78.htm
+++ b/sonichq/comics/reviews/sonic/s78.htm
@@ -40,11 +40,11 @@ function MM_swapImage() { //v2.0
 </script>
 </head>
 
-<body bgcolor="#000000" background="http://www.sonichq.org/comics/images/sonicbg.gif" text="#FFFF66" link="#99CCFF" vlink="#FF6666" alink="#FFFFCC">
+<body bgcolor="#000000" background="/sonichq/comics/images/sonicbg.gif" text="#FFFF66" link="#99CCFF" vlink="#FF6666" alink="#FFFFCC">
 <div align="center">
   <table width="75%" border="1" cellspacing="0" cellpadding="10" bordercolor="#003399" bgcolor="#000000">
       <td> 
-        <p align="center"><img src="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic78.jpg" width="134" height="208"></p>
+        <p align="center"><img src="/sonichq/comics/images/covers/sonic/thumbnails/sonic78.jpg" width="134" height="208"></p>
         <p align="center"><font face="Arial, Helvetica, sans-serif" size="3"><b>Sonic 
           #78 </b></font></p>
         <p align="center"><font face="Arial, Helvetica, sans-serif" size="2">a 
@@ -74,7 +74,7 @@ While Elias ponders the tragic consequences of these news, we cut back to Dr Rob
 
 Well, this was a good issue. Aside from a few glitches (Like Valdez' cameo, and the now old "Tenchi gang cameo" routine), Fry is still doing a good job of the art. The story is well written and all the characters get decent air time, with focus on those witty sub-plots going on. A good job, in my opinion. Karl has also done a good job of leading into the Sonic Adventure adaptation, which will be the new creative team's big challenge. Can they pull off a good Sonic game adaptation? That is the question, isn't it? I'm looking forward to finding out the answer.</p>
 
-        <p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> 4 
+        <p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 4 
           rings </b><br></p>
 
 <center><b>Tales of the Great War, Part 6: What Really Happened</b></center></p>
@@ -89,17 +89,17 @@ The story ends with Bernie and Chuck arguing about why Chuck gave up, and what B
 
 This story is mostly all "been there, done that, got the T-shirt" to me. It may be new to some readers, but you can get it all in past flashbacks, and you're likely to get it all in future flashbacks, as well. The art is nice, but nothing can save that boring story.</p>
 
-        <p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"> 1 Ring. <br>
+        <p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"> 1 Ring. <br>
       
         <p align="center"><font size="2" face="Arial, Helvetica, sans-serif"><b>Overall 
-          Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> 4 Rings.</b></font> </p>
+          Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 4 Rings.</b></font> </p>
         </td>
     </tr>
   </table>
   <table border="0">
     <tr> 
-      <td><a href="http://www.sonichq.org/comics/reviews/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image11','document.Image11','http://www.sonichq.org/comics/images/graphics/reviewbbr.gif','#938383038510')"><img name="Image11" border="0" src="http://www.sonichq.org/comics/images/graphics/bluerevbb.gif" width="150" height="40"></a></td>
-      <td><a href="http://www.sonichq.org/comics/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image12','document.Image12','http://www.sonichq.org/comics/images/graphics/comixbbr.gif','#938383064380')"><img name="Image12" border="0" src="http://www.sonichq.org/comics/images/graphics/bluecomixbb.gif" width="150" height="40"></a></td>
+      <td><a href="/sonichq/comics/reviews/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image11','document.Image11','http://www.sonichq.org/comics/images/graphics/reviewbbr.gif','#938383038510')"><img name="Image11" border="0" src="/sonichq/comics/images/graphics/bluerevbb.gif" width="150" height="40"></a></td>
+      <td><a href="/sonichq/comics/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image12','document.Image12','http://www.sonichq.org/comics/images/graphics/comixbbr.gif','#938383064380')"><img name="Image12" border="0" src="/sonichq/comics/images/graphics/bluecomixbb.gif" width="150" height="40"></a></td>
     </tr>
   </table>
  </div>
