--- a/sonichq/comics/reviews/sonic/s79.htm
+++ b/sonichq/comics/reviews/sonic/s79.htm
@@ -40,11 +40,11 @@ function MM_swapImage() { //v2.0
 </script>
 </head>
 
-<body bgcolor="#000000" background="http://www.sonichq.org/comics/images/sonicbg.gif" text="#FFFF66" link="#99CCFF" vlink="#FF6666" alink="#FFFFCC">
+<body bgcolor="#000000" background="/sonichq/comics/images/sonicbg.gif" text="#FFFF66" link="#99CCFF" vlink="#FF6666" alink="#FFFFCC">
 <div align="center">
   <table width="75%" border="1" cellspacing="0" cellpadding="10" bordercolor="#003399" bgcolor="#000000">
       <td> 
-        <p align="center"><img src="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic79.jpg" width="134" height="208"></p>
+        <p align="center"><img src="/sonichq/comics/images/covers/sonic/thumbnails/sonic79.jpg" width="134" height="208"></p>
         <p align="center"><font face="Arial, Helvetica, sans-serif" size="3"><b>Sonic 
           #79 </b></font></p>
         <p align="center"><font face="Arial, Helvetica, sans-serif" size="2">a 
@@ -62,7 +62,7 @@ Later on, when the FFs are getting equipment ready for their mission, King Acorn
 
 To be continued next issue.</p>
 
-<p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">3 
+<p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">3 
           Rings </b><br></p>
 
 Well, this story wasn't bad, except it was a bit short. First off, nothing wrong with the art. Fry's still one of the better artists I've seen; Although he seems a tad obsessed with those "furry Tenchi girls" of his. You know, the odd furries hovering around Elias? I'm half expecting Elias to get himself a light saber, calling it "Elias-sword". (obscure anime fan joke. Look it up). The storyline includes a few cliches (ten gets you five King Acorn knows what they will find there and will keep quiet until it's too late), and even one Deus Ex Machina (the Ring of Acorns) How about something original next time, Karl?</p>
@@ -79,7 +79,7 @@ Next thing you know, Robotnik's having his Robian slaves digging up in Mysteriou
 
 Next stop, the Floating Island, which Dr Robotnik attacks full front (making this reviewer wonder why he even bothered with sending Valdez in to find a way to steal it in the Knuckles title). Despite being surprised by the citizens of Echidnapolis (his files predate its return to normal space), he still breezes through the Island's defenses (one wonders what the Guardians are doing), to the Chaos Chamber where he simply blows up the Master Emerald to get seven shards before leaving. Of course, this simple feat endangers the lives of countless Echidnas and devastates their homeland, but why should he care? Finally, as he flies off into the distance, an energy pattern escapes from the remains of the Master Emerald, Mammoth Mogul is now free...</p>
 
-<p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> 4 Rings </b><br>
+<p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 4 Rings </b><br>
 
 This story was actually very good. Dispite some fudging due to different continuities, Archie has done relatively well in adapting the storyline of Knuckles' game to the comics. Butler and Eklund have done some great art. Better than Knux' last issues. The quality (albeit a bit rushed) of this story almost makes the downsizing of Sonic's story worth it (Almost. This is still Sonic's title.) Let's hope they keep up the good work.</p>
 
@@ -91,7 +91,7 @@ Jules then tells that years later (after the takeover), Chuck used a power ring 
 
 This tale concludes with Jules showing everyone the Zip Disk containing Uncle Chuck's journals, which may hold the information needed to free the minds of all the Mobians. Unfortunately, with Chuck now on Robotnik's side, any chance of decoding it are lost. For now.</p>
 
-<p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> 3 Rings</b></font> </p>
+<p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 3 Rings</b></font> </p>
 Well, this story actually gave some new and interesting information that may be used later on. Decoding Chuck's journals may be the focus of some future story, and if they learn how to free the minds of the Robian slaves, then those who've been lost, like Valdez, Lupe and Chuck may be returned to the side of the FFs again. Very good. The art was very well done as well.</p>
 
 
@@ -100,8 +100,8 @@ Well, this story actually gave some new and interesting information that may be 
   </table>
   <table border="0">
     <tr> 
-      <td><a href="http://www.sonichq.org/comics/reviews/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image11','document.Image11','http://www.sonichq.org/comics/images/graphics/reviewbbr.gif','#938383038510')"><img name="Image11" border="0" src="http://www.sonichq.org/comics/images/graphics/bluerevbb.gif" width="150" height="40"></a></td>
-      <td><a href="http://www.sonichq.org/comics/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image12','document.Image12','http://www.sonichq.org/comics/images/graphics/comixbbr.gif','#938383064380')"><img name="Image12" border="0" src="http://www.sonichq.org/comics/images/graphics/bluecomixbb.gif" width="150" height="40"></a></td>
+      <td><a href="/sonichq/comics/reviews/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image11','document.Image11','/sonichq/comics/images/graphics/reviewbbr.gif','#938383038510')"><img name="Image11" border="0" src="/sonichq/comics/images/graphics/bluerevbb.gif" width="150" height="40"></a></td>
+      <td><a href="/sonichq/comics/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image12','document.Image12','/sonichq/comics/images/graphics/comixbbr.gif','#938383064380')"><img name="Image12" border="0" src="/sonichq/comics/images/graphics/bluecomixbb.gif" width="150" height="40"></a></td>
     </tr>
   </table>
  </div>
