--- a/sonichq/comics/reviews/sonic/s80.htm
+++ b/sonichq/comics/reviews/sonic/s80.htm
@@ -40,11 +40,11 @@ function MM_swapImage() { //v2.0
 </script>
 </head>
 
-<body bgcolor="#000000" background="http://www.sonichq.org/comics/images/sonicbg.gif" text="#FFFF66" link="#99CCFF" vlink="#FF6666" alink="#FFFFCC">
+<body bgcolor="#000000" background="/sonichq/comics/images/sonicbg.gif" text="#FFFF66" link="#99CCFF" vlink="#FF6666" alink="#FFFFCC">
 <div align="center">
   <table width="75%" border="1" cellspacing="0" cellpadding="10" bordercolor="#003399" bgcolor="#000000">
       <td> 
-        <p align="center"><img src="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic80.jpg" width="134" height="208"></p>
+        <p align="center"><img src="/sonichq/comics/images/covers/sonic/thumbnails/sonic80.jpg" width="134" height="208"></p>
         <p align="center"><font face="Arial, Helvetica, sans-serif" size="3"><b>Sonic 
           #80 </b></font></p>
         <p align="center"><font face="Arial, Helvetica, sans-serif" size="2">a 
@@ -62,7 +62,7 @@ After two short and touching scenes featuring Sonic and Sally and their respecti
 After a short flight, the FFs arrive at the mountain under which the Ancients have hidden their city.  Nate does some more explaining, saying the people who live there came from a crashed aircraft imbedded inside the moutainside, before the Days of Fury, at a time before Mobians and Overlanders dominated Mobius.  As they land
 and continue using a minecart rail-way system, the Freedom Fighters finally arrive at The Hidden City of the Ancients, which bears an amazing resemblance to to New York City, oddly enough...</p>
 
-<p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">3 
+<p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">3 
           Rings </b><br></p>
 This was a pretty average story, as far as this reviewer is concerned.  Still too short for confort, it featured the introduction of Amy, Sonic Adventure style, the removal of the Ring of Acorns as a Deus Ex Machina to help Queen Alicia and brought the Freedom Fighters to the City of the Ancients.  The characterisation of the Freedom
 Fighters was pretty decent, with Sonic and Sally both getting good scenes.  Nate continues his newly appointed job as the living plot device/Mr Exposition, thereby taking over the job once left for characters like Rotor or Nicole (remember her?  The computer?). This has both it's ups and downs, since it does pull the spotlight away from the other characters. Hopefully, the other FFs will get more airtime as the series progresses.</p>
@@ -77,7 +77,7 @@ After a short argument, featuring Knuckles lecturing his father about how this w
 
 Meanwhile, Knuckles' crew, the Chaotix, is checking out the hole where the Chaos Chamber used to be, when they hear a cry for help. They go to check it out, and find Espio having been captured by a hunting party of cat morphs with wicked spears.  And our story ends here for now...</p>
 
-<p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> 2 Rings </b></p>
+<p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 2 Rings </b></p>
 
 Nothing really happens, I have seen better art, and the supposedly very well prepared Brotherhood are as efficient as a chicken with its head cut off. The highlight of this issue is Knuckles chewing out his father and ancestors, pointing out how stupid it was to now help Sally when Robotnik was clearly a threat to them as well.  I almost felt like cheering Knuckles onward, telling him to knock out his father's teeth out for being so stupid.  As is usual for a Knuckles' storyline, the Chaotix are once again fighting a different battle from Knuckles' own, which will be dealt with along with the rest of Knuckles' storyline.</p>
 
@@ -85,7 +85,7 @@ Nothing really happens, I have seen better art, and the supposedly very well pre
 
 This is a short story, so here's the telegraph version of it. In Mysterious Cat Country, Big the Cat is sleeping outdoors. Froggy, his devoted buddy wakes up, finds a puddle of Chaos water and drinks from it, mutating a bit and growing a tail.  While Big wakes up and starts to check on his buddy, E-102 shows up, captures the frog, fights off Big and jets off, leaving Big to pick up his fishing rod and going after them to get his buddy back.  (I would've gone with bazooka, but I'm no Big the Cat...)</p>
 
-<p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> 2 Rings</b></font> </p>
+<p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 2 Rings</b></font> </p>
 Cheap art, a short and uninteresting story, featuring a character who pretty much makes Jar Jar Binks look like Keanu Reeves. Ho hum... Wake me when the back-up stories feature something interesting.</p>
 
         </td>
@@ -93,8 +93,8 @@ Cheap art, a short and uninteresting story, featuring a character who pretty muc
   </table>
   <table border="0">
     <tr> 
-      <td><a href="http://www.sonichq.org/comics/reviews/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image11','document.Image11','http://www.sonichq.org/comics/images/graphics/reviewbbr.gif','#938383038510')"><img name="Image11" border="0" src="http://www.sonichq.org/comics/images/graphics/bluerevbb.gif" width="150" height="40"></a></td>
-      <td><a href="http://www.sonichq.org/comics/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image12','document.Image12','http://www.sonichq.org/comics/images/graphics/comixbbr.gif','#938383064380')"><img name="Image12" border="0" src="http://www.sonichq.org/comics/images/graphics/bluecomixbb.gif" width="150" height="40"></a></td>
+      <td><a href="/sonichq/comics/reviews/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image11','document.Image11','/sonichq/comics/images/graphics/reviewbbr.gif','#938383038510')"><img name="Image11" border="0" src="/sonichq/comics/images/graphics/bluerevbb.gif" width="150" height="40"></a></td>
+      <td><a href="/sonichq/comics/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image12','document.Image12','/sonichq/comics/images/graphics/comixbbr.gif','#938383064380')"><img name="Image12" border="0" src="/sonichq/comics/images/graphics/bluecomixbb.gif" width="150" height="40"></a></td>
     </tr>
   </table>
  </div>
