--- a/sonichq/comics/reviews/sonic/s81.htm
+++ b/sonichq/comics/reviews/sonic/s81.htm
@@ -40,11 +40,11 @@ function MM_swapImage() { //v2.0
 </script>
 </head>
 
-<body bgcolor="#000000" background="http://www.sonichq.org/comics/images/sonicbg.gif" text="#FFFF66" link="#99CCFF" vlink="#FF6666" alink="#FFFFCC">
+<body bgcolor="#000000" background="/sonichq/comics/images/sonicbg.gif" text="#FFFF66" link="#99CCFF" vlink="#FF6666" alink="#FFFFCC">
 <div align="center">
   <table width="75%" border="1" cellspacing="0" cellpadding="10" bordercolor="#003399" bgcolor="#000000">
       <td> 
-        <p align="center"><img src="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic81.jpg" width="134" height="208"></p>
+        <p align="center"><img src="/sonichq/comics/images/covers/sonic/thumbnails/sonic81.jpg" width="134" height="208"></p>
         <p align="center"><font face="Arial, Helvetica, sans-serif" size="3"><b>Sonic 
           #81 </b></font></p>
         <p align="center"><font face="Arial, Helvetica, sans-serif" size="2">a 
@@ -58,7 +58,7 @@ function MM_swapImage() { //v2.0
 
 Next morning, the Freedom Fighters get a grand tour with, for guide, the city's Mayor Bullyani himself (note: New York's mayor is called Jullyani, and is one of the more famous mayors out there);  we get some info concerning the city, Station Square, including it's canopy, which imitates either day or night sky, seasons and weather (though why would one want to imitate winter...).  The tour could last a while, so Sonic, Amy and Tails decide to skip it and go to the set-up scenes we've seen from the game: Amy's shopping (she's enjoying her puberty like a kid with a new toy), Tails' flying his plane and Sonic decides to hanging by the Hotel pool, apparantly charming the local women-folk. ...That last bit seems a bit OOC for the Sonic I know, though.  Elsewhere, though, the Freedom Fighters learn that the people of Station Square call themselves Humans, and not Overlanders, and that they've been keeping themselves  isolated from the outside world for a long time.  But they're ready to open up now.  And so this chapter ends.</p>
 
-<p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif">1 
+<p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="/sonichq/tripod/warpsonic/ring.gif">1 
           Ring </b><br></p>
 I honestly wanted to like this story, but I'm sorry, I can't.  The SA plotline drags on with little plot development in this issue.  We spend the whole story exposing Station Square, with no significant plot point being presented.  The FFs are once more given little more then "Hello, I'm here, this is what I'm doing" treatment, with Sally being practically limited to a background character.  Nate is once again a plot device, who helps cut down the Intro to accelerate things.  Personally, I wouldn't have minded seeing Sonic do his stuff, disarming the cops so Sally could talk to them.  Would've been nice seeing Sonic do <b>anything</b> beside just "hanging, looking cool amd flirting with the girls", actually.  First, Sega don't want Sonic doing the "mushy stuff", and now they let him get turned into a Lady-killer?  That whole pool-side scene was just Out Of Character, IMO.  Only good thing about this storyline was the art, and that doesn't do much to save this story.</p>
 
@@ -73,7 +73,7 @@ He then starts getting nostalgic for his old "pre-series" days, when he only did
 Something we'll see next issue, apparently.  For now, we cut to the Chaotix, who've all been captured by those spear-slinging cats from last issue.  While our friends argue on theory regarding these strangers, the cats are doing the silent treatment until they reach ashore.  They then get brought to a castle.  One of the cats goes on ahead, saying she'll inform the Queen of their presence, before she arrives there, is given a cloak and called Majesty.  Looks like the royalty decides to take a "hands-on" approach to things.  She makes a foreboading statement about interrogating the prisoners and making "examples" out of them.  Not good for our heroes.</p>
 
 
-<p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> 3 Rings </b></p>
+<p><font size="2" face="Arial, Helvetica, sans-serif"><b>Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 3 Rings </b></p>
 
 Not a bad story, overall, but the execution is still short and sloppy.  When it gets to the point we get explanation for events the issue after they occur, you know something's wrong with the editing process.  This story was obviously the first part of another 2-parter, as I'm sure we're not supposed to wait a month to find out what caught Knuckles' attention.  Still, the story seems more interesting now, and the art was pretty good.  The parallel development of Knuckles' game storyline seems to compliment well with the Chaotix' present misadventure.  It'll be interesting to see where this is going.</p>
 
@@ -91,8 +91,8 @@ Well, I've never had high expectations of Sonic back-up stories, and this tale w
   </table>
   <table border="0">
     <tr> 
-      <td><a href="http://www.sonichq.org/comics/reviews/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image11','document.Image11','http://www.sonichq.org/comics/images/graphics/reviewbbr.gif','#938383038510')"><img name="Image11" border="0" src="http://www.sonichq.org/comics/images/graphics/bluerevbb.gif" width="150" height="40"></a></td>
-      <td><a href="http://www.sonichq.org/comics/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image12','document.Image12','http://www.sonichq.org/comics/images/graphics/comixbbr.gif','#938383064380')"><img name="Image12" border="0" src="http://www.sonichq.org/comics/images/graphics/bluecomixbb.gif" width="150" height="40"></a></td>
+      <td><a href="/sonichq/comics/reviews/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image11','document.Image11','/sonichq/comics/images/graphics/reviewbbr.gif','#938383038510')"><img name="Image11" border="0" src="/sonichq/comics/images/graphics/bluerevbb.gif" width="150" height="40"></a></td>
+      <td><a href="/sonichq/comics/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('document.Image12','document.Image12','/sonichq/comics/images/graphics/comixbbr.gif','#938383064380')"><img name="Image12" border="0" src="/sonichq/comics/images/graphics/bluecomixbb.gif" width="150" height="40"></a></td>
     </tr>
   </table>
  </div>
