--- a/sonichq/comics/reviews/specials/sss4.htm
+++ b/sonichq/comics/reviews/specials/sss4.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic Super Special #4 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/specials/small/sss4.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/specials/small/sss4.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>Sonic the Hedgehog VS The Kingdom Of Acorn...Who Will Prevail?...</p>
 <p>Sonic Super Special #4: Retrurn Of The King<br>
@@ -167,7 +167,7 @@ A place that was never too far from the King--for the "Hall of
 Limbo" was in his own mind all along!  The End.
 <hr>
 
-<p><b>Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> 1/2 rings</p>
+<p><b>Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 1/2 rings</p>
 
 <p>I've seen abrupt endings, I've seen ambiguous endings, I've
 seen trick endings, but my immediate reaction was that this was a
@@ -269,7 +269,7 @@ announces their plan to install it in the war room, they jump ship;
 that's about it, really.
 <hr>
 
-<p><b>Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> rings</p>
+<p><b>Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> rings</p>
 
 <p>I counted THREE separate explanations of what happened to
 Robotnik and his mad scheme in the climax of "The Big Goodbye":
@@ -294,7 +294,7 @@ this is probably as close to "Endgame: The Director's Cut" as we're
 going to get.  It serves as a reminder of how coherent the story
 arc COULD have been.
 
-<p><b>Overall Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> 1/2 rings</p>
+<p><b>Overall Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 1/2 rings</p>
 
 
 </td>
