--- a/sonichq/comics/reviews/specials/sss5.htm
+++ b/sonichq/comics/reviews/specials/sss5.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic Super Special #5 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/specials/small/sss5.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/specials/small/sss5.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>Sonic the Hedgehog - The Early Years !!!</p>
 <p>Sonic Super Special #5: Sonic Kids<br>
@@ -158,7 +158,7 @@ right up there.  And so "Miles" becomes "Tails" and Rotor will be
 stuck with being called "Boomer" until issue #6.
 <hr>
 
-<p><b>Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> rings</p>
+<p><b>Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> rings</p>
 
 <p>Despite several unconscionable lapses (the depiction of
 Julayla being especially galling), this wasn't a bad story.  In
@@ -265,7 +265,7 @@ as Sally's hair goes back to normal and Sonic winds up his
 narrative to discover that his fan club has fallen asleep on him. Tough room.
 <hr>
 
-<p><b>Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> rings</p>
+<p><b>Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> rings</p>
 
 <p>This was a good basic Sonic story, but more important it is
 also the first Sonic story I have come across where there are
@@ -365,7 +365,7 @@ with "grasping the concept of teamwork" before the humbled Freedom
 Fighters can apologize.
 <hr>
 
-<p><b>Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> rings</p>
+<p><b>Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> rings</p>
 
 <p>As much as I've bemoaned the changing of artists in midstream
 in "The Big Goodbye," the gimmick actually WORKS in the context of
@@ -387,7 +387,7 @@ survive relatively intact.  I can see maybe one Sonic special per
 year or two given over to Sonic Kids stories.  And I'd STILL like
 to get a crack at proofreading the Sonic character bible.  Classdismissed.
 
-<p><b>Overall Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> rings</p>
+<p><b>Overall Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> rings</p>
 
 
 </td>
