--- a/sonichq/comics/reviews/specials/sss8.htm
+++ b/sonichq/comics/reviews/specials/sss8.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic Super Special #8: Sally Moon (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/specials/small/sss8.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/specials/small/sss8.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>Fighting Evil By The Moonlight, Winning Love By Daylight, Never Running From A Real Fight, She Is The One Called.......SALLY MOON ?!?!?!?! </p>
 <p>Sonic Super Special #8: Sally Moon<br>
@@ -52,7 +52,7 @@ Rolland Thierren (Reviewer)<br>
 <p>He then tells Sonic he's a kind of dimensional hall monitor, keeping everbody in their respective Zones. (Side Note: Dc and Marvel tried this Cross-Over explanation with their own co-owned character, called Access. That character was used twice since DC vs Marvel, then never again, as DC traded up for Hyper-Time, the return of the Multi-Verse concept. I wonder how long this guy'll last?) Sonic talks back, saying no-one's ever stopped him from travelling from Zone to Zone before. Zonic then responds that he's the one who sent Sonic there. He then explains that Zone Portals didn't just pop-up at random, leading Sonic to zones where he was needed by accident. He then mentions a few illustrated exemples, from Sonic # 4, #11, #19 and # 52. Apparantly, Zone Travel is anything but random chance. Sonic was unwittingly recruited by Zonic to fight whatever evil was in those Zones. But he does warn Sonic that Zone x-overs might be more frequent now that the Universal Anhillator has weakened the barrier between the dimensions. Sonic suddenly realises the scope of this, and Zonic starts to leave, saying Sonic can thank him later (Thank you? for using him? arrogant, ain't he?) As Zonic fades away, Sonic asks him why he was always chosen, and not another counterpart, and Zonic answers that our Sonic alone is Sonic Prime, the one True Sonic (Sega might argue with that), and that it is his destiny to become the most pivotal hero of all time and space. With that, Zonic fades for good, leaving Sonic flabbergasted by the revelation. He then pops out of his trance, asking why didn't HE get the girl? Honestly, that line alone makes this story worth reading (but not by much).</p></center>
 <hr>
 
-<p><u>Rating:</u> <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> 1/2 rings
+<p><u>Rating:</u> <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 1/2 rings
 
 <p>Now for my gripes: I honestly thought this story got botched, if only because it was crammed into an 8 page format. if they had taken a few more pages to tell the story (12 pages of story, not 8), then maybe it would have been satisfying. ..
 
@@ -78,7 +78,7 @@ Rolland Thierren (Reviewer)<br>
 <p>Rotor finally finds it, but has to work around the security codes to modify it. Just as he succeds in reversing the ray, Robotnik arrives and summons his Swatbots (apparantly the old models) to surround the Freedom Fighters before they can use it to reverse Sonic's condition. Sonic, though in pain all over, decides to help his friends, even if it kills him. After briefly taunt Robuttnik, he speeds towards him a maximum speed, pulling all the swatbots behind him and throwing them at Robotnik so that the bad doctor ends up buried in 'bots. Snively arrives just then, gloating over a now dead-tired and suffering-all-over Sonic, while Sally tries to figure out how to get Sniv to use the now-reversed ray on Sonic. Solution? Sally brakes out the waterworks and begs Sniv to finish off sonic with the ray (not very PC, but it's a proven tactic). Sniv, who isn't curious as to how Sally knows about the ray, agrees to do so. Of course, the ray now heals Sonic and our hero leaves with his friends, leaving an enraged Snively to smash up his ray, which is the end of Sonic's story, leaving Amy, now in infatuation mode, to ask for more stories. sonic agrees, adding that he'll try not to speed through this one. Ouch! Sonic, that one is bad, even for you.
 <hr>
 
-<p><u>Rating:</u> <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> 1/2 rings
+<p><u>Rating:</u> <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 1/2 rings
 
 <p>Comments: Well, This was a good story, actually. The style is reminicent of the early adventures of Sonic and the FFs versus Robotnik's cinematic devices, like the weather control tower and the magnabot. the story is believable and the artwork is pretty decent; in facy, I just loved the Transformers image references. It's a nice game when you try to look for them. all in all, this the best story in the special, even though that's not saying much.
 <hr>
@@ -94,7 +94,7 @@ Rolland Thierren (Reviewer)<br>
 <p>Well, after the Yagyus run off with Kamezon in tail, Liu Chi Mei and Fang start gathering up the stolen loot to bring back to the village, and invite Monkey Khan to go back to the village and enjoy a hero's welcome. M-K refuses, saying he doesn't want to ruin his own hype. Hoo boy! Can you feel the hot air from here? Let me tell you, that boy M-K is just so smug, it's not even funny anymore.
 <hr>
 
-<p><u>Rating:</u> <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> rings
+<p><u>Rating:</u> <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> rings
 
 <p>Well, that's the story. It's not what I bought that issue to read, tell you the truth. Let's talk a bit about Monkey Khan, shall we? This character, to repeat what Kedzie at The Sonic Foundation, said, is a Self-Inclusion Fan-fic character. Frank Strom invented him, and Frank Strom uses him exclusivly. This is the Sonic the Hedgehog series, Frank. We want to read about Sonic, and his supporting crew, the FFs. Monkey Khan isn't a Freedom Fighter, so he isn't part of Sonic's cast. <u>STOP WRITING ABOUT HIM!</u> When Sonic and friends come to the Dragon Kingdom, then you can use Monkey Khan. Until then, we don't want him taking up valuable Freedom Fighter space! Capice?
 <hr>
@@ -104,11 +104,11 @@ Rolland Thierren (Reviewer)<br>
 <p>When he takes a look around, he sees a glowing silhouette talking to Sonic about finding Tails, then starts thinking that the ghost brainwashed into working for him. He flies off to look for Sally, but bumps into the Ghost, who turns out to be Antoine, who sleepwalked into some foxfire bushes (foxfire bushes, poison sumac blossoms, metal eating acid producing shrubs...the wonders of Mobius flora...). The next day, the group is clearing the camp site and packing up, with Antoine grumbling all the way. Tails asks for more ghost stories, but Sonic, after seeing what happened last night, refuses. Then, when Tails rolls up his sleeping bag, discovers something: The Medallion of the Headless Gopher. A frightfull laugh is heard. The group runs away screaming, under the watchful eye of the Headles Gopher, while narrator Tails asks us to keep that story secret. Don't worry little guy. I'm trying to forget I ever read that dumb tale. 
 <hr>
 
-<p><u>Rating:</u> <img src="http://members.tripod.com/~warpsonic/ring.gif"> ring
+<p><u>Rating:</u> <img src="/sonichq/tripod/warpsonic/ring.gif"> ring
 
 <p>Well, Like I said: poor art, poor dialogue, poor plot; the episode was bad enough, but this adaptation was even worst. Somebody stop this Oliveras guy before he draws again, please! I know the Sonic series was originally aimed at the younger audiances, but that's no reason to give us art that looks like it was drawn by a retarded two-year old, kid. 
 
-<p>I rate Sonic Super Special #8 an overall of <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> / 5 rings. In all honesty, The boys and girls at Archie can do better then this. With artists like Dave Manak and Spaz and writers like Ken Penders and Karl Bollers, why did they let Oliveras draw "Ghost Busted", when anybody can see he shouldn't be allowed near a drawing board?
+<p>I rate Sonic Super Special #8 an overall of <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> / 5 rings. In all honesty, The boys and girls at Archie can do better then this. With artists like Dave Manak and Spaz and writers like Ken Penders and Karl Bollers, why did they let Oliveras draw "Ghost Busted", when anybody can see he shouldn't be allowed near a drawing board?
 
 
 
