--- a/sonichq/comics/scans/fleetway.html
+++ b/sonichq/comics/scans/fleetway.html
@@ -6,7 +6,7 @@
 <!--a:hover { color: #ffffff} -->
 </style>
 </head>
-<body bgcolor="#000000" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" background="http://www.sonichq.org/comics/images/SKLogobw.jpg" bgproperties=fixed>
+<body bgcolor="#000000" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" background="/sonichq/comics/images/SKLogobw.jpg" bgproperties=fixed>
 
 </text>
 <fontcolor="#e5e5e5">
@@ -26,7 +26,7 @@
           to Comics Scans</font></a></b></font></div>
       </td>
 <td bgcolor="#2B0000" height="28" width="200"> 
-        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="http://www.sonichq.org/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
+        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="/sonichq/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
           to Downloads</font></a></b></font></div>
       </td>
       <td bgcolor="#2B0000" height="28" width="200"> 
