--- a/sonichq/comics/scans/fleetway1-25.html
+++ b/sonichq/comics/scans/fleetway1-25.html
@@ -4,7 +4,7 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="black" background="http://www.sonichq.org/images/backgrounds/tailsnamy.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
+<body bgcolor="black" background="/sonichq/images/backgrounds/tailsnamy.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
 
 </text>
 <fontcolor="#e5e5e5">
@@ -23,7 +23,7 @@
           to Comics Scans</font></a></b></font></div>
       </td>
 <td bgcolor="#1D002B" height="28" width="200"> 
-        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="http://www.sonichq.org/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
+        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="/sonichq/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
           to Downloads</font></a></b></font></div>
       </td>
       <td bgcolor="#1D002B" height="28" width="200"> 
@@ -41,11 +41,11 @@
         <div align="center">
           <table border=0 cellspacing=0 cellpadding=0 width="100%">
             <tr>
-              <td width=19><img src="http://www.sonichq.org/topleft.gif" width=19></td>
+              <td width=19><img src="/sonichq/topleft.gif" width=19></td>
               <td bgcolor=black width=100%> 
                 <div align="right"><font face="Arial, Helvetica, sans-serif" size="4" color="#DDC2FF"><b>Cover Gallery #1-25</b></font></div>
               </td>
-              <td width=19><img src="http://www.sonichq.org/topright.gif" width=19></td>
+              <td width=19><img src="/sonichq/topright.gif" width=19></td>
             </tr></table></td></tr>
           </table>
 <TABLE ALIGN=CENTER BORDER=2 CELLSPACING=3 CELLPADDING=3 width=70% bgcolor=black>
@@ -71,28 +71,28 @@
 <TR width=50%>
 <TD>
 <center>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc01.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/01.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc01.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/01.jpg" 
 alt="Sonic The Comic #1"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc02.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/02.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc02.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/02.jpg" 
 alt="Sonic The Comic #2"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc03.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/03.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc03.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/03.jpg" 
 alt="Sonic The Comic #3"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc04.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/04.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc04.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/04.jpg" 
 alt="Sonic The Comic #4"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc05.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/05.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc05.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/05.jpg" 
 alt="Sonic The Comic #5"></A>
 </TD>
 </TR>
@@ -118,28 +118,28 @@ alt="Sonic The Comic #5"></A>
 <TR width=50%>
 <TD>
 <center>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc06.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/06.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc06.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/06.jpg" 
 alt="Sonic The Comic #6"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc07.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/07.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc07.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/07.jpg" 
 alt="Sonic The Comic #7"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc08.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/08.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc08.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/08.jpg" 
 alt="Sonic The Comic #8"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc09.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/09.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc09.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/09.jpg" 
 alt="Sonic The Comic #9"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc10.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/10.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc10.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/10.jpg" 
 alt="Sonic The Comic #10"></A>
 </TD>
 </TR>
@@ -165,28 +165,28 @@ alt="Sonic The Comic #10"></A>
 <TR width=50%>
 <TD>
 <center>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc11.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/11.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc11.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/11.jpg" 
 alt="Sonic The Comic #11"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc12.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/12.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc12.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/12.jpg" 
 alt="Sonic The Comic #12"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc13.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/13.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc13.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/13.jpg" 
 alt="Sonic The Comic #13"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc14.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/14.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc14.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/14.jpg" 
 alt="Sonic The Comic #14"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc15.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/15.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc15.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/15.jpg" 
 alt="Sonic The Comic #15"></A>
 </TD>
 </TR>
@@ -212,28 +212,28 @@ alt="Sonic The Comic #15"></A>
 <TR width=50%>
 <TD>
 <center>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc16.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/16.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc16.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/16.jpg" 
 alt="Sonic The Comic #16"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc17.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/17.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc17.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/17.jpg" 
 alt="Sonic The Comic #17"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc18.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/18.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc18.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/18.jpg" 
 alt="Sonic The Comic #18"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc19.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/19.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc19.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/19.jpg" 
 alt="Sonic The Comic #19"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc20.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/20.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc20.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/20.jpg" 
 alt="Sonic The Comic #20"></A>
 </TD>
 </TR>
@@ -259,28 +259,28 @@ alt="Sonic The Comic #20"></A>
 <TR width=50%>
 <TD>
 <center>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc21.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/21.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc21.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/21.jpg" 
 alt="Sonic The Comic #21"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc22.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/22.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc22.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/22.jpg" 
 alt="Sonic The Comic #22"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc23.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/23.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc23.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/23.jpg" 
 alt="Sonic The Comic #23"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc24.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/24.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc24.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/24.jpg" 
 alt="Sonic The Comic #24"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc25.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/25.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc25.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/25.jpg" 
 alt="Sonic The Comic #25"></A>
 </TD>
 </TR>
