--- a/sonichq/comics/scans/knuckles1-25.html
+++ b/sonichq/comics/scans/knuckles1-25.html
@@ -4,7 +4,7 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="black" background="http://www.sonichq.org/comics/images/knucklesbg.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
+<body bgcolor="black" background="/sonichq/comics/images/knucklesbg.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
 
 </text>
 <fontcolor="#e5e5e5">
@@ -22,7 +22,7 @@
           to Comics Scans</font></a></b></font></div>
       </td>
 <td bgcolor="#990000" height="28" width="200"> 
-        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="http://www.sonichq.org/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
+        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="/sonichq/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
           to Downloads</font></a></b></font></div>
       </td>
       <td bgcolor="#990000" height="28" width="200"> 
@@ -40,11 +40,11 @@
         <div align="center">
           <table border=0 cellspacing=0 cellpadding=0 width="100%">
             <tr>
-              <td width=19><img src="http://www.sonichq.org/topleft.gif" width=19></td>
+              <td width=19><img src="/sonichq/topleft.gif" width=19></td>
               <td bgcolor=black width=100%> 
                 <div align="right"><font face="Arial, Helvetica, sans-serif" size="4" color="#ffcccc"><b>Cover Gallery #1-33</b></font></div>
               </td>
-              <td width=19><img src="http://www.sonichq.org/topright.gif" width=19></td>
+              <td width=19><img src="/sonichq/topright.gif" width=19></td>
             </tr></table></td></tr>
           </table>
 <TABLE ALIGN=CENTER BORDER=2 CELLSPACING=3 CELLPADDING=3 width=70% bgcolor=black>
@@ -70,28 +70,28 @@
 <TR>
 <TD><center>
 <center>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/snk1.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/snk1.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/snk1.jpg">
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/snk1.jpg" 
 alt="Sonic's Friendly Nemesis: Knuckles #1 (Miniseries)" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/snk2.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/snk2.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/snk2.jpg">
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/snk2.jpg" 
 alt="Sonic's Friendly Nemesis: Knuckles #2 (Miniseries)" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/snk3.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/snk3.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/snk3.jpg">
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/snk3.jpg" 
 alt="Sonic's Friendly Nemesis: Knuckles #3 (Miniseries)" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles1.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles1.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles1.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles1.jpg" 
 alt="Knuckles #1" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles2.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles2.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles2.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles2.jpg" 
 alt="Knuckles #2" width=134 height=208></A>
 </TD>
 
@@ -115,28 +115,28 @@ alt="Knuckles #2" width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles3.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles3.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles3.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles3.jpg" 
 alt="Knuckles The Echidna #3"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles4.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles4.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles4.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles4.jpg" 
 alt="Knuckles The Echidna #4"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles5.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles5.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles5.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles5.jpg" 
 alt="Knuckles The Echidna #5"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles6.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles6.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles6.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles6.jpg" 
 alt="Knuckles The Echidna #6"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles7.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles7.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles7.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles7.jpg" 
 alt="Knuckles The Echidna #7"width=134 height=208></A>
 </TD>
 
@@ -160,28 +160,28 @@ alt="Knuckles The Echidna #7"width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles8.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles8.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles8.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles8.jpg" 
 alt="Knuckles The Echidna #8"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles9.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles9.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles9.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles9.jpg" 
 alt="Knuckles The Echidna #9"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles10.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles10.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles10.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles10.jpg" 
 alt="Knuckles The Echidna #10"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles11.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles11.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles11.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles11.jpg" 
 alt="Knuckles The Echidna #11"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles12.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles12.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles12.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles12.jpg" 
 alt="Knuckles The Echidna #12"width=134 height=208></A>
 </TD>
 
@@ -205,28 +205,28 @@ alt="Knuckles The Echidna #12"width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles13.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles13.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles13.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles13.jpg" 
 alt="Knuckles The Echidna #13"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles14.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles14.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles14.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles14.jpg" 
 alt="Knuckles The Echidna #14"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles15.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles15.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles15.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles15.jpg" 
 alt="Knuckles The Echidna #15"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles16.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles16.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles16.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles16.jpg" 
 alt="Knuckles The Echidna #16"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles17.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles17.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles17.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles17.jpg" 
 alt="Knuckles The Echidna #17"width=134 height=208></A>
 </TD>
 
@@ -250,28 +250,28 @@ alt="Knuckles The Echidna #17"width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles18.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles18.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles18.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles18.jpg" 
 alt="Knuckles The Echidna #18"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles19.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles19.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles19.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles19.jpg" 
 alt="Knuckles The Echidna #19"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles20.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles20.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles20.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles20.jpg" 
 alt="Knuckles The Echidna #20"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles21.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles21.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles21.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles21.jpg" 
 alt="Knuckles The Echidna #21"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles22.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles22.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles22.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles22.jpg" 
 alt="Knuckles The Echidna #22"width=134 height=208></A>
 </TD>
 
@@ -295,28 +295,28 @@ alt="Knuckles The Echidna #22"width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles23.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles23.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles23.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles23.jpg" 
 alt="Knuckles The Echidna #23"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles24.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles24.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles24.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles24.jpg" 
 alt="Knuckles The Echidna #24"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles25a.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles25a.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles25a.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles25a.jpg" 
 alt="Knuckles The Echidna #25"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles26.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles26.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles26.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles26.jpg" 
 alt="Knuckles The Echidna #26"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles27.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles27.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles27.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles27.jpg" 
 alt="Knuckles The Echidna #27"width=134 height=208></A>
 </TD>
 
@@ -340,28 +340,28 @@ alt="Knuckles The Echidna #27"width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles28.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles28.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles28.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles28.jpg" 
 alt="Knuckles The Echidna #28"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles29.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles29.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles29.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles29.jpg" 
 alt="Knuckles The Echidna #29"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles30.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles30.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles30.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles30.jpg" 
 alt="Knuckles The Echidna #30"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles31.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles31.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles31.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles31.jpg" 
 alt="Knuckles The Echidna #31"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles32.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles32.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles32.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles32.jpg" 
 alt="Knuckles The Echidna #32"width=134 height=208></A>
 </TD>
 
@@ -378,8 +378,8 @@ alt="Knuckles The Echidna #32"width=134 height=208></A>
 <TR>
 
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/knuckles/large/knuckles33.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/knuckles/thumbnails/knuckles33.jpg" 
+<A HREF="/sonichq/comics/images/covers/knuckles/large/knuckles33.jpg">
+<IMG SRC="/sonichq/comics/images/covers/knuckles/thumbnails/knuckles33.jpg" 
 alt="Knuckles The Echidna #33 (Cancelled)"width=134 height=208></A>
 </TD>
 
