--- a/sonichq/comics/scans/miniseries.html
+++ b/sonichq/comics/scans/miniseries.html
@@ -4,7 +4,7 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="black" background="http://www.sonichq.org/images/backgrounds/salbg.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
+<body bgcolor="black" background="/sonichq/images/backgrounds/salbg.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
 
 </text>
 <fontcolor="#e5e5e5">
@@ -21,7 +21,7 @@
           to Comics Scans</font></a></b></font></div>
       </td>
 <td bgcolor="#663333" height="28" width="200"> 
-        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="http://www.sonichq.org/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
+        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="/sonichq/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
           to Downloads</font></a></b></font></div>
       </td>
       <td bgcolor="#663333" height="28" width="200"> 
@@ -39,11 +39,11 @@
         <div align="center">
           <table border=0 cellspacing=0 cellpadding=0 width="100%">
             <tr>
-              <td width=19><img src="http://www.sonichq.org/topleft.gif" width=19></td>
+              <td width=19><img src="/sonichq/topleft.gif" width=19></td>
               <td bgcolor=black width=100%> 
                 <div align="right"><font face="Arial, Helvetica, sans-serif" size="4" color="#ffffcc"><b>Miniseries & Giveaway Cover Gallery</b></font></div>
               </td>
-              <td width=19><img src="http://www.sonichq.org/topright.gif" width=19></td>
+              <td width=19><img src="/sonichq/topright.gif" width=19></td>
             </tr></table></td></tr>
           </table>
 <TABLE ALIGN=CENTER BORDER=2 CELLSPACING=3 CELLPADDING=3 width=70% bgcolor=black>
@@ -69,28 +69,28 @@
 <TR>
 <TD><center>
 <center>
-<A HREF="http://www.sonichq.org/comics/scans/images/sthpromo.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/scans/images/promosm.jpg" 
+<A HREF="/sonichq/comics/scans/images/sthpromo.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/scans/images/promosm.jpg" 
 alt="Sonic The Hedgehog: Sega Promo"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/sms0.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/sms0.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/sms0.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/sms0.jpg" 
 alt="Sonic The Hedgehog #0 And #1/4"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/sms1.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/sms1.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/sms1.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/sms1.jpg" 
 alt="Sonic The Hedgehog #1 (Miniseries)"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/sms2.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/sms2.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/sms2.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/sms2.jpg" 
 alt="Sonic The Hedgehog #2 (Miniseries)"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/sms3.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/sms3.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/sms3.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/sms3.jpg" 
 alt="Sonic The Hedgehog #3 (Miniseries)"width=134 height=208></A>
 </TD>
 </TR>
@@ -115,28 +115,28 @@ alt="Sonic The Hedgehog #3 (Miniseries)"width=134 height=208></A>
 
 <TR ALIGN=CENTER>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/ps1.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/ps1.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/ps1.jpg">
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/ps1.jpg" 
 alt="Princess Sally #1 (Miniseries)"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/ps2.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/ps2.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/ps2.jpg">
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/ps2.jpg" 
 alt="Princess Sally #2 (Miniseries)"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/ps2.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/ps3.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/ps2.jpg">
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/ps3.jpg" 
 alt="Princess Sally #3 (Miniseries)"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/tls.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/tls1.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/tls.jpg">
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/tls1.jpg" 
 alt="Tails The Fox #1 (Miniseries)" width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/tls2.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/tls2.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/tls2.jpg">
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/tls2.jpg" 
 alt="Tails The Fox #2 (Miniseries)" width=134 height=208></A>
 </TD>
 </TR>
@@ -161,29 +161,29 @@ alt="Tails The Fox #2 (Miniseries)" width=134 height=208></A>
 
 <TR>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/tls3.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/tls3.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/tls3.jpg">
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/tls3.jpg" 
 alt="Tails The Fox #3 (Miniseries)" width=134 height=208></A>
 </TD>
 <TD><center>
 <center>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/snk1.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/snk1.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/snk1.jpg">
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/snk1.jpg" 
 alt="Sonic's Friendly Nemesis: Knuckles #1 (Miniseries)" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/snk2.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/snk2.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/snk2.jpg">
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/snk2.jpg" 
 alt="Sonic's Friendly Nemesis: Knuckles #2 (Miniseries)" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/snk3.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/snk3.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/snk3.jpg">
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/snk3.jpg" 
 alt="Sonic's Friendly Nemesis: Knuckles #3 (Miniseries)" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/sds3.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/sds3.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/sds3.jpg">
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/sds3.jpg" 
 alt="Sonic Quest: The Death Egg Saga #1" width=134 height=208></A>
 </TD>
 </TR>
@@ -208,29 +208,29 @@ alt="Sonic Quest: The Death Egg Saga #1" width=134 height=208></A>
 
 <TR>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/sds3.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/sds3.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/sds3.jpg">
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/sds3.jpg" 
 alt="Sonic Quest: The Death Egg Saga #2" width=134 height=208></A>
 </TD>
 <TD><center>
 <center>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/sds1.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/sds1.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/sds1.jpg">
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/sds1.jpg" 
 alt="Sonic Quest: The Death Egg Saga #3" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/crossovers/large/halloween.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/crossovers/thumbnails/halloween.jpg" 
+<A HREF="/sonichq/comics/images/covers/crossovers/large/halloween.jpg">
+<IMG SRC="/sonichq/comics/images/covers/crossovers/thumbnails/halloween.jpg" 
 alt="Sonic And Knuckles: A Halloween Tale" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/giveaways/large/csn.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/giveaways/thumbnails/csn.jpg" 
+<A HREF="/sonichq/comics/images/covers/giveaways/large/csn.jpg">
+<IMG SRC="/sonichq/comics/images/covers/giveaways/thumbnails/csn.jpg" 
 alt="CSN Giveaway: Turnabout Heroes" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/giveaways/large/hsuandchan.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/giveaways/thumbnails/hsuandchan.jpg" 
+<A HREF="/sonichq/comics/images/covers/giveaways/large/hsuandchan.jpg">
+<IMG SRC="/sonichq/comics/images/covers/giveaways/thumbnails/hsuandchan.jpg" 
 alt="EGM: Hsu And Chan" width=134 height=208></A>
 </TD>
 </TR>
