--- a/sonichq/comics/scans/sonic1-25.html
+++ b/sonichq/comics/scans/sonic1-25.html
@@ -4,7 +4,7 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="black" background="http://www.sonichq.org/comics/images/sonicbg.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
+<body bgcolor="black" background="/sonichq/comics/images/sonicbg.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
 
 </text>
 <fontcolor="#e5e5e5">
@@ -24,7 +24,7 @@
           to Comics Scans</font></a></b></font></div>
       </td>
 <td bgcolor="#000099" height="28" width="200"> 
-        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="http://www.sonichq.org/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
+        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="/sonichq/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
           to Downloads</font></a></b></font></div>
       </td>
       <td bgcolor="#000099" height="28" width="200"> 
@@ -42,11 +42,11 @@
         <div align="center">
           <table border=0 cellspacing=0 cellpadding=0 width="100%">
             <tr>
-              <td width=19><img src="http://www.sonichq.org/topleft.gif" width=19></td>
+              <td width=19><img src="/sonichq/topleft.gif" width=19></td>
               <td bgcolor=black width=100%> 
                 <div align="right"><font face="Arial, Helvetica, sans-serif" size="4" color="#FFDC51"width=134 height=208><b>Cover Gallery #1-25</b></font></div>
               </td>
-              <td width=19><img src="http://www.sonichq.org/topright.gif" width=19></td>
+              <td width=19><img src="/sonichq/topright.gif" width=19></td>
             </tr></table></td></tr>
           </table>
 <TABLE ALIGN=CENTER BORDER=2 CELLSPACING=3 CELLPADDING=3 width=70% bgcolor=black>
@@ -72,28 +72,28 @@
 <TR>
 <TD><center>
 <center>
-<A HREF="http://www.sonichq.org/comics/scans/images/sthpromo.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/scans/images/promosm.jpg" 
+<A HREF="/sonichq/comics/scans/images/sthpromo.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/scans/images/promosm.jpg" 
 alt="Sonic The Hedgehog: Sega Promo"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/sms0.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/sms0.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/sms0.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/sms0.jpg" 
 alt="Sonic The Hedgehog #0 And #1/4"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/sms1.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/sms1.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/sms1.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/sms1.jpg" 
 alt="Sonic The Hedgehog #1 (Miniseries)"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/sms2.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/sms2.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/sms2.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/sms2.jpg" 
 alt="Sonic The Hedgehog #2 (Miniseries)"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/mini-series/large/sms3.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/mini-series/thumbnails/sms3.jpg" 
+<A HREF="/sonichq/comics/images/covers/mini-series/large/sms3.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/mini-series/thumbnails/sms3.jpg" 
 alt="Sonic The Hedgehog #3 (Miniseries)"width=134 height=208></A>
 </TD>
 </TR>
@@ -118,28 +118,28 @@ alt="Sonic The Hedgehog #3 (Miniseries)"width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic1.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic1.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic1.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic1.jpg" 
 alt="Sonic The Hedgehog #1"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic2.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic2.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic2.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic2.jpg" 
 alt="Sonic The Hedgehog #2"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic3.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic3.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic3.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic3.jpg" 
 alt="Sonic The Hedgehog #3"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic4.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic4.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic4.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic4.jpg" 
 alt="Sonic The Hedgehog #4"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic5.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic5.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic5.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic5.jpg" 
 alt="Sonic The Hedgehog #5"width=134 height=208></A>
 </TD>
 </TR>
@@ -164,28 +164,28 @@ alt="Sonic The Hedgehog #5"width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic6.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic6.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic6.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic6.jpg" 
 alt="Sonic The Hedgehog #6"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic7.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic7.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic7.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic7.jpg" 
 alt="Sonic The Hedgehog #7"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic8.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic8.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic8.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic8.jpg" 
 alt="Sonic The Hedgehog #8"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic9.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic9.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic9.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic9.jpg" 
 alt="Sonic The Hedgehog #9"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic10.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic10.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic10.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic10.jpg" 
 alt="Sonic The Hedgehog #10"width=134 height=208></A>
 </TD>
 </TR>
@@ -210,28 +210,28 @@ alt="Sonic The Hedgehog #10"width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic11.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic11.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic11.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic11.jpg" 
 alt="Sonic The Hedgehog #11"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic12.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic12.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic12.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic12.jpg" 
 alt="Sonic The Hedgehog #12"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic13.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic13.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic13.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic13.jpg" 
 alt="Sonic The Hedgehog #13"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic14.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic14.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic14.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic14.jpg" 
 alt="Sonic The Hedgehog #14"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic15.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic15.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic15.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic15.jpg" 
 alt="Sonic The Hedgehog #15"width=134 height=208></A>
 </TD>
 </TR>
@@ -256,28 +256,28 @@ alt="Sonic The Hedgehog #15"width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic16.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic16.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic16.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic16.jpg" 
 alt="Sonic The Hedgehog #16"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic17.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic17.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic17.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic17.jpg" 
 alt="Sonic The Hedgehog #17"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic18.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic18.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic18.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic18.jpg" 
 alt="Sonic The Hedgehog #18"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic19.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic19.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic19.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic19.jpg" 
 alt="Sonic The Hedgehog #19"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic20.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic20.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic20.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic20.jpg" 
 alt="Sonic The Hedgehog #20"width=134 height=208></A>
 </TD>
 </TR>
@@ -302,28 +302,28 @@ alt="Sonic The Hedgehog #20"width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic21.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic21.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic21.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic21.jpg" 
 alt="Sonic The Hedgehog #21"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic22.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic22.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic22.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic22.jpg" 
 alt="Sonic The Hedgehog #22"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic23.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic23.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic23.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic23.jpg" 
 alt="Sonic The Hedgehog #23"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic24.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic24.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic24.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic24.jpg" 
 alt="Sonic The Hedgehog #24"width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic25.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic25.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic25.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic25.jpg" 
 alt="Sonic The Hedgehog #25"width=134 height=208></A>
 </TD>
 
