--- a/sonichq/comics/scans/sonic51-75.html
+++ b/sonichq/comics/scans/sonic51-75.html
@@ -4,7 +4,7 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="black" background="http://www.sonichq.org/comics/images/sonicbg.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
+<body bgcolor="black" background="/sonichq/comics/images/sonicbg.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
 
 </text>
 <fontcolor="#e5e5e5">
@@ -25,7 +25,7 @@
           to Comics Scans</font></a></b></font></div>
       </td>
 <td bgcolor="#000099" height="28" width="200"> 
-        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="http://www.sonichq.org/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
+        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="/sonichq/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
           to Downloads</font></a></b></font></div>
       </td>
       <td bgcolor="#000099" height="28" width="200"> 
@@ -43,11 +43,11 @@
         <div align="center"width=134 height=208>
           <table border=0 cellspacing=0 cellpadding=0 width="100%">
             <tr>
-              <td width=19><img src="http://www.sonichq.org/topleft.gif" width=19></td>
+              <td width=19><img src="/sonichq/topleft.gif" width=19></td>
               <td bgcolor=black width=100%> 
                 <div align="right"><font face="Arial, Helvetica, sans-serif" size="4" color="#FFDC51"width=134 height=208><b>Cover Gallery #51-75</b></font></div>
               </td>
-              <td width=19><img src="http://www.sonichq.org/topright.gif" width=19></td>
+              <td width=19><img src="/sonichq/topright.gif" width=19></td>
             </tr></table></td></tr>
           </table>
 <TABLE ALIGN=CENTER BORDER=2 CELLSPACING=3 CELLPADDING=3 width=70% bgcolor=black>
@@ -72,28 +72,28 @@
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic51.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic51.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic51.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic51.jpg" 
 alt="Sonic The Hedgehog #51" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic52.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic52.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic52.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic52.jpg" 
 alt="Sonic The Hedgehog #52" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic53.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic53.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic53.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic53.jpg" 
 alt="Sonic The Hedgehog #53" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic54.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic54.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic54.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic54.jpg" 
 alt="Sonic The Hedgehog #54" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic55.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic55.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic55.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic55.jpg" 
 alt="Sonic The Hedgehog #55" width=134 height=208></A>
 </TD>
 
@@ -117,28 +117,28 @@ alt="Sonic The Hedgehog #55" width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic56.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic56.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic56.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic56.jpg" 
 alt="Sonic The Hedgehog #56" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic57.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic57.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic57.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic57.jpg" 
 alt="Sonic The Hedgehog #57" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic58.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic58.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic58.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic58.jpg" 
 alt="Sonic The Hedgehog #58" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic59.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic59.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic59.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic59.jpg" 
 alt="Sonic The Hedgehog #59" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic60.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic60.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic60.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic60.jpg" 
 alt="Sonic The Hedgehog #60" width=134 height=208></A>
 </TD>
 
@@ -162,28 +162,28 @@ alt="Sonic The Hedgehog #60" width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic61.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic61.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic61.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic61.jpg" 
 alt="Sonic The Hedgehog #61" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic62.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic62.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic62.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic62.jpg" 
 alt="Sonic The Hedgehog #62" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic63.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic63.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic63.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic63.jpg" 
 alt="Sonic The Hedgehog #63" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic64.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic64.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic64.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic64.jpg" 
 alt="Sonic The Hedgehog #64" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic65.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic65.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic65.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic65.jpg" 
 alt="Sonic The Hedgehog #65" width=134 height=208></A>
 </TD>
 
@@ -207,28 +207,28 @@ alt="Sonic The Hedgehog #65" width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic66.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic66.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic66.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic66.jpg" 
 alt="Sonic The Hedgehog #66" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic67.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic67.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic67.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic67.jpg" 
 alt="Sonic The Hedgehog #67" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic68.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic68.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic68.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic68.jpg" 
 alt="Sonic The Hedgehog #68" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic69.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic69.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic69.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic69.jpg" 
 alt="Sonic The Hedgehog #69" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic70.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic70.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic70.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic70.jpg" 
 alt="Sonic The Hedgehog #70" width=134 height=208></A>
 </TD>
 
@@ -252,28 +252,28 @@ alt="Sonic The Hedgehog #70" width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic71.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic71.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic71.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic71.jpg" 
 alt="Sonic The Hedgehog #71" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic72.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic72.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic72.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic72.jpg" 
 alt="Sonic The Hedgehog #72" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic73.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic73.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic73.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic73.jpg" 
 alt="Sonic The Hedgehog #73" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic74.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic74.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic74.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic74.jpg" 
 alt="Sonic The Hedgehog #74" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic75.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic75.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic75.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic75.jpg" 
 alt="Sonic The Hedgehog #75" width=134 height=208></A>
 </TD>
 
