--- a/sonichq/comics/scans/sonic76-100.html
+++ b/sonichq/comics/scans/sonic76-100.html
@@ -4,7 +4,7 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="black" background="http://www.sonichq.org/comics/images/sonicbg.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
+<body bgcolor="black" background="/sonichq/comics/images/sonicbg.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
 
 </text>
 <fontcolor="#e5e5e5">
@@ -25,7 +25,7 @@
           to Comics Scans</font></a></b></font></div>
       </td>
 <td bgcolor="#000099" height="28" width="200"> 
-        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="http://www.sonichq.org/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
+        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="/sonichq/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
           to Downloads</font></a></b></font></div>
       </td>
       <td bgcolor="#000099" height="28" width="200"> 
@@ -43,11 +43,11 @@
         <div align="center"width=134 height=208>
           <table border=0 cellspacing=0 cellpadding=0 width="100%">
             <tr>
-              <td width=19><img src="http://www.sonichq.org/topleft.gif" width=19></td>
+              <td width=19><img src="/sonichq/topleft.gif" width=19></td>
               <td bgcolor=black width=100%> 
                 <div align="right"><font face="Arial, Helvetica, sans-serif" size="4" color="#FFDC51"width=134 height=208><b>Cover Gallery #76-100</b></font></div>
               </td>
-              <td width=19><img src="http://www.sonichq.org/topright.gif" width=19></td>
+              <td width=19><img src="/sonichq/topright.gif" width=19></td>
             </tr></table></td></tr>
           </table>
 <TABLE ALIGN=CENTER BORDER=2 CELLSPACING=3 CELLPADDING=3 width=70% bgcolor=black>
@@ -72,28 +72,28 @@
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic76.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic76.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic76.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic76.jpg" 
 alt="Sonic The Hedgehog #76" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic77.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic77.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic77.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic77.jpg" 
 alt="Sonic The Hedgehog #77" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic78.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic78.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic78.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic78.jpg" 
 alt="Sonic The Hedgehog #78" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic79.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic79.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic79.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic79.jpg" 
 alt="Sonic The Hedgehog #79" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic80.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic80.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic80.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic80.jpg" 
 alt="Sonic The Hedgehog #80" width=134 height=208></A>
 </TD>
 
@@ -117,28 +117,28 @@ alt="Sonic The Hedgehog #80" width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic81.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic81.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic81.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic81.jpg" 
 alt="Sonic The Hedgehog #81" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic82.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic82.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic82.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic82.jpg" 
 alt="Sonic The Hedgehog #82" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic83.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic83.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic83.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic83.jpg" 
 alt="Sonic The Hedgehog #83" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic84.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic84.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic84.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic84.jpg" 
 alt="Sonic The Hedgehog #84" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic85.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic85.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic85.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic85.jpg" 
 alt="Sonic The Hedgehog #85" width=134 height=208></A>
 </TD>
 
@@ -162,28 +162,28 @@ alt="Sonic The Hedgehog #85" width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic86.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic86.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic86.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic86.jpg" 
 alt="Sonic The Hedgehog #86" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic87.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic87.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic87.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic87.jpg" 
 alt="Sonic The Hedgehog #87" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic88.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic88.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic88.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic88.jpg" 
 alt="Sonic The Hedgehog #88" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic89.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic89.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic89.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic89.jpg" 
 alt="Sonic The Hedgehog #89" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic90.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic90.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic90.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic90.jpg" 
 alt="Sonic The Hedgehog #90" width=134 height=208></A>
 </TD>
 
@@ -208,28 +208,28 @@ alt="Sonic The Hedgehog #90" width=134 height=208></A>
 
 <TR>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic91.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic91.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic91.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic91.jpg" 
 alt="Sonic The Hedgehog #91" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic92.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic92.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic92.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic92.jpg" 
 alt="Sonic The Hedgehog #92" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic93.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic93.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic93.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic93.jpg" 
 alt="Sonic The Hedgehog #93" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic94.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/large/sonic94.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic94.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/large/sonic94.jpg" 
 alt="Sonic The Hedgehog #94" width=134 height=208></A>
 </TD>
 <TD><center>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/nc.jpg" width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/nc.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/nc.jpg" width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/nc.jpg" 
 alt="Sonic The Hedgehog #95" width=134 height=208></A>
 </TD>
 
