--- a/sonichq/comics/scans/triple.html
+++ b/sonichq/comics/scans/triple.html
@@ -4,7 +4,7 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="black" background="http://www.sonichq.org/images/backgrounds/hyperknuckles.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
+<body bgcolor="black" background="/sonichq/images/backgrounds/hyperknuckles.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
 
 </text>
 <fontcolor="#e5e5e5">
@@ -22,7 +22,7 @@
           to Comics Scans</font></a></b></font></div>
       </td>
 <td bgcolor="#001D2B" height="28" width="200"> 
-        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="http://www.sonichq.org/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
+        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="/sonichq/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
           to Downloads</font></a></b></font></div>
       </td>
       <td bgcolor="#001D2B" height="28" width="200"> 
@@ -40,11 +40,11 @@
         <div align="center">
           <table border=0 cellspacing=0 cellpadding=0 width="100%">
             <tr>
-              <td width=19><img src="http://www.sonichq.org/topleft.gif" width=19></td>
+              <td width=19><img src="/sonichq/topleft.gif" width=19></td>
               <td bgcolor=black width=100%> 
                 <div align="right"><font face="Arial, Helvetica, sans-serif" size="4" color="#ffcccc"><b>Collage Cover Gallery - Knuckles</b></font></div>
               </td>
-              <td width=19><img src="http://www.sonichq.org/topright.gif" width=19></td>
+              <td width=19><img src="/sonichq/topright.gif" width=19></td>
             </tr>
           </table>
 <TABLE ALIGN=CENTER BORDER=2 CELLSPACING=3 CELLPADDING=3 width=50% bgcolor=black>
@@ -59,7 +59,7 @@
 <TR>
 <TD><center>
 <center>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/collages/thumbnails/darklegion.jpg" 
+<IMG SRC="/sonichq/comics/images/covers/collages/thumbnails/darklegion.jpg" 
 alt="Knuckles #1-3: The Dark Legion"></A>
 </TD>
 </TR>
@@ -74,7 +74,7 @@ alt="Knuckles #1-3: The Dark Legion"></A>
 <TR>
 <TD><center>
 <center>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/collages/thumbnails/lostparadise.jpg" 
+<IMG SRC="/sonichq/comics/images/covers/collages/thumbnails/lostparadise.jpg" 
 alt="Knuckles #4-6: Lost Paradise"></A>
 </TD>
 </TR>
@@ -89,7 +89,7 @@ alt="Knuckles #4-6: Lost Paradise"></A>
 <TR>
 <TD><center>
 <center>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/collages/thumbnails/darkvengeance.jpg" 
+<IMG SRC="/sonichq/comics/images/covers/collages/thumbnails/darkvengeance.jpg" 
 alt="Knuckles #7-9: Dark Vengeance"></A>
 </TD>
 </TR>
@@ -103,7 +103,7 @@ alt="Knuckles #7-9: Dark Vengeance"></A>
 <TR>
 <TD><center>
 <center>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/collages/thumbnails/forgottentribe.jpg" 
+<IMG SRC="/sonichq/comics/images/covers/collages/thumbnails/forgottentribe.jpg" 
 alt="Knuckles #10-12: The Forgotten Tribe"></A>
 </TD>
 </TR>
@@ -117,7 +117,7 @@ alt="Knuckles #10-12: The Forgotten Tribe"></A>
 <TR>
 <TD><center>
 <center>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/collages/thumbnails/chaotixcaper.jpg" 
+<IMG SRC="/sonichq/comics/images/covers/collages/thumbnails/chaotixcaper.jpg" 
 alt="Knuckles #13-15: The Chaotix Caper"></A>
 </TD>
 </TR>
@@ -132,7 +132,7 @@ alt="Knuckles #13-15: The Chaotix Caper"></A>
 <TD><center>
 <center>
 
-<IMG SRC="http://www.sonichq.org/comics/images/covers/collages/thumbnails/deepcover.jpg" 
+<IMG SRC="/sonichq/comics/images/covers/collages/thumbnails/deepcover.jpg" 
 alt="Knuckles #1-3: Deep Cover"></A>
 </TD>
 </TR>
@@ -147,7 +147,7 @@ alt="Knuckles #1-3: Deep Cover"></A>
 <TD><center>
 <center>
 
-<IMG SRC="http://www.sonichq.org/comics/images/covers/collages/thumbnails/forbiddenzone.jpg" 
+<IMG SRC="/sonichq/comics/images/covers/collages/thumbnails/forbiddenzone.jpg" 
 alt="Knuckles #19-21: The Forbidden Zone"></A>
 </TD>
 </TR>
@@ -162,7 +162,7 @@ alt="Knuckles #19-21: The Forbidden Zone"></A>
 <TD><center>
 <center>
 
-<IMG SRC="http://www.sonichq.org/comics/images/covers/collages/thumbnails/darkalliance.jpg" 
+<IMG SRC="/sonichq/comics/images/covers/collages/thumbnails/darkalliance.jpg" 
 alt="Knuckles #22-24: Dark Alliance"></A>
 </TD>
 </TR>
@@ -177,7 +177,7 @@ alt="Knuckles #22-24: Dark Alliance"></A>
 <TD><center>
 <center>
 
-<IMG SRC="http://www.sonichq.org/comics/images/covers/collages/thumbnails/firstdate.jpg" 
+<IMG SRC="/sonichq/comics/images/covers/collages/thumbnails/firstdate.jpg" 
 alt="Knuckles #26-28: The First Date!"></A>
 </TD>
 </TR>
@@ -192,7 +192,7 @@ alt="Knuckles #26-28: The First Date!"></A>
 <TD><center>
 <center>
 
-<IMG SRC="http://www.sonichq.org/comics/images/covers/collages/thumbnails/kingofthehill.jpg" 
+<IMG SRC="/sonichq/comics/images/covers/collages/thumbnails/kingofthehill.jpg" 
 alt="Knuckles #30-32: King Of The Hill"></A>
 </TD>
 </TR>
