--- a/sonichq/comics/scans/triple2.html
+++ b/sonichq/comics/scans/triple2.html
@@ -4,7 +4,7 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="black" background="http://www.sonichq.org/images/backgrounds/hyperknuckles.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
+<body bgcolor="black" background="/sonichq/images/backgrounds/hyperknuckles.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
 
 </text>
 <fontcolor="#e5e5e5">
@@ -22,7 +22,7 @@
           to Comics Scans</font></a></b></font></div>
       </td>
 <td bgcolor="#001D2B" height="28" width="200"> 
-        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="http://www.sonichq.org/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
+        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="/sonichq/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
           to Downloads</font></a></b></font></div>
       </td>
       <td bgcolor="#001D2B" height="28" width="200"> 
@@ -40,11 +40,11 @@
         <div align="center">
           <table border=0 cellspacing=0 cellpadding=0 width="100%">
             <tr>
-              <td width=19><img src="http://www.sonichq.org/topleft.gif" width=19></td>
+              <td width=19><img src="/sonichq/topleft.gif" width=19></td>
               <td bgcolor=black width=100%> 
                 <div align="right"><font face="Arial, Helvetica, sans-serif" size="4" color="#ffcccc"><b>Collage Cover Gallery - Sonic</b></font></div>
               </td>
-              <td width=19><img src="http://www.sonichq.org/topright.gif" width=19></td>
+              <td width=19><img src="/sonichq/topright.gif" width=19></td>
             </tr>
           </table>
 <TABLE ALIGN=CENTER BORDER=2 CELLSPACING=3 CELLPADDING=3 width=50% bgcolor=black>
@@ -59,7 +59,7 @@
 <TR>
 <TD><center>
 <center>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/collages/thumbnails/collage.jpg" 
+<IMG SRC="/sonichq/comics/images/covers/collages/thumbnails/collage.jpg" 
 alt="Sonic Anniversary"></A>
 </TD>
 </TR>
@@ -73,7 +73,7 @@ alt="Sonic Anniversary"></A>
 <TR>
 <TD><center>
 <center>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/collages/thumbnails/perfect.jpg" 
+<IMG SRC="/sonichq/comics/images/covers/collages/thumbnails/perfect.jpg" 
 alt="Sonic Adventure: Perfect Chaos"></A>
 </TD>
 </TR>
