--- a/sonichq/comics/whoswho/freedomforum.html
+++ b/sonichq/comics/whoswho/freedomforum.html
@@ -3,14 +3,14 @@
 <TITLE>The Sonic Profiles Page - Miscellaneous Profiles</TITLE>
 </HEAD>
 <BODY BGCOLOR="#ffffff" background="" TEXT="#000066" LINK="#003333" VLINK="#C0C0C0">
-<embed src="http://www.geocities.com/EnchantedForest/Dell/7835/scdpalmtreepanicjj2.mid" autostart="true" hidden="true" loop="true">
+<embed src="/sonichq/geocities/EnchantedForest/Dell/7835/scdpalmtreepanicjj2.mid" autostart="true" hidden="true" loop="true">
 <br>
 
 <center>
 <font face=arial>
 <h1 align=center><FONT COLOR="#000066">The Freedom Forum - Miscellaneous Profiles </FONT></h1>
 
-<p><center> <img src="http://www.sonichq.org/comics/images/lplanet.gif" alt="Who's Who - The Miscellaneous Profiles Page"> </center></p>
+<p><center> <img src="/sonichq/comics/images/lplanet.gif" alt="Who's Who - The Miscellaneous Profiles Page"> </center></p>
 
 <b><center><p>Please wait for pictures to load!</p></center>
 
@@ -20,16 +20,16 @@
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 The Ancient Walkers
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p>
 
 
-<center><img src="http://www.sonichq.org/comics/images/ancient.jpg" alt="Riddle Me This... " align=left></center>
+<center><img src="/sonichq/comics/images/ancient.jpg" alt="Riddle Me This... " align=left></center>
 
 <font size=2>
 <B>Team Affiliation:</B> The Ancient Walkers<BR>
@@ -53,16 +53,16 @@ Sonic, Knuckles, and Tails have been deemed "The Chosen Ones" and each have had 
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Athair The Echidna
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p>
 
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/athair.jpg" alt="Mr. Mystic Psycho Babble !!! " align=right></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/athair.jpg" alt="Mr. Mystic Psycho Babble !!! " align=right></center>
 
 <font size=2>
 <b>Full Name:</b> Athair Echidna</B><BR>
@@ -94,16 +94,16 @@ So what is his relation to Knuckles and the guardians? It wasn't until weeks aft
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Merlin Prower
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p>
 
 
-<center><img src="http://www.sonichq.org/comics/images/merlin.jpg" alt="Who Is The Chosen One? " align=left></center>
+<center><img src="/sonichq/comics/images/merlin.jpg" alt="Who Is The Chosen One? " align=left></center>
 
 <font size=2>
 <b>Full Name:</b> Merlin Prower</B><BR>
@@ -133,16 +133,16 @@ Merlin Prower
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 The Wolf Pack Freedom Fighters
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p>
 
 
-<center><img src="http://www.sonichq.org/comics/images/wolfpack.jpg" alt="Cry Of The Wolf" align=left></center>
+<center><img src="/sonichq/comics/images/wolfpack.jpg" alt="Cry Of The Wolf" align=left></center>
 
 
 <font size=2>
@@ -164,7 +164,7 @@ The Wolf Pack Freedom Fighters
 <LI><b><u>Reynard</b></u> - Never one to spitefully lash out but ALWAYS one to question everything, reyanard was the person that first discovered Sonic, Sally, and Antione trespassing in the Wolf Caves. He's usually very inquisitive much to Diablo's nerves and this usually results in a tizzy between the two.
 <LI><b><u>Diablo</b></u> - If ever there was a grump, Diablo is IT. Anyone remember Grouchy Smurf - give him fur and make him look like an animal and you have Diablo Wolf. This dark furred vulpine is the most stubborn and usually ends up getting into it with Reynard
 <LI><b><u>Ariel and Athena</b></u> - Not pictured above: The final members of the group came MUCH LATER and caused quite an uproar aong the Wolf Pack when they came along. You see, Ariel and her sister Athena are two human girls. One being deaf, the other one being fully talkative, both are the lone survivors of a forgotten Overlander City...
-<LI><b><u>Drago</b></u> - <i>(No longer a freedom fighter)</i> Needless to say, Drago WAS the traitor in the "Death Of Princess Sally" and has become a shame to the Wolf Pack - to find out more about him, <a href="http://www.sonichq.org/comics/whoswho/robotnik2.html">click here</a>. 
+<LI><b><u>Drago</b></u> - <i>(No longer a freedom fighter)</i> Needless to say, Drago WAS the traitor in the "Death Of Princess Sally" and has become a shame to the Wolf Pack - to find out more about him, <a href="/sonichq/comics/whoswho/robotnik2.html">click here</a>. 
 
 <p><center><b> After helping rebuild Robotropolis during "Robotnik's death", the Wolfpack left to return to the Great Unknown and came to the Great Canyon, which was mysteriously COMPLETELY filled with water in a rainstorm: A possible allusion to the Ancient Walkers' "Day Of Fury". After crossing the canyon, Lupe and the others came across a deserted Overlander City and two girls - the ONLY SURVIVORS in in the town - Ariel and Athena. After much debate, instead of leaving the girls to die, Lupe decided to take them in and teach them the Wolf Packs ways as if they were thier own children. Since then, after forgetting about the shame of Drago, and adopting thier new "children", the Wolf Pack have always served whenever needed and make a valuable addition to the cast.
 </P></center>
@@ -177,15 +177,15 @@ The Wolf Pack Freedom Fighters
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 The Downunda Freedom Fighters
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/downunda.jpg" alt="Shrimp On The Barby Koala !!!" align=left></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/downunda.jpg" alt="Shrimp On The Barby Koala !!!" align=left></center>
 
 <font size=2>
 <B>Team Affiliation:</B> The Downunda Freedom Fighters<BR>
@@ -218,15 +218,15 @@ The Downunda Freedom Fighters
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Rob O' The Hedge and Mari-An
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p>
 
-<center><img src="http://www.sonichq.org/comics/images/robnmari.jpg" alt="Robin Hood And Maid Marian - Sonic Style !!!" align=center></center>
+<center><img src="/sonichq/comics/images/robnmari.jpg" alt="Robin Hood And Maid Marian - Sonic Style !!!" align=center></center>
 <font size=2>
 <b>Full Name:</b> Rob O The Hedge And Mari-An Echidna</B><BR>
 <B>Nick Name:</B> N/A<BR>
@@ -253,15 +253,15 @@ Rob O' The Hedge and Mari-An
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Monkey Khan
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/monkeykhan.jpg" alt="Give The Monkey A Banana !!!" align=left></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/monkeykhan.jpg" alt="Give The Monkey A Banana !!!" align=left></center>
 
 <font size=2>
 <b>Full Name:</b> Monkey Khan</B><BR>
@@ -289,16 +289,16 @@ Monkey Khan
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 The Forgotten Tribe
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p>
 
 
-<center><img src="http://www.sonichq.org/comics/images/forget.jpg" alt="The Great Knuckles Exodus..." align=left></center>
+<center><img src="/sonichq/comics/images/forget.jpg" alt="The Great Knuckles Exodus..." align=left></center>
 
 <font size=2>
 <b>Full Name:</b> The Forgotten Tribe </B><BR>
@@ -324,19 +324,19 @@ The Forgotten Tribe
 <center><font color="#FFFFFF">
 <p>The Great Forest - Sonic Profiles</p></center>
 
-<CENTER><b> <a href="http://www.sonichq.org/comics/whoswho/greatforest.html"> <img src="http://www.geocities.com/EnchantedForest/Tower/4309/sonic.jpg" alt="Sonic Profiles"></CENTER></a>
+<CENTER><b> <a href="/sonichq/comics/whoswho/greatforest.html"> <img src="/sonichq/geocities/EnchantedForest/Tower/4309/sonic.jpg" alt="Sonic Profiles"></CENTER></a>
 </TD>
 <TD>
 <center><font color="#FFFFFF">
 <p>The Floating Island - Knuckles Profiles</p></center>
 
-<CENTER><b><a href="http://www.sonichq.org/comics/whoswho/floatingisland.html"><img src="http://www.geocities.com/EnchantedForest/Tower/4309/knuckles.jpg" alt="Knuckles Profiles"></CENTER></a>
+<CENTER><b><a href="/sonichq/comics/whoswho/floatingisland.html"><img src="/sonichq/geocities/EnchantedForest/Tower/4309/knuckles.jpg" alt="Knuckles Profiles"></CENTER></a>
 </TD>
 <TD>
 <center><font color="#FFFFFF">
 <p>Return To The Who's Who Main Page</p></center>
 
-<CENTER><b> <a href="http://www.sonichq.org/comics/whoswho/whoswho.html"> <img src="http://www.sonichq.org/comics/images/button.jpg" alt="Who's Who In The Sonic Universe?"></CENTER></a>
+<CENTER><b> <a href="/sonichq/comics/whoswho/whoswho.html"> <img src="/sonichq/comics/images/button.jpg" alt="Who's Who In The Sonic Universe?"></CENTER></a>
 </TD>
 
 </TR>
@@ -346,19 +346,19 @@ The Forgotten Tribe
 <center><font color="#FFFFFF">
 <p>The Rogues Gallery A  - Sonic Villian Profiles</p></center>
 
-<CENTER><b><a href="http://www.sonichq.org/comics/whoswho/roguesgallerya.html"><img src="http://www.geocities.com/EnchantedForest/Tower/4309/botnik.jpg" alt="Sonic Villians"></CENTER></a>
+<CENTER><b><a href="/sonichq/comics/whoswho/roguesgallerya.html"><img src="/sonichq/geocities/EnchantedForest/Tower/4309/botnik.jpg" alt="Sonic Villians"></CENTER></a>
 </TD>
 <TD>
 <center><font color="#FFFFFF">
 <p>The Rogues Gallery B - Knuckles Villian Profiles</p></center>
 
-<CENTER><b><a href="http://www.sonichq.org/comics/whoswho/roguesgalleryb.html"><img src="http://www.geocities.com/EnchantedForest/Tower/4309/enerdoom.jpg" alt="Knuckles Villians"></CENTER></a>
+<CENTER><b><a href="/sonichq/comics/whoswho/roguesgalleryb.html"><img src="/sonichq/geocities/EnchantedForest/Tower/4309/enerdoom.jpg" alt="Knuckles Villians"></CENTER></a>
 </TD>
 <TD>
 <center><font color="#FFFFFF">
 <p>Return To The Main HQ Comics Page</p></center>
 
-<CENTER><b><a href="http://www.sonichq.org/comics/comicpro.html"><img src="http://www.sonichq.org/comics/images/antisonic.jpg" alt="Return To The Comics Section"></CENTER></a>
+<CENTER><b><a href="/sonichq/comics/comicpro.html"><img src="/sonichq/comics/images/antisonic.jpg" alt="Return To The Comics Section"></CENTER></a>
 </TD>
 </TR>
 
