--- a/sonichq/comics/whoswho/greatforest.html
+++ b/sonichq/comics/whoswho/greatforest.html
@@ -4,14 +4,14 @@
 <TITLE>The Sonic Profiles Page - Sonic The Hedgehog</TITLE>
 </HEAD>
 <BODY BGCOLOR="000000" background="" TEXT="#ffcc00" LINK="#003333" VLINK="#C0C0C0" bgproperties=fixed>
-<embed src="http://www.geocities.com/EnchantedForest/Tower/4309/Aquaman.mid" autostart="true" hidden="true" loop="true">
+<embed src="/sonichq/geocities/EnchantedForest/Tower/4309/Aquaman.mid" autostart="true" hidden="true" loop="true">
 <br>
 
 <center>
 <font face=arial>
 <h1 align=center><FONT COLOR="#ffffff">The Great Forest - Sonic Profiles</FONT></h1>
 
-<p><center> <img src="http://www.geocities.com/EnchantedForest/Tower/4309/sonlogo.jpg" alt="Who's Who - The Sonic Profile Pgae"> </center></p>
+<p><center> <img src="/sonichq/geocities/EnchantedForest/Tower/4309/sonlogo.jpg" alt="Who's Who - The Sonic Profile Pgae"> </center></p>
 
 <b><center><p>Please wait for pictures to load!</p></center>
 
@@ -23,15 +23,15 @@
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Sonic The Hedgehog
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/sonic.jpg" alt="Big Blue" align=right></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/sonic.jpg" alt="Big Blue" align=right></center>
 <font size=2>
 <left><B>Full Name:</B>Sonic Maurice Hedgehog</B><BR>
 <B>Nick Names:</B>  The Blue Blur<BR>
@@ -57,15 +57,15 @@ Sonic The Hedgehog
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Tails The Fox
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/tails.jpg" alt="The Double Tail!!!" align=left></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/tails.jpg" alt="The Double Tail!!!" align=left></center>
 <font size=2>
 <B>Full Name:</B> Miles "Tails" Prower</B><BR>
 <B>Nick Name:</B> Tails<BR>
@@ -92,15 +92,15 @@ Tails The Fox
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Princess Sally
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/sal.jpg" alt="Uneasy Hangs The Crown" align=right></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/sal.jpg" alt="Uneasy Hangs The Crown" align=right></center>
 <font size=2>
 <B>Full Name:</B> Sally Alicia Acorn</B><BR>
 <B>Nick Name:</B> Sal<BR>
@@ -127,15 +127,15 @@ Princess Sally
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Prince Elias
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center><img src="http://www.sonichq.org/comics/images/elias.jpg" alt="Heir To The Throne!" align=left></center>
+<center><img src="/sonichq/comics/images/elias.jpg" alt="Heir To The Throne!" align=left></center>
 <font size=2>
 <B>Full Name:</B> Elias Acorn</B><BR>
 <B>Nick Name:</B> N/A<BR>
@@ -162,15 +162,15 @@ Prince Elias
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Amy Rose
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/amyrose.jpg" alt="The Pink Wonder" align=right></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/amyrose.jpg" alt="The Pink Wonder" align=right></center>
 <font size=2>
 <B>Full Name:</B> Amy Rose</B><BR>
 <B>Nick Name:</B> Rosy The Rascal (Japanese)<BR>
@@ -197,15 +197,15 @@ Amy Rose
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Bunnie Rabbot
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/salknux2.jpg" alt="Bunnie Gets Revived!!!" align=center></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/salknux2.jpg" alt="Bunnie Gets Revived!!!" align=center></center>
 
 <font size=2>
 <B>Full Name:</B> Bunnie Rabbot</B><BR>
@@ -232,15 +232,15 @@ Bunnie Rabbot
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Antoine D'Coolette
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/antoinekiss.jpg" alt="Super Klutz!!!" align=right></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/antoinekiss.jpg" alt="Super Klutz!!!" align=right></center>
 <font size=2>
 <B>Full Name:</B> Antoine D'Coolette</B><BR>
 <B>Nick Name:</B> Twan, Ant, Thimblehead, Dumbell, Nimrod - Shall I keep going?<BR>
@@ -267,15 +267,15 @@ Antoine D'Coolette
 <TABLE BORDER=0 WIDTH=700 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Rotor The Walrus
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/rotor.jpg" alt="Everybody Loves Rotor!" align=left></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/rotor.jpg" alt="Everybody Loves Rotor!" align=left></center>
 <font size=2>
 <B>Full Name:</B> Rotor Walrus</B><BR>
 <B>Nick Name:</B> Boomer<BR>
@@ -303,15 +303,15 @@ Rotor The Walrus
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Dulcy The Dragon
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/dulcy2.jpg" alt="The Dragon Lady" align=left></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/dulcy2.jpg" alt="The Dragon Lady" align=left></center>
 <font size=2>
 <B>Full Name:</B> Dulcy The Dragon</B><BR>
 <B>Nick Name:</B> Dulce<BR>
@@ -338,15 +338,15 @@ Dulcy The Dragon
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Nicole
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/nicole01.jpg" alt="Access Denied!" align=right></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/nicole01.jpg" alt="Access Denied!" align=right></center>
 <font size=2>
 <B>Full Name:</B> Nicole</B><BR>
 <B>Nick Name:</B> None<BR>
@@ -373,15 +373,15 @@ Nicole
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 King Acorn
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/acorn.jpg" alt="The King Of Mood Swings" align=left></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/acorn.jpg" alt="The King Of Mood Swings" align=left></center>
 <font size=2>
 <B>Full Name:</B> King Maxmilian Acorn</B><BR>
 <B>Nick Name:</B> King Acorn<BR>
@@ -413,15 +413,15 @@ Son: Elias Acorn <BR>
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Nate Morgan
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/nate.jpg" alt="Power To The People!" align=left></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/nate.jpg" alt="Power To The People!" align=left></center>
 <font size=2>
 <B>Full Name:</B> Nathaniel Beauregard Morgan</B><BR>
 <B>Nick Name:</B> Nate<BR>
@@ -449,15 +449,15 @@ Nate Morgan
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Uncle Chuck
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/chuck.jpg" alt="To Bot Or Not To Bot" align=right></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/chuck.jpg" alt="To Bot Or Not To Bot" align=right></center>
 <font size=2>
 <B>Full Name:</B> Sir Charles Hedgehog</B><BR>
 <B>Nick Name:</B> Uncle Chuck - To everyone<BR>
@@ -489,15 +489,15 @@ Sister-In-Law: Bernie Hedgehog (roboticized-free mind) <BR>
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Geoffrey St. John
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/stjohn.jpg" alt="Stuck Up, Up, And Away!!!" align=left></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/stjohn.jpg" alt="Stuck Up, Up, And Away!!!" align=left></center>
 <font size=2>
 <B>Full Name:</B> Geoffrey St. John</B><BR>
 <B>Nick Name:</B> Fathead, Stinkbomb, and several other names that can't be printed due to vulgarity<BR>
@@ -524,15 +524,15 @@ Geoffrey St. John
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 >
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 The Secret Service
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/secret.jpg" alt="Hence Came the Weenie Patrol..." align=left></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/secret.jpg" alt="Hence Came the Weenie Patrol..." align=left></center>
 <font size=2>
 <B>Team Affiliation:</B> The Acorn Secret Service<BR>
 <B>Member names:</B> Geoffrey St. John (Commander), Hershey The Cat, Heavy And Bomb, Valdez the Chameleon, and Wombat Stu</B><BR>
@@ -564,19 +564,19 @@ The Secret Service
 <center><font color="#FFFFFF">
 <p>Return To The Who's Who Main Page</p></center>
 
-<CENTER><b> <a href="http://www.sonichq.org/comics/whoswho/whoswho.html"> <img src="http://www.sonichq.org/comics/images/button.jpg" alt="Who's Who In The Sonic Universe?"></CENTER></a>
+<CENTER><b> <a href="/sonichq/comics/whoswho/whoswho.html"> <img src="/sonichq/comics/images/button.jpg" alt="Who's Who In The Sonic Universe?"></CENTER></a>
 </TD>
 <TD>
 <center><font color="#FFFFFF">
 <p>The Floating Island - Knuckles Profiles</p></center>
 
-<CENTER><b><a href="http://www.sonichq.org/comics/whoswho/floatingisland.html"><img src="http://www.geocities.com/EnchantedForest/Tower/4309/knuckles.jpg" alt="Knuckles Profiles"></CENTER></a>
+<CENTER><b><a href="/sonichq/comics/whoswho/floatingisland.html"><img src="/sonichq/geocities/EnchantedForest/Tower/4309/knuckles.jpg" alt="Knuckles Profiles"></CENTER></a>
 </TD>
 <TD>
 <center><font color="#FFFFFF">
 <p>The Freedom Forum - Miscellaneous Profiles</p></center>
 
-<CENTER><b><a href="http://www.sonichq.org/comics/whoswho/freedomforum.html"><img src="http://www.geocities.com/EnchantedForest/Tower/4309/monkeykhan.jpg" alt="Miscellaneous Profiles"></CENTER></a>
+<CENTER><b><a href="/sonichq/comics/whoswho/freedomforum.html"><img src="/sonichq/geocities/EnchantedForest/Tower/4309/monkeykhan.jpg" alt="Miscellaneous Profiles"></CENTER></a>
 </TD>
 
 </TR>
@@ -586,19 +586,19 @@ The Secret Service
 <center><font color="#FFFFFF">
 <p>The Rogues Gallery A  - Sonic Villain Profiles</p></center>
 
-<CENTER><b><a href="http://www.sonichq.org/comics/whoswho/roguesgallerya.html"><img src="http://www.geocities.com/EnchantedForest/Tower/4309/botnik.jpg" alt="Sonic Villians"></CENTER></a>
+<CENTER><b><a href="/sonichq/comics/whoswho/roguesgallerya.html"><img src="/sonichq/geocities/EnchantedForest/Tower/4309/botnik.jpg" alt="Sonic Villians"></CENTER></a>
 </TD>
 <TD>
 <center><font color="#FFFFFF">
 <p>The Rogues Gallery B - Knuckles Villain Profiles</p></center>
 
-<CENTER><b><a href="http://www.sonichq.org/comics/whoswho/roguesgalleryb.html"><img src="http://www.geocities.com/EnchantedForest/Tower/4309/enerdoom.jpg" alt="Knuckles Villians"></CENTER></a>
+<CENTER><b><a href="/sonichq/comics/whoswho/roguesgalleryb.html"><img src="/sonichq/geocities/EnchantedForest/Tower/4309/enerdoom.jpg" alt="Knuckles Villians"></CENTER></a>
 </TD>
 <TD>
 <center><font color="#FFFFFF">
 <p>Return To The Main HQ Comics Page</p></center>
 
-<CENTER><b><a href="http://www.sonichq.org/comics/comicpro.html"><img src="http://www.sonichq.org/comics/images/antisonic.jpg" alt="Return To The Comics Section"></CENTER></a>
+<CENTER><b><a href="/sonichq/comics/comicpro.html"><img src="/sonichq/comics/images/antisonic.jpg" alt="Return To The Comics Section"></CENTER></a>
 </TD>
 </TR>
 
