--- a/sonichq/comics/whoswho/robotnik1.html
+++ b/sonichq/comics/whoswho/robotnik1.html
@@ -3,20 +3,20 @@
 <HEAD>
 <TITLE>The Sonic Profiles Page - Sonic Villains</TITLE>
 </HEAD>
-<BODY BGCOLOR="#000000" background="http://www.sonichq.org/comics/images/sonic_back.gif" TEXT="#ffcc00" LINK="#003333" VLINK="#C0C0C0">
-<embed src="http://www.geocities.com/EnchantedForest/Tower/4309/laegg.mid" autostart="true" hidden="true" loop="true">
+<BODY BGCOLOR="#000000" background="/sonichq/comics/images/sonic_back.gif" TEXT="#ffcc00" LINK="#003333" VLINK="#C0C0C0">
+<embed src="/sonichq/geocities/EnchantedForest/Tower/4309/laegg.mid" autostart="true" hidden="true" loop="true">
 <br>
 
 <center>
 <font face=arial>
 <h1 align=center><FONT COLOR="#ffcc00">Database 1 - The Bot Squad</FONT></h1>
 
-<p><center> <img src="http://www.geocities.com/EnchantedForest/Tower/4309/downunda.jpg
+<p><center> <img src="/sonichq/geocities/EnchantedForest/Tower/4309/downunda.jpg
 " alt="Who's Who - The Villains Profile Page"> </center></p>
 
 <b><center><p>Please wait for pictures to load!</p></center>
 
-<center><IMG SRC="http://www.geocities.com/EnchantedForest/Dell/6657/tbbutton.gif"></center>
+<center><IMG SRC="/sonichq/geocities/EnchantedForest/Dell/6657/tbbutton.gif"></center>
 <br>
 <br>
 
@@ -25,12 +25,12 @@
 <TABLE BORDER=1 WIDTH=700 BGCOLOR="#003333" align=center><tr><td><P>
 <p></p>
 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Doctor Robotnik / Doctor Eggman</font>
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b></center>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/botnik.jpg" alt="The Big Red Cheese" align=left></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/botnik.jpg" alt="The Big Red Cheese" align=left></center>
 <font size=2>
 <B>Full Name:</B>  Julian Ivo Kintobor</B><BR>
 <B>Also Known As:</B>  Warlord Julian, Dr. Robotnik, or, Robuttnik<BR>
@@ -56,12 +56,12 @@ Doctor Robotnik / Doctor Eggman</font>
 <TABLE BORDER=1 WIDTH=700 BGCOLOR="#003333" align=center><tr><td><P>
 <p></p>
 
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Snively Kintobor
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT></center>
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/snively.jpg" alt="The One Pound Weakling..." align=left></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/snively.jpg" alt="The One Pound Weakling..." align=left></center>
 <font size=2>
 <B>Full Name:</B> Snively Kintobor</B><BR>
 <B>Also Known As:</B> N/A<BR>
@@ -87,13 +87,13 @@ Snively Kintobor
 <br><HR><br>
 <TABLE BORDER=1 WIDTH=700 BGCOLOR="#003333" align=center><tr><td><P>
 <p></p>
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Metal Sonic And Mecha Sonic
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/mechasn3.jpg" alt="Heavy Meta " align=left></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/mechasn3.jpg" alt="Heavy Meta " align=left></center>
 
 <font size=2>
 <B>Full Name:</B>  Metal Sonic And Mecha Sonic</B><BR>
@@ -118,13 +118,13 @@ Metal Sonic And Mecha Sonic
 <br><HR><br>
 <TABLE BORDER=1 WIDTH=700 BGCOLOR="#003333" align=center><tr><td><P>
 <p></p>
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 The Robo-Robotnik 
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/robo.jpg" alt="The Dark Eggman..." align=left></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/robo.jpg" alt="The Dark Eggman..." align=left></center>
 
 <font size=2>
 <B>Full Name:</B>  Robo-Robotnik</B><BR>
@@ -150,14 +150,14 @@ The Robo-Robotnik
 <br><HR><br>
 <TABLE BORDER=1 WIDTH=700 BGCOLOR="#003333" align=center><tr><td><P>
 <p></p>
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Crocbot
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/crocbot.jpg" alt="The Crocodile Rocker" align=right></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/crocbot.jpg" alt="The Crocodile Rocker" align=right></center>
 
 <font size=2>
 <B>Full Name:</B>  Crocbot</B><BR>
@@ -180,13 +180,13 @@ Crocbot
 <br><HR><br>
 <TABLE BORDER=1 WIDTH=700 BGCOLOR="#003333" align=center><tr><td><P>
 <p></p>
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Octobot
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/octobot.jpg" alt="Crazy Eights !" align=left></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/octobot.jpg" alt="Crazy Eights !" align=left></center>
 
 <font size=2>
 <B>Full Name:</B>  Octobot</B><BR>
@@ -211,13 +211,13 @@ Octobot
 <br><HR><br>
 <TABLE BORDER=1 WIDTH=700 BGCOLOR="#003333" align=center><tr><td><P>
 <p></p>
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 General D'Coolette
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/kodos.jpg" alt="More Than Meets The Eye..." align=left></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/kodos.jpg" alt="More Than Meets The Eye..." align=left></center>
 <font size=2>
 <B>Full Name:</B>  General D'Coolette</B><BR>
 <B>Also Known As:</B>  N/A<BR>
@@ -242,13 +242,13 @@ General D'Coolette
 <br><HR><br>
 <TABLE BORDER=1 WIDTH=700 BGCOLOR="#003333" align=center><tr><td><P>
 <p></p>
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 E.V.E
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/eve.jpg" alt="Robotnik And The Brain, Robotnik And The Brain..." align=left></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/eve.jpg" alt="Robotnik And The Brain, Robotnik And The Brain..." align=left></center>
 <font size=2>
 <B>Full Name:</B>  Exceptionally Versatile Evolvanoid </B><BR>
 <B>Also Known As:</B>  E.V.E.<BR>
@@ -273,14 +273,14 @@ E.V.E
 <br><HR><br>
 <TABLE BORDER=1 WIDTH=700 BGCOLOR="#003333" align=center><tr><td><P>
 <p></p>
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 The Assault Bots
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/combots.jpg" alt="The Combot Armada" align=center></center>
-<img src="http://www.geocities.com/EnchantedForest/Tower/4309/dynamac3000.jpg" alt="The Dynamac 3000" align=left>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/combots.jpg" alt="The Combot Armada" align=center></center>
+<img src="/sonichq/geocities/EnchantedForest/Tower/4309/dynamac3000.jpg" alt="The Dynamac 3000" align=left>
 </center>
 <font size=2>
 <B>Bot Types:</B> Swatbots, Combots, Eggbots, and The Dynamac 3000</B><BR>
@@ -298,14 +298,14 @@ The Assault Bots
 
 <!--LINE1-->
 
-<img src="http://www.geocities.com/EnchantedForest/Tower/4309/swatbots.jpg" alt="Swatbot Priority One !" align=right>
+<img src="/sonichq/geocities/EnchantedForest/Tower/4309/swatbots.jpg" alt="Swatbot Priority One !" align=right>
 <p><center>Robotnik may use the regular Mobians - roboticised and stripped of thier free will as his worker drones, but whether patrolling the dark empty streets of Robotropolis or covertly operating the attacks in Geographic regions such as The Great Forest and the country of Downunda - you'll be certain sooner or later to run into 'The Bot Squad' ! Robotnik's personal created assault bots that perform various duties around Mobius. The various assault bots are:
 
 <p><CENTER>
 <LI><u>Swatbots</u></b> - Usually found in the employ of Doctor Robotnik, swatbots are most likely found patrolling the streets of Robotropolis. Programmed with the "Priority One" code, when Sonic the Hedgehog is sensed in the area they will go on a red alert and attack at all costs. The weakest of the 4 bots, Swatbots are easily taken out by Sonic most of the time, but they still maintain and serve a good purpose to the Doctor when necessary </p>
 <p><LI><b><u>Combots</u></b> - The Swatbot upgrade resulted into a new form of bot alogether - the Combot! The ultimate "army" bot, combots are used most likely in reconnaissance missions by Robotnik, but are under the constant employ of Crocbot - Robotniks Downunda subboss! Empowered with the ability to "camouflage themselves ala Espio the Chameleon, they literally can render themselves "invisible" and blend in with the background. Located in thier hands they contain an energy lash which they can use to electrocute thier victims, and also posses a large amount of guns and such in thier arsenal. They feel most swatbots are "inferior" to them and are usually not afraid to say this... Strange for one of the few "mindless" bots in Robotnik's employ.</p>
 
-<img src="http://www.geocities.com/EnchantedForest/Tower/4309/eggbot.jpg" alt="The Eggbots have Arrived !" align=left>
+<img src="/sonichq/geocities/EnchantedForest/Tower/4309/eggbot.jpg" alt="The Eggbots have Arrived !" align=left>
 <p><LI><b><u>Eggbots</b></u> - Hatching from large cybernetic eggs and flying overhead in the skies are the Eggbots ! Shaped round like the Eggman, these bots whimsical appearance often distracts from the fact that they are often the most vicious and hardest to get rid of! Attacking in multiple groups and equipped with high fire laser blasters, Eggbots are usually under the employ of Snively - Robotnik's assistant - though Robotnik has been known to use them himself at times...</p>
 <p><LI><b><u>The Dynamac 3000</b></u> - The ULTIMATE Robotnik assault bot, the Dynamac can adapt to ANY given situation and manipulate himself to take control and turn him into THE MOST formidable opponent in the Bot Squad! In fact, Dynamacs are so powerful that the only way to really defeat them are by shorting them out with a massive surge of electricity! Not an easy thing to do for a bot that can anticipate your moves...
 
@@ -318,14 +318,14 @@ The Assault Bots
 <br><HR><br>
 <TABLE BORDER=1 WIDTH=700 BGCOLOR="#003333" align=center><tr><td><P>
 <p></p>
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 The Badnik Army
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT>
 </center>
 
-<center><img src="http://members.tripod.com/~warpsonic/badnikattack.jpg" alt="The Stupid Brigade..." align=center></center>
+<center><img src="/sonichq/tripod/warpsonic/badnikattack.jpg" alt="The Stupid Brigade..." align=center></center>
 <font size=2>
 <B>Bot Types:</B> Assault Badniks</B><BR>
 <B>Also Known As:</B>  The Classic badniks<BR>
@@ -342,7 +342,7 @@ The Badnik Army
 
 <!--LINE1-->
 
-<p><center>The Badniks got a bum deal in terms of usage. But with the colorful lineup usually consisting of the Classic badnik's from Sonic 1 and 2, they DIDN'T leave the scene without making an impact! The "Head Badniks" consist of Crabmeat - who served as second in command before Snively came along and took it, something he still hates him for, Caterkiller - usually the 3rd in command and the first badnik with the "honor" of going head to head against Sonic, Moto Bug - the Village Idiot, Scratch and Grounder - Part of Robotniks Original "4S Squad", whose mission was to find and eradicate Sonic at any cost - but are unfortunately beyond inept and cant finish arguing enough to actually complete a task, Coconuts - who is probably EVEN MORE STUPID than Moto Bug, Bat Brain - A flying bat badnik thats too concerned with making his "Bat Signal" entrances to pay attention to anything, Orbinaut - a "4 Star" Badnik, and the only "serious" guy in the group other than Caterkiller and Crabmeat - Buzzbomber, the mechanical wasp with laser sting! Mostly pushed for comic relief, the Badnik Army served thier term well, but all good things come to an end. As Doctor Robotnik became sick of thier ineptitude at NOT being able to catch Sonic, he scrapped the lot of them for the more powerful and deadlier Swatbots and Combots. The doctor even subjected Crabmeat to the wrath of Mecha Sonic in an ability to "test" its new powers. The Badniks, feeling demoralized, left Robotropolis in search of a new home and took refuge in a sanctuary they call "The Robo Hobo Jungle", where they have taken over the area and live amongst the scraps. They still hold LARGE amounts of contempt for the one guy that brought them thier grief - Sonic The Hedgehog, but they still havent mustered the abilities to defeat him. So they wait in patience until thier master - Doctor Robotnik, will revive them again...To find out more about the Badnik's and ALL thier members check out our Games Page on <A HREF="http://www.sonichq.org/games/whoswho/badniksmain.html">The Who's Who Section - The Badnik Army</a> for more details on thier specific powers and status.
+<p><center>The Badniks got a bum deal in terms of usage. But with the colorful lineup usually consisting of the Classic badnik's from Sonic 1 and 2, they DIDN'T leave the scene without making an impact! The "Head Badniks" consist of Crabmeat - who served as second in command before Snively came along and took it, something he still hates him for, Caterkiller - usually the 3rd in command and the first badnik with the "honor" of going head to head against Sonic, Moto Bug - the Village Idiot, Scratch and Grounder - Part of Robotniks Original "4S Squad", whose mission was to find and eradicate Sonic at any cost - but are unfortunately beyond inept and cant finish arguing enough to actually complete a task, Coconuts - who is probably EVEN MORE STUPID than Moto Bug, Bat Brain - A flying bat badnik thats too concerned with making his "Bat Signal" entrances to pay attention to anything, Orbinaut - a "4 Star" Badnik, and the only "serious" guy in the group other than Caterkiller and Crabmeat - Buzzbomber, the mechanical wasp with laser sting! Mostly pushed for comic relief, the Badnik Army served thier term well, but all good things come to an end. As Doctor Robotnik became sick of thier ineptitude at NOT being able to catch Sonic, he scrapped the lot of them for the more powerful and deadlier Swatbots and Combots. The doctor even subjected Crabmeat to the wrath of Mecha Sonic in an ability to "test" its new powers. The Badniks, feeling demoralized, left Robotropolis in search of a new home and took refuge in a sanctuary they call "The Robo Hobo Jungle", where they have taken over the area and live amongst the scraps. They still hold LARGE amounts of contempt for the one guy that brought them thier grief - Sonic The Hedgehog, but they still havent mustered the abilities to defeat him. So they wait in patience until thier master - Doctor Robotnik, will revive them again...To find out more about the Badnik's and ALL thier members check out our Games Page on <A HREF="/sonichq/games/whoswho/badniksmain.html">The Who's Who Section - The Badnik Army</a> for more details on thier specific powers and status.
 </P></center>
 </tr></td>
 </table>
@@ -350,13 +350,13 @@ The Badnik Army
 <br><HR><br>
 <TABLE BORDER=1 WIDTH=700 BGCOLOR="#003333" align=center><tr><td><P>
 <p></p>
-<CENTER><b><img src="http://members.tripod.com/~warpsonic/ring.gif"> 
+<CENTER><b><img src="/sonichq/tripod/warpsonic/ring.gif"> 
 <font color="#ffff99">
 Fiona Fox
-<img src="http://members.tripod.com/~warpsonic/ring.gif"></b>
+<img src="/sonichq/tripod/warpsonic/ring.gif"></b>
 </FONT></center>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/fiona.jpg" alt="Fatal Attraction..." align=center> </center>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/fiona.jpg" alt="Fatal Attraction..." align=center> </center>
 
 <font size=2>
 <B>Full Name:</B> Fiona Fox</B><BR>
