--- a/sonichq/comics/whoswho/roguesgalleryb.html
+++ b/sonichq/comics/whoswho/roguesgalleryb.html
@@ -2,20 +2,20 @@
 <HEAD>
 <TITLE>The Sonic Profiles Page - Knuckles Villian Profiles</TITLE>
 </HEAD>
-<BODY BGCOLOR="#000000" background="http://www.sonichq.org/comics/images/isis9.jpg" TEXT="#ccffcc" LINK="#003333" VLINK="#C0C0C0">
-<embed src="http://www.geocities.com/EnchantedForest/Tower/4309/dtmoon.mid" autostart="true" hidden="true" loop="true">
+<BODY BGCOLOR="#000000" background="/sonichq/comics/images/isis9.jpg" TEXT="#ccffcc" LINK="#003333" VLINK="#C0C0C0">
+<embed src="/sonichq/geocities/EnchantedForest/Tower/4309/dtmoon.mid" autostart="true" hidden="true" loop="true">
 <br>
 
 <center>
 <font face=arial>
 <h1 align=center><FONT COLOR="#FFFFFF">The Rogues Gallery - Knuckles Villain Profiles </FONT></h1>
 
-<p><center> <img src="http://www.sonichq.org/comics/images/chaotixtest.jpg
+<p><center> <img src="/sonichq/comics/images/chaotixtest.jpg
 " alt="Who's Who - The Knuckles Villains Profiles Page"> </center></p>
 
 <b><center><p>Please wait for pictures to load!</p></center>
 
-<center><IMG SRC="http://members.spree.com/funNgames/asudem/miscellaneous/SonicKnuxLogo.gif"></center>
+<center><IMG SRC="https://web.archive.org/20011101000000/https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/miscellaneous/SonicKnuxLogo.gif"></center>
 <br>
 <br>
 
@@ -25,15 +25,15 @@
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 background="">
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://www.geocities.com/EnchantedForest/Tower/4309/chaosicon.jpg"> 
+<CENTER><b><img src="/sonichq/geocities/EnchantedForest/Tower/4309/chaosicon.jpg"> 
 <font color="#ffff99">
 Mammoth Mogul
-<img src="http://www.geocities.com/EnchantedForest/Tower/4309/chaosicon.jpg"></b>
+<img src="/sonichq/geocities/EnchantedForest/Tower/4309/chaosicon.jpg"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center><img src="http://www.sonichq.org/comics/images/mogul.jpg" alt="Enerjak and the Fatman " align=left></center>
+<center><img src="/sonichq/comics/images/mogul.jpg" alt="Enerjak and the Fatman " align=left></center>
 
 
 <FONT FACE="Arial" COLOR=FFFFFF font size=2><b>Full Name:</b> Mammoth Mogul</B><BR>
@@ -61,16 +61,16 @@ Mammoth Mogul
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 background="">
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://www.geocities.com/EnchantedForest/Tower/4309/chaosicon.jpg"> 
+<CENTER><b><img src="/sonichq/geocities/EnchantedForest/Tower/4309/chaosicon.jpg"> 
 <font color="#ffff99">
 Enerjak
-<img src="http://www.geocities.com/EnchantedForest/Tower/4309/chaosicon.jpg"></b>
+<img src="/sonichq/geocities/EnchantedForest/Tower/4309/chaosicon.jpg"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center> <img src="http://www.sonichq.org/comics/images/enerjak.jpg" alt="Enerjak - Phase One " align=center>
-<img src="http://www.sonichq.org/comics/images/enerjak2.jpg" alt="Enerjak - Phase Two " align=center>
+<center> <img src="/sonichq/comics/images/enerjak.jpg" alt="Enerjak - Phase One " align=center>
+<img src="/sonichq/comics/images/enerjak2.jpg" alt="Enerjak - Phase Two " align=center>
  </center>
 
 <FONT FACE="Arial" COLOR=FFFFFF font size=2><b>Full Name:</b> Dimitri The Echidna </B><BR>
@@ -99,15 +99,15 @@ Enerjak
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 background="">
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://www.geocities.com/EnchantedForest/Tower/4309/chaosicon.jpg"> 
+<CENTER><b><img src="/sonichq/geocities/EnchantedForest/Tower/4309/chaosicon.jpg"> 
 <font color="#ffff99">
 Kragok The Echidna
-<img src="http://www.geocities.com/EnchantedForest/Tower/4309/chaosicon.jpg"></b>
+<img src="/sonichq/geocities/EnchantedForest/Tower/4309/chaosicon.jpg"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center> <img src="http://www.sonichq.org/comics/images/kragok.jpg" alt="The Cousin Rivalry..." align=left>
+<center> <img src="/sonichq/comics/images/kragok.jpg" alt="The Cousin Rivalry..." align=left>
  </center>
 
 <FONT FACE="Arial" COLOR=FFFFFF font size=2><b>Full Name:</b> Kragok The Echidna</B><BR>
@@ -134,15 +134,15 @@ Kragok The Echidna
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 background="">
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://www.geocities.com/EnchantedForest/Tower/4309/chaosicon.jpg"> 
+<CENTER><b><img src="/sonichq/geocities/EnchantedForest/Tower/4309/chaosicon.jpg"> 
 <font color="#ffff99">
 The Dark Legion
-<img src="http://www.geocities.com/EnchantedForest/Tower/4309/chaosicon.jpg"></b>
+<img src="/sonichq/geocities/EnchantedForest/Tower/4309/chaosicon.jpg"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center> <img src="http://www.sonichq.org/comics/images/legion.jpg" alt="Prepare for Assimilation... " align=left>
+<center> <img src="/sonichq/comics/images/legion.jpg" alt="Prepare for Assimilation... " align=left>
  </center>
 
 <FONT FACE="Arial" COLOR=FFFFFF font size=2><b>Team Affiliation:</b> The Dark Legion </B><BR>
@@ -165,15 +165,15 @@ visage of evil under the auspices of their benefactor Enerjak. They seek to brin
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 background="">
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://www.geocities.com/EnchantedForest/Tower/4309/chaosicon.jpg"> 
+<CENTER><b><img src="/sonichq/geocities/EnchantedForest/Tower/4309/chaosicon.jpg"> 
 <font color="#ffff99">
 Moritori Rex
-<img src="http://www.geocities.com/EnchantedForest/Tower/4309/chaosicon.jpg"></b>
+<img src="/sonichq/geocities/EnchantedForest/Tower/4309/chaosicon.jpg"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center> <img src="http://www.sonichq.org/comics/images/rex.jpg" alt="Death To The King!" align=left>
+<center> <img src="/sonichq/comics/images/rex.jpg" alt="Death To The King!" align=left>
  </center>
 
 <FONT FACE="Arial" COLOR=FFFFFF font size=2><b>Full Name:</b> Moritori Rex </B><BR>
@@ -200,15 +200,15 @@ Moritori Rex
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 background="">
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://www.geocities.com/EnchantedForest/Tower/4309/chaosicon.jpg"> 
+<CENTER><b><img src="/sonichq/geocities/EnchantedForest/Tower/4309/chaosicon.jpg"> 
 <font color="#ffff99">
 General Stryker
-<img src="http://www.geocities.com/EnchantedForest/Tower/4309/chaosicon.jpg"></b>
+<img src="/sonichq/geocities/EnchantedForest/Tower/4309/chaosicon.jpg"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center> <img src="http://www.geocities.com/EnchantedForest/Tower/4309/stryker.jpg" alt="Not A Foe, But Not a Friend Either..." align=right>
+<center> <img src="/sonichq/geocities/EnchantedForest/Tower/4309/stryker.jpg" alt="Not A Foe, But Not a Friend Either..." align=right>
  </center>
 
 <FONT FACE="Arial" COLOR=FFFFFF font size=2><b>Full Name:</b> General Von Stryker </B><BR>
@@ -234,15 +234,15 @@ inhabitants from beating each other silly. General Stryker has helped out on occ
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 background="">
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://www.geocities.com/EnchantedForest/Tower/4309/chaosicon.jpg"> 
+<CENTER><b><img src="/sonichq/geocities/EnchantedForest/Tower/4309/chaosicon.jpg"> 
 <font color="#ffff99">
 Ebony Hare
-<img src="http://www.geocities.com/EnchantedForest/Tower/4309/chaosicon.jpg"></b>
+<img src="/sonichq/geocities/EnchantedForest/Tower/4309/chaosicon.jpg"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center> <img src="http://www.sonichq.org/comics/images/ebony.jpg" alt="I'm Gonna Fill Ya Full O' Lead - See!! " align=left>
+<center> <img src="/sonichq/comics/images/ebony.jpg" alt="I'm Gonna Fill Ya Full O' Lead - See!! " align=left>
  </center>
 
 <FONT FACE="Arial" COLOR=FFFFFF font size=2><b>Full Name:</b> Downtown Ebony Hare </B><BR>
@@ -269,15 +269,15 @@ Ebony Hare
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 background="">
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://www.geocities.com/EnchantedForest/Tower/4309/chaosicon.jpg"> 
+<CENTER><b><img src="/sonichq/geocities/EnchantedForest/Tower/4309/chaosicon.jpg"> 
 <font color="#ffff99">
 Renfield Rodent
-<img src="http://www.geocities.com/EnchantedForest/Tower/4309/chaosicon.jpg"></b>
+<img src="/sonichq/geocities/EnchantedForest/Tower/4309/chaosicon.jpg"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center> <img src="http://www.sonichq.org/comics/images/renfield.jpg" alt="A Happy Trap Operated by A Mouse" align=left>
+<center> <img src="/sonichq/comics/images/renfield.jpg" alt="A Happy Trap Operated by A Mouse" align=left>
  </center>
 
 <FONT FACE="Arial" COLOR=FFFFFF font size=2><b>Full Name:</b> Renfield the Rodent </B><BR>
@@ -303,15 +303,15 @@ Renfield Rodent
 <TABLE BORDER=0 WIDTH=500 CELLPADDING=0 CELLSPACING=0>
 <TR><TD></TD><TD BGCOLOR=BLACK COLSPAN=2 background="">
 <FONT FACE="Comic Sans MS" COLOR=8080FF><B> 
-<CENTER><b><img src="http://www.geocities.com/EnchantedForest/Tower/4309/chaosicon.jpg"> 
+<CENTER><b><img src="/sonichq/geocities/EnchantedForest/Tower/4309/chaosicon.jpg"> 
 <font color="#ffff99">
 The Anti-Knuckles
-<img src="http://www.geocities.com/EnchantedForest/Tower/4309/chaosicon.jpg"></b>
+<img src="/sonichq/geocities/EnchantedForest/Tower/4309/chaosicon.jpg"></b>
 </FONT>
 </TD></TR>
 </table><p></p></center>
 
-<center> <img src="http://www.geocities.com/EnchantedForest/Tower/4309/antiknux.jpg" alt="Through The Looking Glass..." align=right>
+<center> <img src="/sonichq/geocities/EnchantedForest/Tower/4309/antiknux.jpg" alt="Through The Looking Glass..." align=right>
  </center>
 
 <FONT FACE="Arial" COLOR=FFFFFF font size=2><b>Full Name:</b> Anti-Knuckles The Echidna </B><BR>
@@ -341,19 +341,19 @@ people - especially when Doctor Robotnik began draining the Choas Energy of the 
 <center>
 <p>The Great Forest - Sonic Profiles</p></center>
 
-<CENTER><b> <a href="http://www.sonichq.org/comics/whoswho/greatforest.html"> <img src="http://www.geocities.com/EnchantedForest/Tower/4309/sonic.jpg" alt="Sonic Profiles"></CENTER></a>
+<CENTER><b> <a href="/sonichq/comics/whoswho/greatforest.html"> <img src="/sonichq/geocities/EnchantedForest/Tower/4309/sonic.jpg" alt="Sonic Profiles"></CENTER></a>
 </TD>
 <TD>
 <center>
 <p>The Floating Island - Knuckles Profiles</p></center>
 
-<CENTER><b><a href="http://www.sonichq.org/comics/whoswho/floatingisland.html"><img src="http://www.geocities.com/EnchantedForest/Tower/4309/knuckles.jpg" alt="Knuckles Profiles"></CENTER></a>
+<CENTER><b><a href="/sonichq/comics/whoswho/floatingisland.html"><img src="/sonichq/geocities/EnchantedForest/Tower/4309/knuckles.jpg" alt="Knuckles Profiles"></CENTER></a>
 </TD>
 <TD>
 <center>
 <p>The Freedom Forum - Miscellaneous Profiles</p></center>
 
-<CENTER><b><a href="http://www.sonichq.org/comics/whoswho/freedomforum.html"><img src="http://www.geocities.com/EnchantedForest/Tower/4309/monkeykhan.jpg" alt="Miscellaneous Profiles"></CENTER></a>
+<CENTER><b><a href="/sonichq/comics/whoswho/freedomforum.html"><img src="/sonichq/geocities/EnchantedForest/Tower/4309/monkeykhan.jpg" alt="Miscellaneous Profiles"></CENTER></a>
 </TD>
 
 </TR>
@@ -363,19 +363,19 @@ people - especially when Doctor Robotnik began draining the Choas Energy of the 
 <center>
 <p>The Rogues Gallery A  - Sonic Villain Profiles</p></center>
 
-<CENTER><b><a href="http://www.sonichq.org/comics/whoswho/roguesgallerya.html"><img src="http://www.geocities.com/EnchantedForest/Tower/4309/botnik.jpg" alt="Sonic Villians"></CENTER></a>
+<CENTER><b><a href="/sonichq/comics/whoswho/roguesgallerya.html"><img src="/sonichq/geocities/EnchantedForest/Tower/4309/botnik.jpg" alt="Sonic Villians"></CENTER></a>
 </TD>
 <TD>
 <center><font color="#FFFFFF">
 <p>Return To The Who's Who Main Page</p></center>
 
-<CENTER><b> <a href="http://www.sonichq.org/comics/whoswho/whoswho.html"> <img src="http://www.sonichq.org/comics/images/button.jpg" alt="Who's Who In The Sonic Universe?"></CENTER></a>
+<CENTER><b> <a href="/sonichq/comics/whoswho/whoswho.html"> <img src="/sonichq/comics/images/button.jpg" alt="Who's Who In The Sonic Universe?"></CENTER></a>
 </TD>
 <TD>
 <center>
 <p>Return To The Main HQ Comics Page</p></center>
 
-<CENTER><b><a href="http://www.sonichq.org/comics/comicpro.html"><img src="http://www.sonichq.org/comics/images/antisonic.jpg" alt="Return To The Comics Section"></CENTER></a>
+<CENTER><b><a href="/sonichq/comics/comicpro.html"><img src="/sonichq/comics/images/antisonic.jpg" alt="Return To The Comics Section"></CENTER></a>
 </TD>
 </TR>
 
