--- a/sonichq/main.htm
+++ b/sonichq/main.htm
@@ -26,12 +26,12 @@ scrollbar-arrow-color: #B0FFFF} -->
 
 <center>
 
-<IFRAME SRC="http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
+<IFRAME SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
 MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
-<SCRIPT LANGUAGE="JavaScript" SRC="http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
 </SCRIPT>
 <NOSCRIPT>
-<A HREF="http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank" HEIGHT="60" WIDTH="468"><IMG SRC="http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y"></A>
+<A HREF="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank" HEIGHT="60" WIDTH="468"><IMG SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y"></A>
 </NOSCRIPT>
 </IFRAME>
 
@@ -63,12 +63,12 @@ document.write(titlepic + titlelogo)
 
 <td WIDTH=2 BGCOLOR=000000>&nbsp;</td>
 
-<td VALIGN=TOP WIDTH="25%" bgcolor=000000 background=/comics/images/sonicbg.gif><font face="Verdana,Arial,Helvetica,sans-serif" color=FFFFFF size=-2><br>
+<td VALIGN=TOP WIDTH="25%" bgcolor=000000 background=comics/images/sonicbg.gif><font face="Verdana,Arial,Helvetica,sans-serif" color=FFFFFF size=-2><br>
 
-<center><IFRAME SRC="http://ads1.ad-flow.com/?DC=ztnet-ron-rst&TARGET=_blank" HEIGHT="125" WIDTH="125" SCROLLING="NO" MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
-<SCRIPT LANGUAGE="JavaScript">document.write('<SCR'+'IPT LANGUAGE="JavaScript" SRC="http://ads1.ad-flow.com/?DC=ztnet-ron-rst&JS=Y&TARGET=_blank"></SCR'+'IPT>');</SCRIPT>
+<center><IFRAME SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-rst&TARGET=_blank" HEIGHT="125" WIDTH="125" SCROLLING="NO" MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
+<SCRIPT LANGUAGE="JavaScript">document.write('<SCR'+'IPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-rst&JS=Y&TARGET=_blank"></SCR'+'IPT>');</SCRIPT>
 <NOSCRIPT>
-<A HREF="http://ads1.ad-flow.com/?SHT=ztnet-ron-rst" TARGET="_blank"><IMG SRC="http://ads1.ad-flow.com/?SIT=ztnet-ron-rst" HEIGHT="125" WIDTH="125"></A>
+<A HREF="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-rst" TARGET="_blank"><IMG SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-rst" HEIGHT="125" WIDTH="125"></A>
 </NOSCRIPT>
 </IFRAME>
 </center>
@@ -77,23 +77,23 @@ document.write(titlepic + titlelogo)
 <br><b>900,000!</b></center>
 <br>Be sure to e-mail <a href=mailto:freddyg@sprynet.com>Vec</a> if you get hit #900,000!
 
-<p>I'm trying to make sure that everything on the site is working right.  Please check <a href=http://pub12.ezboard.com/fsonichqcommunitymobiusforum.showMessage?topicID=4979.topic>here</a> for details.
+<p>I'm trying to make sure that everything on the site is working right.  Please check <a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunitymobiusforum.showMessage?topicID=4979.topic>here</a> for details.
 <p><center><u><b>Current Discussions!</b></u></center><b>
-<br><li><a href=http://pub12.ezboard.com/fsonichqcommunityfrm10.showMessage?topicID=492.topic>SA2 Chao Questions</a>
-<br><li><a href=http://pub12.ezboard.com/fsonichqcommunityfrm10.showMessage?topicID=524.topic>SA2 General Questions</a>
-<br><li><a href=http://pub12.ezboard.com/fsonichqcommunitymobiusforum.showMessage?topicID=5202.topic>Questions Of The Week</a>
-<br><li><a href=http://pub12.ezboard.com/fsonichqcommunityfrm10.showMessage?topicID=553.topic>Big Locations - Everyone Pitch In!</a>
-<br><li><a href=http://pub12.ezboard.com/fsonichqcommunitymobiusforum.showMessage?topicID=5172.topic>Vortex's Box 10-Episode Collection</a>
-<br><li><a href=http://pub12.ezboard.com/fsonichqcommunityfrm10.showMessage?topicID=165.topic>Is It Still Segasonic Without A Sega?</a>
-<br><li><a href=http://pub12.ezboard.com/fsonichqcommunitymobiusforum.showMessage?topicID=3213.topic>The Anime Laws Of Physics...</a>
+<br><li><a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunityfrm10.showMessage?topicID=492.topic>SA2 Chao Questions</a>
+<br><li><a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunityfrm10.showMessage?topicID=524.topic>SA2 General Questions</a>
+<br><li><a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunitymobiusforum.showMessage?topicID=5202.topic>Questions Of The Week</a>
+<br><li><a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunityfrm10.showMessage?topicID=553.topic>Big Locations - Everyone Pitch In!</a>
+<br><li><a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunitymobiusforum.showMessage?topicID=5172.topic>Vortex's Box 10-Episode Collection</a>
+<br><li><a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunityfrm10.showMessage?topicID=165.topic>Is It Still Segasonic Without A Sega?</a>
+<br><li><a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunitymobiusforum.showMessage?topicID=3213.topic>The Anime Laws Of Physics...</a>
 
 <p><center>Featured Pages</u></center>
-<li><b><u><a href=http://pub12.ezboard.com/fsonichqcommunityfrm22>The Kobun Kiosk</a></u></b> - Check out our new interactive Forum Guestbook!
+<li><b><u><a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunityfrm22>The Kobun Kiosk</a></u></b> - Check out our new interactive Forum Guestbook!
 <li><b><u><a href=news/news.htm>The News Page</a></u></b> - Public posting is back!  Post your news, rumors, and other info!
 
 <p><center><u>Free Charities</u></center>
-<li><b><a href=http://www.freedonation.com target=_blank>www.freedonation.com</a>
-<li><a href=http://www.thehungersite.com target=_blank>www.thehungersite.com</a></b>
+<li><b><a href=https://web.archive.org/20011101000000/http://www.freedonation.com target=_blank>www.freedonation.com</a>
+<li><a href=https://web.archive.org/20011101000000/http://www.thehungersite.com target=_blank>www.thehungersite.com</a></b>
 
 
 <td WIDTH=2 BGCOLOR=000000>&nbsp;</td>
@@ -291,7 +291,7 @@ Visit other Sonic and gaming sites, or get in touch with your fellow Sonic fans 
 
 <!black side bar>
 <td WIDTH=2 BGCOLOR=000000>&nbsp;</td>
-<td VALIGN=TOP WIDTH="25%" BGCOLOR=000000 background=/images/backgrounds/metalsonic.gif><font face="Verdana,Arial,Helvetica,sans-serif" color=FFFFFF size=-2><br>
+<td VALIGN=TOP WIDTH="25%" BGCOLOR=000000 background=images/backgrounds/metalsonic.gif><font face="Verdana,Arial,Helvetica,sans-serif" color=FFFFFF size=-2><br>
 
 <p>
 <b><a href=games/index>Game Index</a></b> - <u>July 25, 2001</u> - Added the chao guide, with quite a few details about chao.  More info will be added soon.<p>
@@ -301,14 +301,14 @@ Visit other Sonic and gaming sites, or get in touch with your fellow Sonic fans 
 <b><a href=games/index>Games</a></b> - <u>July 17, 2001</u> - Added more general gameplay info - the advanced moves.<p>
 
 
-<p><table border=0><tr><td><!-- Start of NedStat Basic code --> <a href="http://usa.nedstatbasic.net/cgi-bin/viewstat?name=shq" TARGET="_blank"><img src="http://usa.nedstatbasic.net/cgi-bin/nedstat.gif?name=shq" border=0 alt="" width=22 height=22></a> <!-- End of NedStat Basic code -->
-<IMG SRC="/scripts/counter/9.gif" WIDTH=15 HEIGHT=20 ALT="9"><IMG SRC="/scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="/scripts/counter/8.gif" WIDTH=15 HEIGHT=20 ALT="8"><IMG SRC="/scripts/counter/4.gif" WIDTH=15 HEIGHT=20 ALT="4"><IMG SRC="/scripts/counter/4.gif" WIDTH=15 HEIGHT=20 ALT="4"><IMG SRC="/scripts/counter/7.gif" WIDTH=15 HEIGHT=20 ALT="7"><br><font face="arial" size=-2 color=green>hits since Apr 11, 1998.</font></td>
+<p><table border=0><tr><td><!-- Start of NedStat Basic code --> <a href="https://web.archive.org/20011101000000/http://usa.nedstatbasic.net/cgi-bin/viewstat?name=shq" TARGET="_blank"><img src="https://web.archive.org/20011101000000/http://usa.nedstatbasic.net/cgi-bin/nedstat.gif?name=shq" border=0 alt="" width=22 height=22></a> <!-- End of NedStat Basic code -->
+<IMG SRC="scripts/counter/9.gif" WIDTH=15 HEIGHT=20 ALT="9"><IMG SRC="scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="scripts/counter/8.gif" WIDTH=15 HEIGHT=20 ALT="8"><IMG SRC="scripts/counter/4.gif" WIDTH=15 HEIGHT=20 ALT="4"><IMG SRC="scripts/counter/4.gif" WIDTH=15 HEIGHT=20 ALT="4"><IMG SRC="scripts/counter/7.gif" WIDTH=15 HEIGHT=20 ALT="7"><br><font face="arial" size=-2 color=green>hits since Apr 11, 1998.</font></td>
 
-<td><p><a target="_top" href="http://y.extreme-dm.com/s/?tag=sonicheq" TARGET="_blank">
-<img name=im src="http://y0.extreme-dm.com/i/" height=38 border=0
+<td><p><a target="_top" href="https://web.archive.org/20011101000000/http://y.extreme-dm.com/s/?tag=sonicheq" TARGET="_blank">
+<img name=im src="https://web.archive.org/20011101000000/http://y0.extreme-dm.com/i/" height=38 border=0
 width=41 alt=""></a><script language="javascript"><!--
 an=navigator.appName;d=document;function
-pr(){d.write("<img src=\"http://y1.extreme-dm.com",
+pr(){d.write("<img src=\"https://web.archive.org/20011101000000/http://y1.extreme-dm.com",
 "/z/?tag=sonicheq&j=y&srw="+srw+"&srb="+srb+"&",
 "rs="+r+"&l="+escape(d.referrer)+"\" height=1 ",
 "width=1>");}srb="na";srw="na";//-->
@@ -318,29 +318,29 @@ srb=s.colorDepth:srb=s.pixelDepth;//-->
 </script><script language="javascript"><!--
 r=41;d.images?r=d.im.width:z=0;pr();//-->
 </script><noscript><img height=1 width=1 alt="" 
-src="http://y1.extreme-dm.com/z/?tag=sonicheq&j=n"></noscript>
+src="https://web.archive.org/20011101000000/http://y1.extreme-dm.com/z/?tag=sonicheq&j=n"></noscript>
 </td></tr></table>
 
-<p><a href="http://www.emulationzone.org/" target="_blank"><img src="logo1.gif" border=0 width=179 height=24></a>
+<p><a href="https://web.archive.org/20011101000000/http://www.emulationzone.org/" target="_blank"><img src="logo1.gif" border=0 width=179 height=24></a>
 <br><a href="main/updateboard.htm"><img src="logo2.gif" border=0></a>
 <br><a href="main/staff.php"><img src="logo3.gif" border=0></a>
 
-<FORM ACTION="http://search.freefind.com/find.html" METHOD="GET">
+<FORM ACTION="https://web.archive.org/20011101000000/http://search.freefind.com/find.html" METHOD="GET">
 <INPUT TYPE="HIDDEN" NAME="id" SIZE="-1" VALUE="3443749">
 <INPUT TYPE="HIDDEN" NAME="pageid" SIZE="-1" VALUE="r">
 <INPUT TYPE="HIDDEN" NAME="mode" SIZE="-1" VALUE="ALL">
 <INPUT type="HIDDEN" name="n" value="0">
 
-<p><a href="http://freefind.com/servlet/freefind?id=3443749"><img src="logo6.gif" border=0 width=179 height=24></a>
+<p><a href="https://web.archive.org/20011101000000/http://freefind.com/servlet/freefind?id=3443749"><img src="logo6.gif" border=0 width=179 height=24></a>
 <br>
 <INPUT TYPE="TEXT" NAME="query" SIZE="24">
 <br>
-<small><INPUT TYPE="SUBMIT" VALUE="Find" align=left></small><font face="Arial" color=FFFFFF size=-1>&nbsp &nbsp &nbsp;powered by <A HREF="http://www.freefind.com"><font color=C0C0C0>FreeFind</font></A></font>
+<small><INPUT TYPE="SUBMIT" VALUE="Find" align=left></small><font face="Arial" color=FFFFFF size=-1>&nbsp &nbsp &nbsp;powered by <A HREF="https://web.archive.org/20011101000000/http://www.freefind.com"><font color=C0C0C0>FreeFind</font></A></font>
 </FORM>
 
 <TABLE BORDERCOLOR="" border="0" WIDTH="80%" CELLSPACING="0" CELLPADDING="0" BGCOLOR="#000000">
-<form action=http://64.4.16.250/cgi-bin/postrd/EN   method=GET target="_blank">
-<input type=hidden name="hm___action" value="http%3a%2f%2fwww%2esearchtraffic%2ecom%2fsearch%2ephp3">
+<form action=https://web.archive.org/20011101000000/http://64.4.16.250/cgi-bin/postrd/EN   method=GET target="_blank">
+<input type=hidden name="hm___action" value="https%3a%2f%2fweb%2earchive%2eorg%wf20011101000000%2fhttp%3a%2f%2fwww%2esearchtraffic%2ecom%2fsearch%2ephp3">
 
 <TR><td colspan=2>
 <center><a href="main/staff.php" width=179 height=24><img src="logo7.gif" border=0></center>
@@ -352,12 +352,12 @@ src="http://y1.extreme-dm.com/z/?tag=sonicheq&j=n"></noscript>
 <TD VALIGN="middle" ALIGN="left"><input type=submit value="Search"></TD>
 </TR></form></TABLE>
 
-<center><p><img src=http://www.atlantiscity.net/tl/misc/kobunhappy.gif>
-<a href=http://pub12.ezboard.com/fsonichqcommunityfrm22.showAddTopicScreenFromWeb border=0>Sign Our Guestbook!</a>
-<br><img src=http://www.atlantiscity.net/tl/misc/kobun-nono.gif>
-<a href=http://pub12.ezboard.com/fsonichqcommunityfrm22 border=0>View Our Guestbook! </a>
+<center><p><img src=https://web.archive.org/20011101000000/http://www.atlantiscity.net/tl/misc/kobunhappy.gif>
+<a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunityfrm22.showAddTopicScreenFromWeb border=0>Sign Our Guestbook!</a>
+<br><img src=https://web.archive.org/20011101000000/http://www.atlantiscity.net/tl/misc/kobun-nono.gif>
+<a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunityfrm22 border=0>View Our Guestbook! </a>
 
-<p><b><A HREF="http://www.topsitelists.com/games/sth/topsites.cgi?ID=30" target="_whole">Vote for us in the Top 50 Sonic Sites!</A></b></center>
+<p><b><A HREF="https://web.archive.org/20011101000000/http://www.topsitelists.com/games/sth/topsites.cgi?ID=30" target="_whole">Vote for us in the Top 50 Sonic Sites!</A></b></center>
 
 </font></td>
 
