--- a/sonichq/cartoon/before/index.html
+++ b/sonichq/cartoon/before/index.html
@@ -5,7 +5,7 @@
 </STYLE>
 </head>
 <body bgcolor="#000000" TEXT="#fffffff" LINK="#fffffff" VLINK="#fffffff" ALINK="#33cc66" 
-background="http://www.sonichq.org/cartoon/images/negaback3.jpg" bgproperties=fixed>
+background="/sonichq/cartoon/images/negaback3.jpg" bgproperties=fixed>
 
 <p><!table width="100%" bgcolor="#000000" border=1 bordercolorlight="brown" bordercolordark="brown" ALIGN=CENTER>
 <table width="100%" bgcolor="#000000" border=1 bordercolorlight="brown" bordercolordark="brown" ALIGN=CENTER>
@@ -31,8 +31,8 @@ alt="Sonic And....PRINCESS SALLY ??????">
 </center>
 <p>
 <center>
-<A HREF=http://www.sonichq.org/cartoon/SatAM/saturday2.wav>
-<IMG SRC=http://ssrg.emulationzone.org/fanmade/xtreme1.gif nosave border=0></a>
+<A HREF=/sonichq/cartoon/SatAM/saturday2.wav>
+<IMG SRC=https://web.archive.org/20011101000000/http://ssrg.emulationzone.org/fanmade/xtreme1.gif nosave border=0></a>
 <br>Sonic The Hedgehog - Theme Song<br> <u>WAV File</u>: Click Sonic Animated Gif, Then Download<p>
 
 </font></center>
@@ -109,7 +109,7 @@ with more concepts such as the "Pink Sally", the previous "Bunnie Rabbot" design
 <!MAIN TABLE TOP>
 <table border=0 cellspacing=0 cellpadding=0 width=90%>
 <tr><td width=19></td>
-<td bgcolor=000000 width=100% valign=middle><center><br><a href=http://www.sonichq.org/cartoon>Back to Sonic HQ Cartoons Page</a></center><br>
+<td bgcolor=000000 width=100% valign=middle><center><br><a href=/sonichq/cartoon>Back to Sonic HQ Cartoons Page</a></center><br>
 
 <td bgcolor=black width=100%>
 <center></center></td>
