--- a/sonichq/cartoon/index.html
+++ b/sonichq/cartoon/index.html
@@ -7,28 +7,28 @@
 <!-- a:hover {text-decoration: underline}
 A{text-decoration:none} -->
 </style>
-<script src=/scripts/sonic-init.js></script>
+<script src=/sonichq/scripts/sonic-init.js></script>
 <script language=JavaScript>
 <!--
-document.write('<link rel=stylesheet href=http://www.sonichq.org/css/' + theme + '.css type="text/css">')
+document.write('<link rel=stylesheet href=/sonichq/css/' + theme + '.css type="text/css">')
 //-->
 </script>
 <noscript>
-<link rel=stylesheet href=http://www.sonichq.org/css/main.css type="text/css">
+<link rel=stylesheet href=/sonichq/css/main.css type="text/css">
 </noscript>
 </head>
 
-<body text="#000000" bgcolor="white" link=3366ff vlink=3366ff background="/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
+<body text="#000000" bgcolor="white" link=3366ff vlink=3366ff background="/sonichq/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
 
 <br>
 
 <center>
-<IFRAME SRC="http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
+<IFRAME SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
 MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
-<SCRIPT LANGUAGE="JavaScript" SRC="http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
 </SCRIPT>
 <NOSCRIPT>
-<A HREF="http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
+<A HREF="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
 </NOSCRIPT>
 </IFRAME>
 </center>
@@ -40,7 +40,7 @@ MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
 
 <!main table top>
 <p><table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH="100%" class=maintable>
-<tr><td width=19><img src=/topleft.gif width=19></td>
+<tr><td width=19><img src=/sonichq/topleft.gif width=19></td>
 
 <td bgcolor=black width=100% height=50>
 <script language=JavaScript>
@@ -50,12 +50,12 @@ document.write(titlepic)
 </script>
 <img src=images/carlog.jpg align=right></td>
 
-<td width=19><img src=/topright.gif width=19></td></tr>
+<td width=19><img src=/sonichq/topright.gif width=19></td></tr>
 </table>
 <!end main table top>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100% class=maintable><td valign=middle width=100% bgcolor=black><font size=2>
-<script src=/scripts/menu.js></script>
+<script src=/sonichq/scripts/menu.js></script>
 <noscript>&nbsp;</noscript>
 </font></td></table>
 
@@ -114,91 +114,91 @@ document.write('<center>MIDI: ' + caption + '<br><a href="#" onClick="MidiPlayer
 <b><center><SCRIPT>
 
 var nummidi = 27
-var midi = ("http://www.geocities.com/EnchantedForest/Tower/4309/rfastestthingek.mid")
+var midi = ("/sonichq/geocities/EnchantedForest/Tower/4309/rfastestthingek.mid")
 var caption = ("<br>Saturday Morning Remix")
 day = new Date()
 seed = day.getTime()
 ran = parseInt(((seed - (parseInt(seed/1000,10) * 1000))/10)/100*nummidi + 1,10)
 
-if (ran == (1)) midi=("http://www.geocities.com/EnchantedForest/Tower/4309/rfastestthingek.mid")
+if (ran == (1)) midi=("/sonichq/geocities/EnchantedForest/Tower/4309/rfastestthingek.mid")
 if (ran == (1)) caption=("<br>Saturday Morning Remix")
 
-if (ran == (2)) midi=("http://www.geocities.com/EnchantedForest/Dell/7835/SCSatAM.mid")
+if (ran == (2)) midi=("/sonichq/geocities/EnchantedForest/Dell/7835/SCSatAM.mid")
 if (ran == (2)) caption=("<br>Saturday Morning Normal")
 
-if (ran == (3)) midi=("http://www.geocities.com/EnchantedForest/Dell/7835/taosthbadnikswa.mid")
+if (ran == (3)) midi=("/sonichq/geocities/EnchantedForest/Dell/7835/taosthbadnikswa.mid")
 if (ran == (3)) caption=("<br>Here Come The Badniks!")
 
-if (ran == (4)) midi=("http://www.sonichq.org/music/midis/rivercity/rcr-boss.mid")
+if (ran == (4)) midi=("/sonichq/music/midis/rivercity/rcr-boss.mid")
 if (ran == (4)) caption=("<br>River City Ransom - Boss Music")
 
-if (ran == (5)) midi=("http://www.sonichq.org/music/midis/kirby/xky-k-36.mid")
+if (ran == (5)) midi=("/sonichq/music/midis/kirby/xky-k-36.mid")
 if (ran == (5)) caption=("<br>Kirby Super Star - The Great Cave Offensive")
 
-if (ran == (6)) midi=("http://www.sonichq.org/music/midis/mario/3ending.mid")
+if (ran == (6)) midi=("/sonichq/music/midis/mario/3ending.mid")
 if (ran == (6)) caption=("<br>Mario - Ending Credits")
 
-if (ran == (7)) midi=("http://www.sonichq.org/music/midis/dkc2-b.mid")
+if (ran == (7)) midi=("/sonichq/music/midis/dkc2-b.mid")
 if (ran == (7)) caption=("<br>Donkey Kong Country - Haunted Woods")
 
-if (ran == (8)) midi=("http://www.sonichq.org/music/midis/mm/5/gyro-remix.mid")
+if (ran == (8)) midi=("/sonichq/music/midis/mm/5/gyro-remix.mid")
 if (ran == (8)) caption=("<br>Gyro Man Remix")
 
-if (ran == (9)) midi=("http://www.sonichq.org/music/midis/mm/7/slash.mid")
+if (ran == (9)) midi=("/sonichq/music/midis/mm/7/slash.mid")
 if (ran == (9)) caption=("<br>Slash Man's Stage")
 
-if (ran == (10)) midi=("http://www.sonichq.org/music/midis/mario/Bowserkp.mid")
+if (ran == (10)) midi=("/sonichq/music/midis/mario/Bowserkp.mid")
 if (ran == (10)) caption=("<br>Mario RPG - Bowser's Keep")
 
-if (ran == (11)) midi=("http://www.sonichq.org/music/midis/mm/2/quickman_samba.mid")
+if (ran == (11)) midi=("/sonichq/music/midis/mm/2/quickman_samba.mid")
 if (ran == (11)) caption=("<br>Quick Man Samba Remix")
 
-if (ran == (12)) midi=("http://www.sonichq.org/music/midis/mario/frstmaze.mid")
+if (ran == (12)) midi=("/sonichq/music/midis/mario/frstmaze.mid")
 if (ran == (12)) caption=("<br>Mario RPG - Forest Maze")
 
-if (ran == (13)) midi=("http://www.sonichq.org/music/midis/mm/5/NapalmMan-Remix.mid")
+if (ran == (13)) midi=("/sonichq/music/midis/mm/5/NapalmMan-Remix.mid")
 if (ran == (13)) caption=("<br>Napalm Man Remix")
 
-if (ran == (14)) midi=("http://www.sonichq.org/music/midis/s3/HydroCity2.mid")
+if (ran == (14)) midi=("/sonichq/music/midis/s3/HydroCity2.mid")
 if (ran == (14)) caption=("<br>Hydrocity Zone Remix - Jarel Jones")
 
-if (ran == (15)) midi=("http://www.sonichq.org/music/midis/mm/2/heatman.mid")
+if (ran == (15)) midi=("/sonichq/music/midis/mm/2/heatman.mid")
 if (ran == (15)) caption=("<br>Heat Man's Stage")
 
-if (ran == (16)) midi=("http://www.sonichq.org/music/midis/mm/5/crystal.mid")
+if (ran == (16)) midi=("/sonichq/music/midis/mm/5/crystal.mid")
 if (ran == (16)) caption=("<br>Crystal Man Remix")
 
-if (ran == (17)) midi=("http://www.sonichq.org/music/midis/sjmuseum.mid")
+if (ran == (17)) midi=("/sonichq/music/midis/sjmuseum.mid")
 if (ran == (17)) caption=("<br>Sonic Jam Museum")
 
-if (ran == (18)) midi=("http://www.sonichq.org/music/midis/mm/5/mm5wave2.mid")
+if (ran == (18)) midi=("/sonichq/music/midis/mm/5/mm5wave2.mid")
 if (ran == (18)) caption=("<br>Wave Man Remix")
 
-if (ran == (19)) midi=("http://www.sonichq.org/music/midis/mm/5/mm5-stoneman1.mid")
+if (ran == (19)) midi=("/sonichq/music/midis/mm/5/mm5-stoneman1.mid")
 if (ran == (19)) caption=("<br>Stone Man's Stage")
 
-if (ran == (20)) midi=("http://www.sonichq.org/music/midis/mm/2/mm2-bubl.mid")
+if (ran == (20)) midi=("/sonichq/music/midis/mm/2/mm2-bubl.mid")
 if (ran == (20)) caption=("<br>Bubble Man's Stage")
 
-if (ran == (21)) midi=("http://www.sonichq.org/music/midis/Greenhills.mid")
+if (ran == (21)) midi=("/sonichq/music/midis/Greenhills.mid")
 if (ran == (21)) caption=("<br>Green Hills Zone")
 
-if (ran == (22)) midi=("http://www.sonichq.org/music/midis/s3/aisland2.mid")
+if (ran == (22)) midi=("/sonichq/music/midis/s3/aisland2.mid")
 if (ran == (22)) caption=("<br>Angel Island Zone")
 
-if (ran == (23)) midi=("http://www.sonichq.org/music/midis/mm/ground.mid")
+if (ran == (23)) midi=("/sonichq/music/midis/mm/ground.mid")
 if (ran == (23)) caption=("<br>Ground Man's Stage")
 
-if (ran == (24)) midi=("http://www.sonichq.org/music/midis/s2/aquaticruin1.mid")
+if (ran == (24)) midi=("/sonichq/music/midis/s2/aquaticruin1.mid")
 if (ran == (24)) caption=("<br>Aquatic Ruin Zone")
 
-if (ran == (25)) midi=("http://www.sonichq.org/music/midis/s3/azure.mid")
+if (ran == (25)) midi=("/sonichq/music/midis/s3/azure.mid")
 if (ran == (25)) caption=("<br>Azure Lake Zone")
 
-if (ran == (26)) midi=("http://www.sonichq.org/music/midis/sk/mushh2.mid")
+if (ran == (26)) midi=("/sonichq/music/midis/sk/mushh2.mid")
 if (ran == (26)) caption=("<br>Mushroom Hill Zone")
 
-if (ran == (27)) midi=("http://www.sonichq.org/music/midis/FF7CHOCO.mid")
+if (ran == (27)) midi=("/sonichq/music/midis/FF7CHOCO.mid")
 if (ran == (27)) caption=("<br>Final Fantasy 7 - The Electric Chocobo !!!")
 
 document.write('<p><embed src=' + midi + ' type=audio/midi autostart=true loop=true controls=smallconsole width=50 height=30>' + caption + '</embed></p>')
@@ -206,8 +206,8 @@ document.write('<p><embed src=' + midi + ' type=audio/midi autostart=true loop=t
 </SCRIPT></b></center>
 
 <p>I'd like to thank everyone who has emailed us with advice, info, and compliments on the cartoons page. We really appreciate your input! SPECIAL THANKS to Doctor Zac, Alessandro Sanasi, Soneec of Sonic Pandemonium, A.J. Freda, and Jonathan Lipscomb. Thanks IMMENSELY for all your help!
-<p><center><img src="http://www.sonichq.org/images/pjsmini2.gif" width=130 height=200 alt="But first - Sonic HQ: The Legal Disclaimer"><br></center>
-<center><font color="#ffcc00"> <p align="center"><font size=-1><b>Copyrights for Sega Games and Sega Comic Material belong to <a href="http://www.sega.com/" target="_blank">Service Games, Inc</a> and <a href="http://www.archiecomics.com/" target="_blank">Archie Comics</a>.</b> Sonic Headquarters has no connections with Sega or Archie. It was created by <a href="mailto:zifei@yahoo.com">Zifei Wu</a> and this page is maintained by <a href="mailto:neoblackbat@hotmail.com">Jonathan "WB" Gray</a> and <a href="mailto:lien_na@hotmail.com">Lien Nguyen</a>. If you want to use text, music or screenshots from Sonic HQ on your website, then we ask that you ask us permission first as it took us quite a bit of hardwork to make it. As long as you credit the site properly and also link to it everything should be OK. On the internet, artwork and original graphics are exclusive to Sonic HQ, so don't use them. All original material on this site is copyright © 1996-1999 Sonic HQ.</font></p>
+<p><center><img src="/sonichq/images/pjsmini2.gif" width=130 height=200 alt="But first - Sonic HQ: The Legal Disclaimer"><br></center>
+<center><font color="#ffcc00"> <p align="center"><font size=-1><b>Copyrights for Sega Games and Sega Comic Material belong to <a href="https://web.archive.org/20011101000000/http://www.sega.com/" target="_blank">Service Games, Inc</a> and <a href="https://web.archive.org/20011101000000/http://www.archiecomics.com/" target="_blank">Archie Comics</a>.</b> Sonic Headquarters has no connections with Sega or Archie. It was created by <a href="mailto:zifei@yahoo.com">Zifei Wu</a> and this page is maintained by <a href="mailto:neoblackbat@hotmail.com">Jonathan "WB" Gray</a> and <a href="mailto:lien_na@hotmail.com">Lien Nguyen</a>. If you want to use text, music or screenshots from Sonic HQ on your website, then we ask that you ask us permission first as it took us quite a bit of hardwork to make it. As long as you credit the site properly and also link to it everything should be OK. On the internet, artwork and original graphics are exclusive to Sonic HQ, so don't use them. All original material on this site is copyright © 1996-1999 Sonic HQ.</font></p>
 </center>
 </font></td></tr>
 </table>
@@ -215,9 +215,9 @@ document.write('<p><embed src=' + midi + ' type=audio/midi autostart=true loop=t
 
 <!main table bottom>
 <table border=0 cellspacing=0 cellpadding=0 width=100% class=maintable><tr>
-<td><img SRC="/bottomleft.gif" BORDER=0 height=20></td>
+<td><img SRC="/sonichq/bottomleft.gif" BORDER=0 height=20></td>
 <td width=99% bgcolor=000000><font color="white" size=-3 face="arial"><center>Page is ©1996-2000 Sonic HQ.  Sonic & Co. are © Sega.</center></font></td>
-<td><img SRC="/bottomright.gif" BORDER=0 height=20></td>
+<td><img SRC="/sonichq/bottomright.gif" BORDER=0 height=20></td>
 </tr></table>
 <!end main table bottom>
 
