--- a/sonichq/comics/index.html
+++ b/sonichq/comics/index.html
@@ -17,14 +17,14 @@
   <p>
   <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH="90%">
     <tr>
-      <td width=19 height="28"><img src=http://www.sonichq.org/topleft.gif width=19></td>
+      <td width=19 height="28"><img src=/sonichq/topleft.gif width=19></td>
 
       <td bgcolor=black width=100% height="28"> 
         <div align="right"><font color="#FFFFFF" face="Arial, Helvetica, sans-serif" size="5"><b>Archie 
           Sonic Comics</b></font></div>
       </td>
 
-      <td width=19 height="28"><img src=http://www.sonichq.org/topright.gif width=19></td>
+      <td width=19 height="28"><img src=/sonichq/topright.gif width=19></td>
     </tr>
 </table>
   <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH="90%" BGCOLOR="#3333FF">
@@ -238,19 +238,19 @@
 </table>
   <table border=0 cellspacing=0 cellpadding=0 width="90%">
     <tr>
-      <td height="21"><img SRC=http://www.sonichq.org/bottomleft.gif BORDER=0 height=20></td>
+      <td height="21"><img SRC=/sonichq/bottomleft.gif BORDER=0 height=20></td>
       <td width=100% bgcolor=000000 height="21"> 
         <div align="center"><font color="white" face="arial"><a href="../main.htm"><b>HOME</b></a></font><font color="white" size="-3" face="arial"> 
           </font> </div>
       </td>
-      <td height="21"><img SRC=http://www.sonichq.org/bottomright.gif BORDER=0 height=20></td>
+      <td height="21"><img SRC=/sonichq/bottomright.gif BORDER=0 height=20></td>
 </tr></table>
   <br>
   <table width="75%" border="1" bgcolor="#000000" bordercolor="#000099" cellspacing="0" cellpadding="1">
     <tr>
       <td><font color="#CCCCCC" face="Verdana, Arial, Helvetica, sans-serif" size="1"><b>Copyrights 
-        for Sega Games and Sonic Comic materials belong to <a href="http://www.sega.com">Service 
-        Games, Inc</a> and <a href="http://www.archiecomics.com">Archie Comic 
+        for Sega Games and Sonic Comic materials belong to <a href="https://web.archive.org/20011101000000/http://www.sega.com">Service 
+        Games, Inc</a> and <a href="https://web.archive.org/20011101000000/http://www.archiecomics.com">Archie Comic 
         Publications</a>.</b> Sonic Headquarters has no connections with Sega 
         or Archie Comics. It was created by <a href="mailto:zifei@yahoo.com">Zifei 
         Wu</a> and this page is maintained by <a href="mailto:lien_na@hotmail.com">Lien 
@@ -258,7 +258,7 @@
         Gray</a>. If you want to use text, music or screenshots from Sonic HQ 
         on your website, then we ask that you ask us permission first. On the 
         internet, artwork and original graphics are exclusive to Sonic HQ. All 
-        original material on this site is copyright © 1996-2000 <a href="http://www.sonichq.org">Sonic 
+        original material on this site is copyright © 1996-2000 <a href="/sonichq">Sonic 
         HQ</a>. </font></td>
     </tr>
   </table>
