--- a/sonichq/comics/reviews/sonic/s52.htm
+++ b/sonichq/comics/reviews/sonic/s52.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic #52 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic52.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic52.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>Here's Lookin' At You Kid !</p>
 <p>Sonic The Hedgehog #52<br>
@@ -91,7 +91,7 @@ believe him. Sally said: "I think someone's been eating too many chili-dogs."
 And that's the end.
 <hr>
 
-<p><b>Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 </p>
 
 <p>This story blew...HARD! Hopefully the Brave New World special and Naugus' first appearance from cartoon to comic will do much better.
@@ -104,13 +104,13 @@ want to make a comment on page 5, panel 5, how could King Acorn smile and
 hug someone when his 95% crystallized?!? 
 <hr>
 
-<p><b>Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 </p>
 
 <p>Now this is more like it!! The art is good and the story isn't bad. Heck, Karl Bollers managed to do a simple recap in 6 pages and then leave a nice twist at the end. Foreshadowing of things to come?
 Perhaps. But for right now this makes up for the horrible drek that was read above.
 
-<p><b>Overall Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> - And thats ONLY because of the backup...
+<p><b>Overall Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> - And thats ONLY because of the backup...
 </p>
 
 
