--- a/sonichq/comics/reviews/sonic/s56.htm
+++ b/sonichq/comics/reviews/sonic/s56.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic #56 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic56.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic56.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>Super Teen Extraordinaire, Freakazoid! Freakazoid! Runs Around In Underwear, Freakazoid Freakazoid!
 <br>Super Sonic And Hyper Knuckles Tackle The Evil That Is....<u>FLUBBER !!!!</u> </u></p>
@@ -106,7 +106,7 @@ So up for some Sonic solo adventures?
 <hr>
 
 
-<p><b>Rating:<img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">  rings
+<p><b>Rating:<img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">  rings
 </p>
 
 <p>After reading this issue, I was a little depressed. I'm not
