--- a/sonichq/comics/reviews/sonic/s70.htm
+++ b/sonichq/comics/reviews/sonic/s70.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic #70 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/big/sonic70.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/big/sonic70.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>Sonic The Barbarian !!!</p>
 <p>Sonic The Hedgehog #70<br>
@@ -60,7 +60,7 @@ Rolland Thierren(Reviewer)<br>
 
 <p>Review Rating:
 <br>Saving Nate Morgan.
-<br><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<br><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 
 <p>One of the better action stories I've read in Sonic in a while, it's clear Archie has finally arrived at a winning combo. Sonic dominates the feature, but the FFs are there. The fast paced action is there, but the plot doesn't take a back seat to it. There's some foreshadowing, but the sub-plots aren't getting tiresome...yet. The St-John/Sonic rivalery is still going strong, dispite the fact that Sally no longer seems to be a factor.
 Elias, I must admit, has grown in my esteem, yet stills remains an enigma. All in all, a good issue.
@@ -71,11 +71,11 @@ Elias, I must admit, has grown in my esteem, yet stills remains an enigma. All i
 
 <p>Review Rating:
 <br>Statue Of Limitations.
-<br><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<br><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 
 <p>Sonic's having doubts about his role as a hero. A classical story element, I'm somewhat disappointed Archie authors are dealing with it in such a short matter. That story could have made a great issue, not just a back-up story! Oh well. I just hope they talk about it again.
 
-<p>Overall Rating: <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<p>Overall Rating: <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 
 </td>
 
