--- a/sonichq/comics/reviews/sonic/s73.htm
+++ b/sonichq/comics/reviews/sonic/s73.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic #73 (3-20-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic73.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic73.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>The Freedom Fighters Fight Once More!...And Someone In Space Isn't Too Happy...</p>
 <p>Sonic The Hedgehog #73<br>
@@ -83,7 +83,7 @@ Rolland Theirren(Reviewer)<br>
 <p>It may not be funny to Sonic, but high above, in the Orbital platform, Dr. Robotnik is Laughing maniacally, with Snively cowerign for all he's worth, as if he was in the Devil's own presence....
 <hr>
 
-<p><u>Rating</u></p> <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<p><u>Rating</u></p> <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 </p>
 
 <p>Okay, time for the comments: This Issue was GREAT! The "Back in Business" caption on the cover didn't mean the Freedom Fighters were back in business, but Robotnik was. And, while we're on the Subject of Robotnik being back, let me just say: YES! YES YES YES! Finally, the one villain worthy of Sonic has returned! Now, some have said that Dr Robotnik is tired as a villain, and that they should get a new villain. I say, it's good to have the ultimate Evil mastermind back in business. Let's hope Archie handles him like he should be handled: Like a truly grand and vicious villain, not as comic relief. People, he's Archie Comic's Doctor Doom here. He should be handled as such. 
@@ -110,12 +110,12 @@ Rolland Theirren(Reviewer)<br>
 <p>The story ends here, but next time, we will see what happened when Robotnik joined the Mobians.
 <hr>
 
-<p><u>Rating</u></p> <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<p><u>Rating</u></p> <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 </p>
 
 <p>Well, a great story and great art made this tale a true joy to read. The subject in this storyline just keeps getting more and more serious and grim, as should any story about war be. The subject of death was handled in a very mature manner, and Kodos' callous disregard for life only makes him an even more dispicable villain. It also proves that wars are often the result of two sides not wanting to communicate. Had the Overlanders and the Mobians been willing to talk, they might've figured out what really happened to their scouts, rather then jumping to conclusions.
 
-<p><u>Overall Rating</u></p> <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif">
+<p><u>Overall Rating</u></p> <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif">
 </p>
 </td>
 
