--- a/sonichq/comics/reviews/specials/sss6.htm
+++ b/sonichq/comics/reviews/specials/sss6.htm
@@ -4,13 +4,13 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#ffffff" background ="http://www.sonichq.org/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
+<body bgcolor="#ffffff" background ="/sonichq/comics/images/sonicsta.gif" TEXT="#000000" LINK="#0000ff" VLINK="#ff0000" bgproperties="fixed">
 
 <TABLE BORDER=5 CELLSPACING=2 CELLPADDING=2 bgcolor="#ffffff" width=100%
-background ="http://www.sonichq.org/comics/images/background.jpg">
+background ="/sonichq/comics/images/background.jpg">
 
 <TABLE BORDER=5 VALIGN=TOP width=100% bgcolor="pink" 
-background="http://www.sonichq.org/comics/images/background.jpg">
+background="/sonichq/comics/images/background.jpg">
 <tr><td align=center width=60%>
 
 <br>
@@ -23,7 +23,7 @@ This Week In Review: Sonic Super Special #6 (3-17-99)
   </tr>
 </table>
 
-<center><p><IMG SRC="http://members.spree.com/funNgames/asudem/comix/specials/small/sss6.jpg"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/specials/small/sss6.jpg"></p>
 <font face="arial"><font color="#003333"><font size="2">
 <b>The Way Endgame SHOULD Have Been! </p>
 <p>Sonic Super Special #6: Sonic Kids<br>
@@ -41,7 +41,7 @@ Jonathan Gray (Reviewer)<br>
 
 <p>For those of you who couldn't make it last night to the chat party, here's the big secret, and don't be afraid to respond.<BR><BR>Well, you all remember my reaction to the big kiss in the director's cut. (Look on the News Page if you haven't seen it.) I was screaming for joy in the car in happiness.<BR><BR>Well, on the way home from the comic store Wednesday, out of a fortunate twist of events, my girlfriend Andrea Vargo beeped me. Knowing that this was a great coincidence, I immediately went there. I showed her the whole thing, and she was just as happy and excited as I was.<BR><BR>It was then that I realized. That picture of Sonic & Sally's kiss held a great meaning within me. Within that picture & that kiss, I saw everything that it stood for and portrayed. It was pure, cute, gentle, beautiful, and full of all emotion that is good. In noticing that, I realized that I saw the same things in Andrea. I knew right then that it was the perfect time.<BR><BR>Perfect time for what, you ask?<BR><BR>I got down on one knee and proposed marriage to her.<BR><BR>Her response, and I quote: Yes. Yes. With all my heart, yes.<BR><BR>That's right! I am now engaged to be married. Granted, the engagment is unofficial and our secret until I get the ring (Phooey!), and the actual marriage won't be for a few years (College first. I'm only 20, she's 19.), but I knew right then that I had to ask. There was no more perfect time, and I didn't want to lose that moment.<BR><BR>So what do you guys think? Come share in my happiness over this magical event.<BR><BR>
 
-<b><p><center>To Brian Sapinski - Associate, Friend, and overall good guy - We congratulate you. May you and your days with Andrea be forever encased in happiness. Like we said folks - This issue was extra special and though we normally dont do this this issue gets an extra special <img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"><img src="http://members.tripod.com/~warpsonic/ring.gif"> 1/2 Rings.......Brian - On behalf of the entire Sonic HQ staff - Zifei, myself (WB ), Crimson Kitty, Ergon Acorn, Ben Acorn, Geno Star, Knux Lee, Troophead, Jet, Jennifurry, Maric, Questa, Joya Nappo, Lien Na, Pepper J. Zeal, Asudem, Auburn, Pyroclad, Centurion, and anybody else that I may have possibly missed we congratulate you - Best wishes. We give you your props man - Cause you darn well deserve it - friend.</p></b></center>
+<b><p><center>To Brian Sapinski - Associate, Friend, and overall good guy - We congratulate you. May you and your days with Andrea be forever encased in happiness. Like we said folks - This issue was extra special and though we normally dont do this this issue gets an extra special <img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"><img src="/sonichq/tripod/warpsonic/ring.gif"> 1/2 Rings.......Brian - On behalf of the entire Sonic HQ staff - Zifei, myself (WB ), Crimson Kitty, Ergon Acorn, Ben Acorn, Geno Star, Knux Lee, Troophead, Jet, Jennifurry, Maric, Questa, Joya Nappo, Lien Na, Pepper J. Zeal, Asudem, Auburn, Pyroclad, Centurion, and anybody else that I may have possibly missed we congratulate you - Best wishes. We give you your props man - Cause you darn well deserve it - friend.</p></b></center>
 
 <p><center><b>And to those of you with that whole "Sonic sucks" attitude" - Go suck a lemon!!! Peace out, peeps - WB !!!!!!</p></center></b>
 
