--- a/sonichq/comics/scans/fleetway26-50.html
+++ b/sonichq/comics/scans/fleetway26-50.html
@@ -4,7 +4,7 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="black" background="http://www.sonichq.org/images/backgrounds/tailsnamy.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
+<body bgcolor="black" background="/sonichq/images/backgrounds/tailsnamy.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
 
 </text>
 <fontcolor="#e5e5e5">
@@ -23,7 +23,7 @@
           to Comics Scans</font></a></b></font></div>
       </td>
 <td bgcolor="#1D002B" height="28" width="200"> 
-        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="http://www.sonichq.org/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
+        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="/sonichq/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
           to Downloads</font></a></b></font></div>
       </td>
       <td bgcolor="#1D002B" height="28" width="200"> 
@@ -41,11 +41,11 @@
         <div align="center">
           <table border=0 cellspacing=0 cellpadding=0 width="100%">
             <tr>
-              <td width=19><img src="http://www.sonichq.org/topleft.gif" width=19></td>
+              <td width=19><img src="/sonichq/topleft.gif" width=19></td>
               <td bgcolor=black width=100%> 
                 <div align="right"><font face="Arial, Helvetica, sans-serif" size="4" color="#DDC2FF"><b>Cover Gallery #26-50</b></font></div>
               </td>
-              <td width=19><img src="http://www.sonichq.org/topright.gif" width=19></td>
+              <td width=19><img src="/sonichq/topright.gif" width=19></td>
             </tr></table></td></tr>
           </table>
 <TABLE ALIGN=CENTER BORDER=2 CELLSPACING=3 CELLPADDING=3 width=70% bgcolor=black>
@@ -71,28 +71,28 @@
 <TR width=50%>
 <TD>
 <center>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc26.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/26.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc26.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/26.jpg" 
 alt="Sonic The Comic #26"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc27.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/27.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc27.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/27.jpg" 
 alt="Sonic The Comic #27"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc28.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/28.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc28.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/28.jpg" 
 alt="Sonic The Comic #28"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc29.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/29.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc29.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/29.jpg" 
 alt="Sonic The Comic #29"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc30.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/30.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc30.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/30.jpg" 
 alt="Sonic The Comic #30"></A>
 </TD>
 </TR>
@@ -118,28 +118,28 @@ alt="Sonic The Comic #30"></A>
 <TR width=50%>
 <TD>
 <center>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc31.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/31.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc31.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/31.jpg" 
 alt="Sonic The Comic #31"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc32.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/32.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc32.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/32.jpg" 
 alt="Sonic The Comic #32"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc33.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/33.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc33.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/33.jpg" 
 alt="Sonic The Comic #33"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc34.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/34.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc34.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/34.jpg" 
 alt="Sonic The Comic #34"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc05.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/35.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc05.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/35.jpg" 
 alt="Sonic The Comic #35"></A>
 </TD>
 </TR>
@@ -165,28 +165,28 @@ alt="Sonic The Comic #35"></A>
 <TR width=50%>
 <TD>
 <center>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc36.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/36.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc36.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/36.jpg" 
 alt="Sonic The Comic #36"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc37.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/37.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc37.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/37.jpg" 
 alt="Sonic The Comic #37"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc38.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/38.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc38.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/38.jpg" 
 alt="Sonic The Comic #38"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc39.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/39.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc39.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/39.jpg" 
 alt="Sonic The Comic #39"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc40.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/40.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc40.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/40.jpg" 
 alt="Sonic The Comic #40"></A>
 </TD>
 </TR>
@@ -212,28 +212,28 @@ alt="Sonic The Comic #40"></A>
 <TR width=50%>
 <TD>
 <center>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc41.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/41.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc41.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/41.jpg" 
 alt="Sonic The Comic #41"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc42.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/42.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc42.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/42.jpg" 
 alt="Sonic The Comic #42"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc43.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/43.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc43.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/43.jpg" 
 alt="Sonic The Comic #43"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc44.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/44.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc44.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/44.jpg" 
 alt="Sonic The Comic #44"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc45.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/45.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc45.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/45.jpg" 
 alt="Sonic The Comic #45"></A>
 </TD>
 </TR>
@@ -259,28 +259,28 @@ alt="Sonic The Comic #45"></A>
 <TR width=50%>
 <TD>
 <center>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc46.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/46.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc46.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/46.jpg" 
 alt="Sonic The Comic #46"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc47.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/47.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc47.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/47.jpg" 
 alt="Sonic The Comic #47"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc48.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/48.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc48.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/48.jpg" 
 alt="Sonic The Comic #48"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc49.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/49.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc49.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/49.jpg" 
 alt="Sonic The Comic #49"></A>
 </TD>
 <TD>
-<A HREF="http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc50.jpg">
-<IMG SRC="http://www.sonichq.org/comics/scans/fleetway/50.jpg" 
+<A HREF="https://web.archive.org/20011101000000/http://members.spree.com/FunNgames/samanfur/fleetway/cover_scans/stc50.jpg">
+<IMG SRC="/sonichq/comics/scans/fleetway/50.jpg" 
 alt="Sonic The Comic #50"></A>
 </TD>
 </TR>
