--- a/sonichq/comics/scans/sonic26-50.html
+++ b/sonichq/comics/scans/sonic26-50.html
@@ -4,7 +4,7 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="black" background="http://www.sonichq.org/comics/images/sonicbg.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
+<body bgcolor="black" background="/sonichq/comics/images/sonicbg.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
 
 </text>
 <fontcolor="#e5e5e5">
@@ -25,7 +25,7 @@
           to Comics Scans</font></a></b></font></div>
       </td>
 <td bgcolor="#000099" height="28" width="200"> 
-        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="http://www.sonichq.org/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
+        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="/sonichq/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
           to Downloads</font></a></b></font></div>
       </td>
       <td bgcolor="#000099" height="28" width="200"> 
@@ -43,11 +43,11 @@
         <div align="center"width=134 height=208>
           <table border=0 cellspacing=0 cellpadding=0 width="100%">
             <tr>
-              <td width=19><img src="http://www.sonichq.org/topleft.gif" width=19></td>
+              <td width=19><img src="/sonichq/topleft.gif" width=19></td>
               <td bgcolor=black width=100%> 
                 <div align="right"><font face="Arial, Helvetica, sans-serif" size="4" color="#FFDC51"width=134 height=208><b>Cover Gallery #26-50</b></font></div>
               </td>
-              <td width=19><img src="http://www.sonichq.org/topright.gif" width=19></td>
+              <td width=19><img src="/sonichq/topright.gif" width=19></td>
             </tr></table></td></tr>
           </table>
 <TABLE ALIGN=CENTER BORDER=2 CELLSPACING=3 CELLPADDING=3 width=70% bgcolor=black>
@@ -72,28 +72,28 @@
 
 <TR>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic26.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic26.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic26.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic26.jpg" 
 alt="Sonic The Hedgehog #26"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic27.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic27.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic27.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic27.jpg" 
 alt="Sonic The Hedgehog #27"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic28.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic28.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic28.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic28.jpg" 
 alt="Sonic The Hedgehog #28"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic29.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic29.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic29.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic29.jpg" 
 alt="Sonic The Hedgehog #29"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic30.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic30.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic30.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic30.jpg" 
 alt="Sonic The Hedgehog #30"width=134 height=208></A>
 </TD>
 
@@ -117,28 +117,28 @@ alt="Sonic The Hedgehog #30"width=134 height=208></A>
 
 <TR>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic31.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic31.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic31.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic31.jpg" 
 alt="Sonic The Hedgehog #31"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic32.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic32.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic32.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic32.jpg" 
 alt="Sonic The Hedgehog #32"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic33.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic33.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic33.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic33.jpg" 
 alt="Sonic The Hedgehog #33"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic34.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic34.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic34.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic34.jpg" 
 alt="Sonic The Hedgehog #34"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic35.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic35.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic35.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic35.jpg" 
 alt="Sonic The Hedgehog #35"width=134 height=208></A>
 </TD>
 
@@ -162,28 +162,28 @@ alt="Sonic The Hedgehog #35"width=134 height=208></A>
 
 <TR>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic36.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic36.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic36.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic36.jpg" 
 alt="Sonic The Hedgehog #36"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic37.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic37.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic37.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic37.jpg" 
 alt="Sonic The Hedgehog #37"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic38.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic38.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic38.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic38.jpg" 
 alt="Sonic The Hedgehog #38"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic39.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic39.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic39.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic39.jpg" 
 alt="Sonic The Hedgehog #39"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic40.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic40.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic40.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic40.jpg" 
 alt="Sonic The Hedgehog #40"width=134 height=208></A>
 </TD>
 
@@ -207,28 +207,28 @@ alt="Sonic The Hedgehog #40"width=134 height=208></A>
 
 <TR>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic41.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic41.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic41.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic41.jpg" 
 alt="Sonic The Hedgehog #41"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic42.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic42.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic42.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic42.jpg" 
 alt="Sonic The Hedgehog #42"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic43.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic43.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic43.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic43.jpg" 
 alt="Sonic The Hedgehog #43"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic44.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic44.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic44.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic44.jpg" 
 alt="Sonic The Hedgehog #44"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic45.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic45.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic45.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic45.jpg" 
 alt="Sonic The Hedgehog #45"width=134 height=208></A>
 </TD>
 
@@ -253,28 +253,28 @@ alt="Sonic The Hedgehog #45"width=134 height=208></A>
 
 <TR>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic46.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic46.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic46.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic46.jpg" 
 alt="Sonic The Hedgehog #46"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic47.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic47.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic47.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic47.jpg" 
 alt="Sonic The Hedgehog #47"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic48.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic48.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic48.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic48.jpg" 
 alt="Sonic The Hedgehog #48"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic49.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic49.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic49.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic49.jpg" 
 alt="Sonic The Hedgehog #49"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/sonic/large/sonic50.jpg"width=134 height=208>
-<IMG SRC="http://www.sonichq.org/comics/images/covers/sonic/thumbnails/sonic50.jpg" 
+<A HREF="/sonichq/comics/images/covers/sonic/large/sonic50.jpg"width=134 height=208>
+<IMG SRC="/sonichq/comics/images/covers/sonic/thumbnails/sonic50.jpg" 
 alt="Sonic The Hedgehog #50"width=134 height=208></A>
 </TD>
 
