--- a/sonichq/comics/scans/specials.html
+++ b/sonichq/comics/scans/specials.html
@@ -4,7 +4,7 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="black" background="http://www.sonichq.org/images/backgrounds/sasonicbg.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
+<body bgcolor="black" background="/sonichq/images/backgrounds/sasonicbg.gif" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffffcc" ALINK="#ffffcc" bgproperties=fixed>
 
 </text>
 <fontcolor="#e5e5e5">
@@ -21,7 +21,7 @@
           to Comics Scans</font></a></b></font></div>
       </td>
 <td bgcolor="#003333" height="28" width="200"> 
-        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="http://www.sonichq.org/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
+        <div align="center"><font face="Arial, Helvetica, sans-serif"><b><a href="/sonichq/images/gallery.html"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Back 
           to Downloads</font></a></b></font></div>
       </td>
       <td bgcolor="#003333" height="28" width="200"> 
@@ -39,11 +39,11 @@
         <div align="center">
           <table border=0 cellspacing=0 cellpadding=0 width="100%">
             <tr>
-              <td width=19><img src="http://www.sonichq.org/topleft.gif" width=19></td>
+              <td width=19><img src="/sonichq/topleft.gif" width=19></td>
               <td bgcolor=black width=100%> 
                 <div align="right"><font face="Arial, Helvetica, sans-serif" size="4" color="#99cccc"><b>Cover Gallery #1-15</b></font></div>
               </td>
-              <td width=19><img src="http://www.sonichq.org/topright.gif" width=19></td>
+              <td width=19><img src="/sonichq/topright.gif" width=19></td>
             </tr></table></td></tr>
           </table>
 <TABLE ALIGN=CENTER BORDER=2 CELLSPACING=3 CELLPADDING=3 width=70% bgcolor=black>
@@ -68,28 +68,28 @@
 
 <TR>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/bif.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/bif.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/bif.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/bif.jpg" 
 alt="Sonic The Hedgehog: In Your Face Special"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/sak.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/sak.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/sak.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sak.jpg" 
 alt="Sonic And Knuckles"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/stt.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/stt.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/stt.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/stt.jpg" 
 alt="Sonic The Hedgehog: Triple Trouble"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/chx.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/chx.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/chx.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/chx.jpg" 
 alt="Knuckles' Chaotix"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/svk.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/svk.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/svk.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/svk.jpg" 
 alt="Super Sonic VS Hyper Knuckles"width=134 height=208></A>
 </TD>
 </TR>
@@ -114,28 +114,28 @@ alt="Super Sonic VS Hyper Knuckles"width=134 height=208></A>
 
 <TR>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/smm.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/smm.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/smm.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/smm.jpg" 
 alt="Sonic The Hedgehog: Mecha Madness"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/sls.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/sls.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/sls.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sls.jpg" 
 alt="Sonic Live!!!"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/sob.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/sob.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/sob.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sob.jpg" 
 alt="Sonic 3D Blast"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/sss1.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/sss1.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/sss1.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sss1.jpg" 
 alt="Sonic VS Knuckles: Battle Royal"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/sss2.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/sss2.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/sss2.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sss2.jpg" 
 alt="Sonic The Hedgehog: Brave New World"width=134 height=208></A>
 </TD>
 
@@ -159,28 +159,28 @@ alt="Sonic The Hedgehog: Brave New World"width=134 height=208></A>
 
 <TR>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/trade2.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/trade1.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/trade2.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/trade1.jpg" 
 alt="Sonic The Hedgehog Firsts"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/sss3.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/sss3.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/sss3.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sss3.jpg" 
 alt="Sonic The Hedgehog Firsts"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/sss4.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/sss4.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/sss4.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sss4.jpg" 
 alt="Sonic The Hedgehog: Return Of The King"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/sss5.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/sss5.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/sss5.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sss5.jpg" 
 alt="Sonic Kids"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/sss6.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/sss6.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/sss6.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sss6.jpg" 
 alt="Sonic #50 - End Game: The Directors Cut"width=134 height=208></A>
 </TD>
 </TR>
@@ -205,28 +205,28 @@ alt="Sonic #50 - End Game: The Directors Cut"width=134 height=208></A>
 
 <TR>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/sss7.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/sss7.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/sss7.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sss7.jpg" 
 alt="The Parallel Paradigm"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/sss8.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/sss8.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/sss8.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sss8.jpg" 
 alt="Pretty Soldier Sally Moon"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/sss9.hpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/sss9.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/sss9.hpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sss9.jpg" 
 alt="Sonic Kids - Take Two"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/sss10.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/sss10.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/sss10.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sss10.jpg" 
 alt="Crossover Chaos: Sonic Underground And Sabrina the Teenage Witch"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/sss11.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/sss11.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/sss11.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sss11.jpg" 
 alt="The Female Furries: Girls Rule!"width=134 height=208></A>
 </TD>
 </TR>
@@ -250,23 +250,23 @@ alt="The Female Furries: Girls Rule!"width=134 height=208></A>
 
 <TR>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/sss12.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/sss12.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/sss12.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sss12.jpg" 
 alt="Zone Wars: Giant Robotno"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/sss13.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/sss13.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/sss13.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sss13.jpg" 
 alt="The Sonic Adventure Adaption"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/sss14.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/sss14.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/sss14.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sss14.jpg" 
 alt="Knuckles: The Best Of Times, The Worst Of Times"width=134 height=208></A>
 </TD>
 <TD>
-<A HREF="http://www.sonichq.org/comics/images/covers/specials/large/sss15.jpg">
-<IMG SRC="http://www.sonichq.org/comics/images/covers/specials/thumbnails/sss15.jpg" 
+<A HREF="/sonichq/comics/images/covers/specials/large/sss15.jpg">
+<IMG SRC="/sonichq/comics/images/covers/specials/thumbnails/sss15.jpg" 
 alt="Sonic: The Return Of Ixis Naugus"width=134 height=208></A>
 </TD>
 </TR>
