--- a/sonichq/comics/whoswho/index.html
+++ b/sonichq/comics/whoswho/index.html
@@ -4,11 +4,11 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<BODY BGCOLOR="#000000" background="http://www.sonichq.org/comics/whoswho/SonicKnuxLogo.jpg" TEXT="#000000" LINK="#003333" VLINK="#C0C0C0" bgproperties=fixed>
+<BODY BGCOLOR="#000000" background="/sonichq/comics/whoswho/SonicKnuxLogo.jpg" TEXT="#000000" LINK="#003333" VLINK="#C0C0C0" bgproperties=fixed>
 
 <table border="0" cellspacing="0" cellpadding="8"><tr><td>
 
-<center><IMG SRC="http://members.spree.com/funNgames/asudem/miscellaneous/SonicKnuxLogo.gif"></center>
+<center><IMG SRC="https://web.archive.org/20011101000000/https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/miscellaneous/SonicKnuxLogo.gif"></center>
 
 <p align><font face="Arial" font size=2><font color="#FFCC00"><b>Who's who in the Sonic And Knuckles Universe? What are some of the strategic
 locations on Mobius? Can't find your way between a Freedom Fighter and a Chaotix
@@ -23,7 +23,7 @@ comic book series! Located here you can find the Who's Who and Whats's What, as 
 </center>
 <p>
 <center>
-<embed src="http://www.geocities.com/EnchantedForest/Tower/4309/Metal1_2.mid" autostart="true" loop="true" controls=smallconsole width=50 height=30><br>Metal Man Remix<p>
+<embed src="/sonichq/geocities/EnchantedForest/Tower/4309/Metal1_2.mid" autostart="true" loop="true" controls=smallconsole width=50 height=30><br>Metal Man Remix<p>
 </font></center>
 <br>
 
@@ -34,7 +34,7 @@ comic book series! Located here you can find the Who's Who and Whats's What, as 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=0 bordercolorlight=bf9a61 bordercolordark=bf9a61>
 <TR ALIGN=CENTER><TD>
 <center>
-<IMG SRC="http://www.sonichq.org/comics/images/whoswho.jpg" alt="The Comics Containment Zone: Who's Who In The Sonic Universe?">
+<IMG SRC="/sonichq/comics/images/whoswho.jpg" alt="The Comics Containment Zone: Who's Who In The Sonic Universe?">
 
 </TD></TR></TABLE>
 </p>
@@ -50,16 +50,16 @@ comic book series! Located here you can find the Who's Who and Whats's What, as 
 <table border="0" width="100%" >
   <tr>
     <td align="right" bgcolor="#bf9a61"> <font face="Lucida Console" color="#ffffff"><span
-    style="font-family: arial"><strong><center><img src="http://members.tripod.com/~warpsonic/ring.gif"> The Sonic And Knuckles Profiles<img src="http://members.tripod.com/~warpsonic/ring.gif"> <center></strong></span></font></td>
+    style="font-family: arial"><strong><center><img src="/sonichq/tripod/warpsonic/ring.gif"> The Sonic And Knuckles Profiles<img src="/sonichq/tripod/warpsonic/ring.gif"> <center></strong></span></font></td>
   </tr>
 </table>
 
-<center><p><IMG SRC="http://www.geocities.com/EnchantedForest/Glade/8862/thegang.gif" alt="Who's Who? - The Freedom Fighters: Sonic, Tails, Antione, Bunnie, Sally, Rotor"></p>
+<center><p><IMG SRC="https://web.archive.org/20011101000000/http://www.geocities.com/EnchantedForest/Glade/8862/thegang.gif" alt="Who's Who? - The Freedom Fighters: Sonic, Tails, Antione, Bunnie, Sally, Rotor"></p>
 
 </b><p>
 <font face="Arial"font size=2><font color="#e3b774">Every comic book needs its supporting cast - and the comics are no exception from the games! To understand the Sonic comics you must first be familiar with its main characters. For Sonic, we have The Knothole Freedom Fighters! Originally concieved in the Saturday Morning cartoon, the FF's are led by Princess Sally Acorn with thier greatest champions being Sonic The Hedgehog and Miles "Tails" Prower. To round out the cast we get Rotor The Walrus - the technological genius, Bunnie Rabbot - the strength of the group, Antoine D'Coolette - the klutz and but very well-meaning character with issues of his own, and Amy Rose - the little heroine in training. But before you dismiss the FF's off as nothing more than back characters, its important to know that they are MUCH more than that. They are portrayed as a family. When one suffers - all suffer. When Tails was abandoned, Sonic took him in, when Sally lost her family to Robotnik and Naugus, the FF's helped to get them back, while Bunnie coped with the fact that she may be stuck half-roboticised for life, she also came to develop a love for Antoine over the years. All have had to deal with the crushing blow of being children in a war, dealing with the repercussions of it, and dealing with their primary villians - Doctor Robotnik and his nephew Snively, who each have a couple of hidden agendas of their own... To call the Sonic comic book your "typical funny animal book" is off by a longshot indeed. Especially since its delved into issues such as grossly overprotective parents, death, and racism.</p></center>
 
-<center><IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/chaotix3.jpg" alt="Who's Who? - The Chaotix: Vector, Julie, Espio, Mighty, Charmy"></center>
+<center><IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/chaotix3.jpg" alt="Who's Who? - The Chaotix: Vector, Julie, Espio, Mighty, Charmy"></center>
 
 <center><p>Next we come to the Knuckles family - basically The Chaotix! Originally established in <i>Knuckles Chaotix</i>, Mighty, Espio, Vector, and Charmy were originally created to be the deputy guardians of the Floating Island when Knuckles was away on on missions that required him to leave for the surface of Mobius. Consisting of Knuckles The Echidna - Guardian of The Floating Isle, Vector The Crocodile - The loudmouth carefree croc with a Sonic Boom walkman, Mighty the Armadillo - The strong man of the group blessed with super strength and with a past that is linked back to Sonic, Espio the Chameleon - the observational and quiet type (yet very outspoken), and the smallest of the bunch, Charmy The Bee - The crown prince of the Bee Realm who ran away from his family and his problems to live a more carefree life on the Floating Island. Later to come into the picture were Ray The Flying Squirrel (<i>Sonic Arcade</i>) who also had a past with Sonic and Mighty, and the only female member of the group - Julie-Su, whose past is deeply entrenched in the heart of Knuckles' greatest group of villians - The Dark Legion: Led by Knuckles' distant cousin Kragok and his Great Uncle Enerjak - who played a vital part in the history of raising the Floating Isle. Whereas Sonic deals with family, friendships, and consequences, Knux goes further and deals with family, the past, and social issues: such topics being divorce and even The Holocaust...</p>
 </p></center>
@@ -68,7 +68,7 @@ comic book series! Located here you can find the Who's Who and Whats's What, as 
 <td width=35%>
 <center><h3><font color="#bf9a61" font face=arial>The Complete Guardians List !</font></h3></center>
 <hr color=bf9a61>
-<center><IMG SRC="http://www.sonichq.org/comics/images/buttonsb.jpg">
+<center><IMG SRC="/sonichq/comics/images/buttonsb.jpg">
 
 <center><font face="Arial"font size=2 font color=e3b774><p>Many many MANY times we've gotten requests to post up a complete list of guardians all the way up to Knuckles, seeing as how the Knuckles title sometimes relies on the history of the Guardian lineage. Well we decided to do that - AND MORE! Listed below is the FULL LISTING of Guardians all the way up to the guardian in the "Knuckles: 20 Years Later" special due to come out in 2000. 
 This list also includes the respective guardians death if known. A question mark is placed next to the death where it is debateable. Listed below THAT is a listing of Dark Legion Grandmasters, and BELOW THAT is the Lineage of Acorn! Hope this helps you people that have asked! Look for this to be transferred to the Q&A FAQ File soon. ^___^<br>
@@ -122,7 +122,7 @@ Sonic (STH:IYF)<br>
 <font face="Arial" font size=2 font color=e3b774>
 Just as it says! Click here to view the actual Map Of Mobius! ^__^</font></p>
 <br>
-<center><A HREF="http://www.sonichq.org/comics/images/mobomap.jpg" target=Mobius Map><IMG SRC="http://www.sonichq.org/comics/images/buttonmp.jpg">
+<center><A HREF="/sonichq/comics/images/mobomap.jpg" target=Mobius Map><IMG SRC="/sonichq/comics/images/buttonmp.jpg">
 </a>
 </td></tr></table>
 
@@ -131,7 +131,7 @@ Just as it says! Click here to view the actual Map Of Mobius! ^__^</font></p>
 <table border="0" width="100%">
   <tr>
     <td align="right" bgcolor="#bf9a61"> <font face="Lucida Console" color="#ffffff"><span
-    style="font-family: arial"><strong><center><img src="http://members.tripod.com/~warpsonic/ring.gif"> The Main Menu<img src="http://members.tripod.com/~warpsonic/ring.gif"> <center></strong></span></font></td>
+    style="font-family: arial"><strong><center><img src="/sonichq/tripod/warpsonic/ring.gif"> The Main Menu<img src="/sonichq/tripod/warpsonic/ring.gif"> <center></strong></span></font></td>
   </tr>
 </table><p></p>
 
@@ -141,19 +141,19 @@ Just as it says! Click here to view the actual Map Of Mobius! ^__^</font></p>
 <center><font color="#FFFFFF">
 <p>The Great Forest - Sonic Profiles</p></center>
 
-<CENTER><b> <a href="http://www.sonichq.org/comics/whoswho/greatforest.html"> <img src="http://www.geocities.com/EnchantedForest/Tower/4309/sonic.jpg" alt="Sonic Profiles"></CENTER></a>
+<CENTER><b> <a href="/sonichq/comics/whoswho/greatforest.html"> <img src="/sonichq/geocities/EnchantedForest/Tower/4309/sonic.jpg" alt="Sonic Profiles"></CENTER></a>
 </TD>
 <TD>
 <center><font color="#FFFFFF">
 <p>The Floating Island - Knuckles Profiles</p></center>
 
-<CENTER><b><a href="http://www.sonichq.org/comics/whoswho/floatingisland.html"><img src="http://www.geocities.com/EnchantedForest/Tower/4309/knuckles.jpg" alt="Knuckles Profiles"></CENTER></a>
+<CENTER><b><a href="/sonichq/comics/whoswho/floatingisland.html"><img src="/sonichq/geocities/EnchantedForest/Tower/4309/knuckles.jpg" alt="Knuckles Profiles"></CENTER></a>
 </TD>
 <TD>
 <center><font color="#FFFFFF">
 <p>The Freedom Forum - Miscellaneous Profiles</p></center>
 
-<CENTER><b><a href="http://www.sonichq.org/comics/whoswho/freedomforum.html"><img src="http://www.geocities.com/EnchantedForest/Tower/4309/monkeykhan.jpg" alt="Miscellaneous Profiles"></CENTER></a>
+<CENTER><b><a href="/sonichq/comics/whoswho/freedomforum.html"><img src="/sonichq/geocities/EnchantedForest/Tower/4309/monkeykhan.jpg" alt="Miscellaneous Profiles"></CENTER></a>
 </TD>
 
 </TR>
@@ -163,19 +163,19 @@ Just as it says! Click here to view the actual Map Of Mobius! ^__^</font></p>
 <center><font color="#FFFFFF">
 <p>The Rogues Gallery A  - Sonic Villain Profiles</p></center>
 
-<CENTER><b><a href="http://www.sonichq.org/comics/whoswho/roguesgallerya.html"><img src="http://www.geocities.com/EnchantedForest/Tower/4309/botnik.jpg" alt="Sonic Villains"></CENTER></a>
+<CENTER><b><a href="/sonichq/comics/whoswho/roguesgallerya.html"><img src="/sonichq/geocities/EnchantedForest/Tower/4309/botnik.jpg" alt="Sonic Villains"></CENTER></a>
 </TD>
 <TD>
 <center><font color="#FFFFFF">
 <p>The Rogues Gallery B - Knuckles Villain Profiles</p></center>
 
-<CENTER><b><a href="http://www.sonichq.org/comics/whoswho/roguesgalleryb.html"><img src="http://www.geocities.com/EnchantedForest/Tower/4309/enerdoom.jpg" alt="Knuckles Villains"></CENTER></a>
+<CENTER><b><a href="/sonichq/comics/whoswho/roguesgalleryb.html"><img src="/sonichq/geocities/EnchantedForest/Tower/4309/enerdoom.jpg" alt="Knuckles Villains"></CENTER></a>
 </TD>
 <TD>
 <center><font color="#FFFFFF">
 <p>Return To The Main HQ Comics Page</p></center>
 
-<CENTER><b><a href="http://www.sonichq.org/comics/comicpro.html"><img src="http://www.sonichq.org/comics/images/antisonic.jpg" alt="Return To The Comics Section"></CENTER></a>
+<CENTER><b><a href="/sonichq/comics/comicpro.html"><img src="/sonichq/comics/images/antisonic.jpg" alt="Return To The Comics Section"></CENTER></a>
 </TD>
 </TR>
 
